Import translations. DO NOT MERGE ANYWHERE
Auto-generated-cl: translation import
Change-Id: I9205a5ec80240c5ca11946c6e03b4b0e11769c83

--- a/res/values-af/strings.xml
+++ b/res/values-af/strings.xml
@@ -1744,7 +1744,7 @@
     <string name="controls_label" msgid="8671492254263626383">"Kontroles"</string>
     <string name="force_stop" msgid="2681771622136916280">"Verplig stop"</string>
     <string name="archive" msgid="9074663845068632127">"Argiveer"</string>
-    <string name="restore" msgid="7622486640713967157">"Stel terug"</string>
+    <string name="restore" msgid="7622486640713967157">"Laai terug"</string>
     <string name="restoring_step_one" msgid="3465050101254272874">"Stel tans terug"</string>
     <string name="restoring_step_two" msgid="140484846432595108">"Stel tans terug."</string>
     <string name="restoring_step_three" msgid="3712883580876329811">"Stel tans terug …"</string>
