--- a/res/values-bg/strings.xml
+++ b/res/values-bg/strings.xml
@@ -1663,7 +1663,7 @@
     <string name="lockpassword_confirm_your_pattern_header_frp" msgid="5641858015891896427">"Потвърждаване на фигурата"</string>
     <string name="lockpassword_confirm_your_pin_header_frp" msgid="8285647793164729982">"Потвърждаване на ПИН кода"</string>
     <string name="lockpassword_confirm_your_password_header_frp" msgid="7932240547542564033">"Потвърждаване на паролата"</string>
-    <string name="lockpassword_remote_validation_header" msgid="4992647285784962073">"Потвърждаване"</string>
+    <string name="lockpassword_remote_validation_header" msgid="4992647285784962073">"Потвърдете, че сте вие"</string>
     <string name="lockpassword_remote_validation_pattern_details" msgid="4655537780358707983">"Въведете фигурата на другото си устройство, за да прехвърлите профили в Google, настройки и др. Тя ще се шифрова."</string>
     <string name="lockpassword_remote_validation_pin_details" msgid="2373654227583206297">"Въведете ПИН кода от другото си устройство, за да прехвърлите профили в Google, настройки и др. Той ще се шифрова."</string>
     <string name="lockpassword_remote_validation_password_details" msgid="3482328925925888340">"Въведете паролата на другото си устройство, за да прехвърлите профили в Google, настройки и др. Тя ще се шифрова."</string>
@@ -5250,8 +5250,8 @@
     <string name="sim_category_converted_sim" msgid="8575548015816988908">"Преобразувано в ел. SIM карта. Премахв. и отхвърл."</string>
     <string name="sync_across_devices_title" msgid="3447757705383089345">"Синхронизиране между устройствата"</string>
     <string name="device_diagnostics_title" msgid="2914523189695727897">"Диагностика на устройството"</string>
-    <string name="audio_sharing_title" msgid="4144157137502923821">"Споделяне на аудио"</string>
-    <string name="audio_sharing_switch_title" msgid="7052827328670825701">"Споделяне на аудио"</string>
+    <string name="audio_sharing_title" msgid="4144157137502923821">"Споделяне на звука"</string>
+    <string name="audio_sharing_switch_title" msgid="7052827328670825701">"Споделяне на звука"</string>
     <string name="calls_and_alarms_device_title" msgid="6993559028175454198">"Обаждания и будилници"</string>
     <string name="audio_sharing_description" msgid="1660255584523640628">"Позволете на хората да слушат мултимедията ви заедно с вас. Ще им трябват слушалки, които поддържат LE Audio."</string>
     <string name="audio_sharing_device_group_title" msgid="3019780581643956943">"Активни устройства за мултимедия"</string>
@@ -5285,8 +5285,8 @@
     <string name="audio_sharing_sharing_label" msgid="1038021053061111508">"Звукът се споделя"</string>
     <string name="audio_sharing_pair_button_label" msgid="7987236990273083588">"Сдвояване на ново устройство"</string>
     <string name="audio_sharing_qrcode_button_label" msgid="3207039106555097659">"Показване на QR кода"</string>
-    <string name="audio_sharing_notification_title" msgid="1204798942946033005">"Споделяте аудио"</string>
-    <string name="audio_sharing_notification_content" msgid="1577180829878785642">"Хората, които слушат споделения звук, могат да чуват мултимедията ви, но няма да чуват обажданията."</string>
+    <string name="audio_sharing_notification_title" msgid="1204798942946033005">"Споделяте звук"</string>
+    <string name="audio_sharing_notification_content" msgid="1577180829878785642">"Хората, които слушат, могат да чуват мултимедията ви, но не и обажданията."</string>
     <string name="audio_sharing_stop_button_label" msgid="8770519671470608849">"Спиране на споделянето"</string>
     <string name="audio_sharing_settings_button_label" msgid="8574808650318270491">"Настройки"</string>
     <string name="audio_sharing_disconnect_dialog_title" msgid="2192751727237748602">"Изберете устройство, чиято връзка да прекратите"</string>
@@ -5299,7 +5299,7 @@
     <string name="audio_sharing_connect_button_label" msgid="4241911519063029982">"Свързване"</string>
     <string name="audio_sharing_sharing_stopped_label" msgid="8128194452354240996">"Споделянето на звука спря"</string>
     <string name="audio_sharing_confirm_dialog_title" msgid="7655147122624691167">"Свързване на съвместимо устройство"</string>
-    <string name="audio_sharing_comfirm_dialog_content" msgid="3479217934447446066">"За да започнете да споделяте аудио, първо свържете телефона си със слушалки, които поддържат LE Audio"</string>
+    <string name="audio_sharing_comfirm_dialog_content" msgid="3479217934447446066">"За да започнете да споделяте звука, първо свържете телефона си със слушалки, които поддържат LE Audio"</string>
     <string name="audio_streams_category_title" msgid="4878022761829895463">"Свързване с аудиопоток от LE"</string>
     <string name="audio_streams_pref_title" msgid="6320485086288646209">"Аудиопотоци в близост"</string>
     <string name="audio_streams_title" msgid="6617990880383079165">"Аудиопотоци"</string>
@@ -5325,7 +5325,7 @@
     <string name="audio_streams_no_password_summary" msgid="8976357323034830144">"Няма парола"</string>
     <string name="audio_streams_dialog_learn_more" msgid="6711241053442211345">"Научете повече"</string>
     <string name="audio_streams_dialog_cannot_play" msgid="1358828316927479091">"Този аудиопоток не може да се възпроизвежда на <xliff:g id="DEVICE_NAME">%1$s</xliff:g>."</string>
-    <string name="audio_streams_listening_now" msgid="4205614429222949176">"Сега слушате"</string>
+    <string name="audio_streams_listening_now" msgid="4205614429222949176">"Слушате сега"</string>
     <string name="audio_streams_media_service_notification_leave_broadcast_text" msgid="4938656134300913647">"Спиране на слушането"</string>
     <string name="audio_streams_dialog_no_le_device_title" msgid="3931163990976742282">"Свързване на съвместими слушалки"</string>
     <string name="audio_streams_dialog_no_le_device_button" msgid="4484355549428642588">"Свързване на устройство"</string>
