--- a/res/values-cs/strings.xml
+++ b/res/values-cs/strings.xml
@@ -907,7 +907,7 @@
     <string name="wifi_scan_notify_text_scanning_off" msgid="7439201783168213149">"Pokud chcete zpřesnit určování polohy, zapněte vyhledávání Wi-Fi v <xliff:g id="LINK_BEGIN_0">LINK_BEGIN</xliff:g>nastavení vyhledávání Wi-Fi<xliff:g id="LINK_END_1">LINK_END</xliff:g>."</string>
     <string name="wifi_cellular_data_fallback_title" msgid="2844653839490977040">"Automaticky přepínat na mobilní data"</string>
     <string name="wifi_cellular_data_fallback_summary" msgid="7039944853033554386">"Když Wi-Fi nebude mít přístup k internetu, použije se mobilní datové připojení. Za využití dat mohou být účtovány poplatky."</string>
-    <string name="wifi_add_network" msgid="4178564862173751181">"Přidat síť"</string>
+    <string name="wifi_add_network" msgid="4178564862173751181">"Přidejte síť"</string>
     <string name="wifi_configure_settings_preference_title" msgid="2536725796700696566">"Předvolby Wi-Fi"</string>
     <string name="wifi_configure_settings_preference_summary_wakeup_on" msgid="7822368955551467382">"Wi‑Fi se automaticky znovu zapne"</string>
     <string name="wifi_configure_settings_preference_summary_wakeup_off" msgid="5710203586018223864">"Wi‑Fi se automaticky znovu nezapne"</string>
@@ -969,7 +969,7 @@
     <string name="wifi_privacy_settings_ephemeral_summary" msgid="8502084692297249372">"Náhodná adresa MAC"</string>
     <string name="wifi_dpp_add_device_to_network" msgid="6141246783457722976">"Přidání zařízení"</string>
     <string name="wifi_dpp_center_qr_code" msgid="5270782275746178104">"Chcete-li zařízení přidat do sítě <xliff:g id="SSID">%1$s</xliff:g>, níže vycentrujte QR kód"</string>
-    <string name="wifi_dpp_scan_qr_code" msgid="3543923817779444434">"Naskenovat QR kód"</string>
+    <string name="wifi_dpp_scan_qr_code" msgid="3543923817779444434">"Naskenujte QR kód"</string>
     <string name="wifi_dpp_scan_qr_code_join_network" msgid="969985020363459133">"Chcete-li se připojit k síti <xliff:g id="SSID">%1$s</xliff:g>, níže vycentrujte QR kód"</string>
     <string name="wifi_dpp_scan_qr_code_join_unknown_network" msgid="3180020429793614145">"Naskenováním QR kódu se připojíte k síti Wi-Fi"</string>
     <string name="wifi_dpp_share_wifi" msgid="2431744447544057866">"Sdílení sítě Wi-Fi"</string>
@@ -5190,7 +5190,7 @@
     <string name="flash_notifications_title" msgid="4490438861180492311">"Světelná oznámení"</string>
     <string name="flash_notifications_about_title" msgid="9004351252928121214">"Informace o světelných oznámeních"</string>
     <string name="flash_notifications_summary_off" msgid="6056282996770691461">"Vypnuto"</string>
-    <string name="flash_notifications_summary_on_camera" msgid="3286405833586333730">"Zapnuto / blikání fotoaparátu"</string>
+    <string name="flash_notifications_summary_on_camera" msgid="3286405833586333730">"Zapnuto / blikání blesku fotoaparátu"</string>
     <string name="flash_notifications_summary_on_screen" msgid="9040640799633336219">"Zapnuto / blikání obrazovky"</string>
     <string name="flash_notifications_summary_on_camera_and_screen" msgid="2326268141063768701">"Zapnuto / blikání fotoaparátu a obrazovky"</string>
     <string name="flash_notifications_intro" msgid="8409873413480928249">"Když dostanete oznámení nebo zazní budík, obrazovka nebo světlo fotoaparátu zablikají"</string>
@@ -5198,7 +5198,7 @@
     <string name="flash_notifications_note" msgid="2426125248448055075">"Pokud jste citliví na světlo, používejte světelná oznámení opatrně."</string>
     <string name="flash_notifications_keywords" msgid="2458759275318514836">"blikání, světlo, nedoslýchavost, ztráta sluchu"</string>
     <string name="flash_notifications_preview" msgid="5320176885050440874">"Náhled"</string>
-    <string name="camera_flash_notification_title" msgid="2475084876382922732">"Blikání fotoaparátu"</string>
+    <string name="camera_flash_notification_title" msgid="2475084876382922732">"Blesk fotoaparátu"</string>
     <string name="screen_flash_notification_title" msgid="3773100725793316708">"Blikání obrazovky"</string>
     <string name="screen_flash_notification_color_title" msgid="7213407653340970790">"Barva blikání obrazovky"</string>
     <string name="screen_flash_color_blue" msgid="3585766657607931371">"Modrá"</string>
@@ -5274,11 +5274,11 @@
     <string name="audio_sharing_media_device_group_title" msgid="4850674234590549565">"Další mediální zařízení"</string>
     <string name="audio_sharing_summary_on" msgid="611197542982323788">"Zapnuto"</string>
     <string name="audio_sharing_summary_off" msgid="8833198995257547378">"Vypnuto"</string>
-    <string name="audio_sharing_share_dialog_title" msgid="427514648577553621">"Sdílet zvuk"</string>
+    <string name="audio_sharing_share_dialog_title" msgid="427514648577553621">"Sdílejte zvuk"</string>
     <string name="audio_sharing_share_dialog_subtitle" msgid="5208582843732057871">"<xliff:g id="DEVICE_NAME1">%1$s</xliff:g> a <xliff:g id="DEVICE_NAME2">%2$s</xliff:g>"</string>
     <string name="audio_sharing_share_button_label" msgid="3895900668317105537">"Sdílet zvuk"</string>
     <string name="audio_sharing_no_thanks_button_label" msgid="5822491984114744357">"Ne, díky"</string>
-    <string name="audio_sharing_share_with_dialog_title" msgid="3934377530640830364">"Sdílet zvuk se zařízením <xliff:g id="DEVICE_NAME">%1$s</xliff:g>?"</string>
+    <string name="audio_sharing_share_with_dialog_title" msgid="3934377530640830364">"Chcete sdílet zvuk se zařízením <xliff:g id="DEVICE_NAME">%1$s</xliff:g>?"</string>
     <string name="audio_sharing_share_with_more_dialog_title" msgid="2840069088858232267">"Sdílejte zvuk s dalším zařízením"</string>
     <string name="audio_sharing_share_with_button_label" msgid="4146194430380237357">"Sdílet se zařízením <xliff:g id="DEVICE_NAME">%1$s</xliff:g>"</string>
     <string name="audio_sharing_close_button_label" msgid="2666534149100498574">"Zavřít"</string>
