--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -2984,7 +2984,7 @@
     <string name="user_summary_restricted_not_set_up" msgid="1658946988920104613">"Eingeschränktes Profil nicht eingerichtet"</string>
     <string name="user_summary_managed_profile_not_set_up" msgid="5739207307082458746">"Nicht eingerichtet – Arbeitsprofil"</string>
     <string name="user_owner" msgid="2079206733011361994">"Eigentümer"</string>
-    <string name="user_admin" msgid="4024553191395768119">"Administrator"</string>
+    <string name="user_admin" msgid="4024553191395768119">"Admin"</string>
     <string name="user_you" msgid="3070562015202859996">"Ich (<xliff:g id="NAME">%s</xliff:g>)"</string>
     <string name="user_add_max_count" msgid="3328539978480663740">"Du kannst keine weiteren Nutzer hinzufügen. Entferne dazu zuerst einen bisherigen Nutzer."</string>
     <string name="user_cannot_add_accounts_message" msgid="2351326078338805337">"In eingeschränkten Profilen können keine Konten hinzugefügt werden."</string>
@@ -5285,11 +5285,11 @@
     <string name="audio_sharing_sharing_label" msgid="1038021053061111508">"Audioinhalte werden freigegeben"</string>
     <string name="audio_sharing_pair_button_label" msgid="7987236990273083588">"Neues Gerät koppeln"</string>
     <string name="audio_sharing_qrcode_button_label" msgid="3207039106555097659">"QR-Code anzeigen"</string>
-    <string name="audio_sharing_notification_title" msgid="1204798942946033005">"Du gibst Audioinhalte frei"</string>
+    <string name="audio_sharing_notification_title" msgid="1204798942946033005">"Du hast Audioinhalte freigegeben"</string>
     <string name="audio_sharing_notification_content" msgid="1577180829878785642">"Zuhörer können sich deine Medien anhören. Sie können allerdings keine Telefongespräche mithören."</string>
     <string name="audio_sharing_stop_button_label" msgid="8770519671470608849">"Freigabe beenden"</string>
     <string name="audio_sharing_settings_button_label" msgid="8574808650318270491">"Einstellungen"</string>
-    <string name="audio_sharing_disconnect_dialog_title" msgid="2192751727237748602">"Gerät auswählen, zu dem die Verbindung getrennt werden soll"</string>
+    <string name="audio_sharing_disconnect_dialog_title" msgid="2192751727237748602">"Zu trennendes Gerät auswählen"</string>
     <string name="audio_sharing_dialog_disconnect_content" msgid="3840488888970653308">"Die Audiofreigabe kann nur von 2 Geräten gleichzeitig genutzt werden"</string>
     <string name="audio_sharing_disconnect_device_button_label" msgid="4272897217708930576">"<xliff:g id="DEVICE_NAME">%1$s</xliff:g> trennen"</string>
     <string name="audio_sharing_stop_dialog_title" msgid="4872853738164232075">"Mit <xliff:g id="DEVICE_NAME">%1$s</xliff:g> verbinden?"</string>
@@ -5318,7 +5318,7 @@
     <string name="audio_streams_dialog_listen" msgid="7290340191504987685">"Anhören"</string>
     <string name="audio_streams_dialog_retry" msgid="4456843891970998556">"Noch mal versuchen"</string>
     <string name="audio_streams_dialog_listen_to_audio_stream" msgid="8585253007762261528">"Audiostream anhören"</string>
-    <string name="audio_streams_dialog_control_volume" msgid="7615062686016713544">"Der Audiostream wird auf <xliff:g id="DEVICE_NAME">%1$s</xliff:g> abgespielt. Regle die Lautstärke auf diesem Gerät."</string>
+    <string name="audio_streams_dialog_control_volume" msgid="7615062686016713544">"Der Audiostream wird auf <xliff:g id="DEVICE_NAME">%1$s</xliff:g> abgespielt und du kannst die Lautstärke über dieses Gerät regeln."</string>
     <string name="audio_streams_dialog_cannot_listen" msgid="4432257183698209966">"Audiostream kann nicht angehört werden"</string>
     <string name="audio_streams_dialog_default_device" msgid="6159800303379303266">"verbundene kompatible Kopfhörer"</string>
     <string name="audio_streams_activity_title" msgid="6766869545769831935">"Audiostreams"</string>
@@ -5329,7 +5329,7 @@
     <string name="audio_streams_media_service_notification_leave_broadcast_text" msgid="4938656134300913647">"Zuhören beenden"</string>
     <string name="audio_streams_dialog_no_le_device_title" msgid="3931163990976742282">"Kompatible Kopfhörer verbinden"</string>
     <string name="audio_streams_dialog_no_le_device_button" msgid="4484355549428642588">"Gerät verbinden"</string>
-    <string name="audio_streams_detail_page_title" msgid="7884132061275273766">"Details des Audiostreams"</string>
+    <string name="audio_streams_detail_page_title" msgid="7884132061275273766">"Details zum Audiostream"</string>
     <string name="audio_streams_qr_code_page_title" msgid="9169570362469544641">"QR-Code des Audiostreams"</string>
     <string name="audio_streams_qr_code_page_password" msgid="7268475614131297060">"Passwort: <xliff:g id="PASSWORD">%1$s</xliff:g>"</string>
     <string name="audio_streams_qr_code_page_description" msgid="1317961663706630428">"Wenn andere Personen den Audiostream „<xliff:g id="STREAM_NAME">%1$s</xliff:g>“ anhören möchten, können sie kompatible Kopfhörer mit ihrem Android-Gerät verbinden. Sie können dann diesen QR-Code scannen."</string>
