--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -1668,7 +1668,7 @@
     <string name="lockpassword_remote_validation_pin_details" msgid="2373654227583206297">"Pour transférer les comptes Google, les paramètres et plus, saisissez le code de votre autre appareil. Votre code est chiffré."</string>
     <string name="lockpassword_remote_validation_password_details" msgid="3482328925925888340">"Pour transférer les comptes Google, les paramètres et plus, saisissez le mot de passe de votre autre appareil. Votre mot de passe est chiffré."</string>
     <string name="lockpassword_remote_validation_set_pattern_as_screenlock" msgid="7595104317648465901">"Utiliser aussi schéma pour déverrouiller appareil"</string>
-    <string name="lockpassword_remote_validation_set_pin_as_screenlock" msgid="509672303005547218">"Utiliser aussi le code pour déverrouiller"</string>
+    <string name="lockpassword_remote_validation_set_pin_as_screenlock" msgid="509672303005547218">"Utiliser aussi le code pour déverrouiller cet appareil"</string>
     <string name="lockpassword_remote_validation_set_password_as_screenlock" msgid="2066701840753591922">"Utiliser aussi mot de passe pour déverrouiller appareil"</string>
     <string name="lockpassword_confirm_repair_mode_pattern_header" msgid="6669435143987988314">"Valider le schéma"</string>
     <string name="lockpassword_confirm_repair_mode_pin_header" msgid="2585263648322879131">"Valider le code"</string>
@@ -4794,7 +4794,7 @@
     <string name="force_desktop_mode" msgid="1336913605091334238">"Forcer le mode ordinateur"</string>
     <string name="force_desktop_mode_summary" msgid="4587416867846930479">"Forcer le mode ordinateur expérimental sur les écrans secondaires"</string>
     <string name="enable_non_resizable_multi_window" msgid="6832903754625404477">"Activer les applis non redimensionnables en mode multifenêtre"</string>
-    <string name="enable_non_resizable_multi_window_summary" msgid="3275763753261901999">"Autoriser le mode multifenêtre pour les applis non redimensionnables"</string>
+    <string name="enable_non_resizable_multi_window_summary" msgid="3275763753261901999">"Autorise le mode multifenêtre pour les applis non redimensionnables"</string>
     <string name="hwui_force_dark_title" msgid="4256904905631994219">"Forcer l\'activation du thème sombre"</string>
     <string name="hwui_force_dark_summary" msgid="6515748781487952769">"Forcer la fonctionnalité Forcer un thème sombre à être toujours activée"</string>
     <string name="privacy_dashboard_title" msgid="6845403825611829558">"Confidentialité"</string>
@@ -5135,7 +5135,7 @@
     <string name="ingress_rate_limit_dialog_title" msgid="5359461052422633789">"Configurer la limitation du débit de téléchargement du réseau"</string>
     <string name="ingress_rate_limit_no_limit_entry" msgid="8741098826008012163">"Aucune limite"</string>
     <string name="disable_phantom_process_monitor_title" msgid="8348108346706188771">"Désactiver les limites pour les processus enfant"</string>
-    <string name="disable_phantom_process_monitor_summary" msgid="3044464635550256985">"Désactiver les limites d\'utilisation des ressources système pour les processus enfant des applis"</string>
+    <string name="disable_phantom_process_monitor_summary" msgid="3044464635550256985">"Désactive les limites d\'utilisation des ressources système pour les processus enfants des applis"</string>
     <string name="enable_notes_role_title" msgid="7662702013496114763">"Forcer l\'activation du rôle \"Notes\""</string>
     <string name="enable_notes_role_summary" msgid="5495721409392395089">"Active les intégrations de systèmes de prise de notes via le rôle \"Notes\". N\'a aucun effet si ce rôle est déjà activé. Un redémarrage est nécessaire."</string>
     <string name="bluetooth_broadcast_dialog_title" msgid="9172775308463135884">"Diffuser"</string>
@@ -5280,13 +5280,13 @@
     <string name="audio_sharing_share_with_more_dialog_title" msgid="2840069088858232267">"Partager l\'audio avec un autre appareil"</string>
     <string name="audio_sharing_share_with_button_label" msgid="4146194430380237357">"Partager avec <xliff:g id="DEVICE_NAME">%1$s</xliff:g>"</string>
     <string name="audio_sharing_close_button_label" msgid="2666534149100498574">"Fermer"</string>
-    <string name="audio_sharing_dialog_connect_device_content" msgid="2873230647152283734">"Connecter un autre casque compatible ou partager le nom et le mot de passe de votre flux avec l\'autre personne"</string>
+    <string name="audio_sharing_dialog_connect_device_content" msgid="2873230647152283734">"Connectez un autre casque compatible ou partagez le nom et le mot de passe de votre flux avec l\'autre personne"</string>
     <string name="audio_sharing_dialog_pair_device_content" msgid="3136997898244863470">"Associer un autre casque compatible ou partager le code QR de votre flux audio avec l\'autre personne"</string>
     <string name="audio_sharing_sharing_label" msgid="1038021053061111508">"Audio partagé"</string>
     <string name="audio_sharing_pair_button_label" msgid="7987236990273083588">"Associer un nouvel appareil"</string>
     <string name="audio_sharing_qrcode_button_label" msgid="3207039106555097659">"Afficher le code QR"</string>
     <string name="audio_sharing_notification_title" msgid="1204798942946033005">"Vous partagez le contenu audio"</string>
-    <string name="audio_sharing_notification_content" msgid="1577180829878785642">"Les personnes qui écoutent peuvent entendre vos contenus multimédias. Elles n\'entendront pas les appels."</string>
+    <string name="audio_sharing_notification_content" msgid="1577180829878785642">"Les personnes qui écoutent peuvent entendre vos contenus multimédias mais pas les appels."</string>
     <string name="audio_sharing_stop_button_label" msgid="8770519671470608849">"Arrêter le partage"</string>
     <string name="audio_sharing_settings_button_label" msgid="8574808650318270491">"Paramètres"</string>
     <string name="audio_sharing_disconnect_dialog_title" msgid="2192751727237748602">"Choisir un appareil à déconnecter"</string>
