--- a/res/values-gu/strings.xml
+++ b/res/values-gu/strings.xml
@@ -104,7 +104,7 @@
     <string name="bluetooth_turning_off" msgid="7406309124247701148">"બ્લૂટૂથ બંધ થઈ રહ્યું છે…"</string>
     <string name="bluetooth_connection_permission_request" msgid="8793131019383198861">"બ્લૂટૂથ કનેક્શન વિનંતી"</string>
     <string name="bluetooth_phonebook_request" msgid="1085102844577089889">"ફોન પુસ્તિકા ઍક્સેસની વિનંતી"</string>
-    <string name="bluetooth_map_request" msgid="8664081227240707479">"સંદેશ ઍક્સેસ વિનંતી"</string>
+    <string name="bluetooth_map_request" msgid="8664081227240707479">"મેસેજના ઍક્સેસની વિનંતી"</string>
     <string name="bluetooth_device_name_summary" msgid="8678342689845439583">"તે અન્ય ડિવાઇસને \'<xliff:g id="DEVICE_NAME">^1</xliff:g>\' તરીકે દેખાય છે"</string>
     <string name="bluetooth_off_footer" msgid="76578735660216295">"અન્ય ડિવાઇસ સાથે કનેક્ટ કરવા માટે બ્લૂટૂથ ચાલુ કરો."</string>
     <string name="bluetooth_paired_device_title" msgid="3240639218362342026">"તમારા ડિવાઇસ"</string>
@@ -160,7 +160,7 @@
     <string name="radio_info_http_client_test" msgid="5673975677271544085">"HTTP ક્લાઇન્ટ પરીક્ષણ:"</string>
     <string name="ping_test_label" msgid="265427033290391845">"પિંગ પરીક્ષણ શરૂ કરો"</string>
     <string name="skip_label" msgid="6380034601349015895">"છોડો"</string>
-    <string name="next_label" msgid="1248293387735652187">"આગલું"</string>
+    <string name="next_label" msgid="1248293387735652187">"આગળ"</string>
     <string name="language_picker_title" msgid="4271307478263345133">"ભાષાઓ"</string>
     <string name="language_picker_category_title" msgid="1792199453060454565">"પસંદ કરેલી ભાષાનો ક્રમ"</string>
     <string name="desc_current_default_language" msgid="1901157141663662859">"સિસ્ટમની ભાષા"</string>
@@ -498,7 +498,7 @@
     <string name="security_settings_require_screen_on_to_auth_title" msgid="1641621458536715518">"કોઈપણ સમયે અનલૉક કરવા માટે ટચ કરો"</string>
     <string name="security_settings_require_screen_on_to_auth_description" msgid="4158414711168345398">"સ્ક્રીન બંધ હોય ત્યારે પણ અનલૉક કરવા માટે સેન્સરને ટચ કરો. આ આકસ્મિક રીતે અનલૉક થવાની શક્યતા વધારે છે."</string>
     <string name="security_settings_require_screen_on_to_auth_keywords" msgid="5557869560397089603">"સ્ક્રીન, અનલૉક કરો"</string>
-    <string name="security_settings_fingerprint_enroll_enrolling_skip" msgid="3004786457919122854">"આને થોડા સમય પછી કરો"</string>
+    <string name="security_settings_fingerprint_enroll_enrolling_skip" msgid="3004786457919122854">"થોડા સમય પછી કરો"</string>
     <string name="security_settings_udfps_tip_fingerprint_help" msgid="7580784640741217494">"ઉપાડો, પછી ફરી ટચ કરો"</string>
     <string name="security_settings_udfps_side_fingerprint_help" msgid="2567232481013195191">"તમારી આંગળીને સેન્સર પર મૂકો અને દબાવી રાખો, પછી આંગળીના બીજા ભાગોને સેન્સર પર મૂકો"</string>
     <string name="setup_fingerprint_enroll_enrolling_skip_title" msgid="352947044008973812">"ફિંગરપ્રિન્ટ સેટ કરવાનું છોડીએ?"</string>
@@ -761,7 +761,7 @@
     <string name="unlock_footer_high_complexity_requested" msgid="4471274783909915352">"<xliff:g id="APP_NAME">%1$s</xliff:g> સશક્ત પિન અથવા પાસવર્ડની ભલામણ કરે છે અને તેના વિના અપેક્ષા મુજબ કાર્ય ન કરે તેમ બની શકે છે"</string>
     <string name="unlock_footer_medium_complexity_requested" msgid="5515870066751600640">"<xliff:g id="APP_NAME">%1$s</xliff:g> નવા પિન અથવા પાસવર્ડની ભલામણ કરે છે અને તેના વિના અપેક્ષા મુજબ કાર્ય ન કરે તેમ બની શકે છે"</string>
     <string name="unlock_footer_low_complexity_requested" msgid="2517656037576567971">"<xliff:g id="APP_NAME">%1$s</xliff:g> નવી પૅટર્ન, પિન અથવા પાસવર્ડની ભલામણ કરે છે અને તેના વિના અપેક્ષા મુજબ કાર્ય ન કરે તેમ બની શકે છે"</string>
-    <string name="unlock_footer_none_complexity_requested" msgid="8534900170428140529">"<xliff:g id="APP_NAME">%1$s</xliff:g> નવા સ્ક્રીન લૉકની ભલામણ કરે છે"</string>
+    <string name="unlock_footer_none_complexity_requested" msgid="8534900170428140529">"<xliff:g id="APP_NAME">%1$s</xliff:g> નવા સ્ક્રીન લૉકનો સુઝાવ આપે છે"</string>
     <string name="lock_failed_attempts_before_wipe" msgid="6874652886647631418">"ફરી પ્રયાસ કરો. <xliff:g id="TOTAL_ATTEMPTS">%2$d</xliff:g> માંથી <xliff:g id="CURRENT_ATTEMPTS">%1$d</xliff:g> પ્રયત્ન."</string>
     <string name="lock_last_attempt_before_wipe_warning_title" msgid="7450322567217745999">"તમારો ડેટા ડિલીટ કરવામાં આવશે"</string>
     <string name="lock_last_pattern_attempt_before_wipe_device" msgid="5816668400104558952">"જો તમે આગલા પ્રયત્નમાં ખોટી પૅટર્ન દાખલ કરશો, તો આ ઉપકરણનો ડેટા કાઢી નાખવામાં આવશે"</string>
@@ -1312,7 +1312,7 @@
     <string name="sim_change_data_message" msgid="3046178883369645132">"તમે મોબાઇલ ડેટા માટે <xliff:g id="CARRIER2_0">%2$s</xliff:g>નો ઉપયોગ કરી રહ્યા છો. જો તમે બદલીને <xliff:g id="CARRIER1">%1$s</xliff:g> કરશો, તો મોબાઇલ ડેટા માટે <xliff:g id="CARRIER2_1">%2$s</xliff:g>નો ઉપયોગ નહીં થઈ શકે."</string>
     <string name="sim_change_data_ok" msgid="4922114750417276560">"<xliff:g id="CARRIER">%1$s</xliff:g>નો ઉપયોગ કરો"</string>
     <string name="sim_preferred_title" msgid="8850185380445309835">"પસંદગીનું સિમ અપડેટ કરીએ?"</string>
-    <string name="sim_preferred_message" msgid="6004009449266648351">"તમારા ઉપકરણમાં એકમાત્ર <xliff:g id="NEW_SIM">%1$s</xliff:g> સિમ છે. શું તમે મોબાઇલ ડેટા, કૉલ અને SMS સંદેશા માટે આ સિમનો ઉપયોગ કરવા માગો છો?"</string>
+    <string name="sim_preferred_message" msgid="6004009449266648351">"તમારા ડિવાઇસમાં એકમાત્ર <xliff:g id="NEW_SIM">%1$s</xliff:g> સિમ છે. શું તમે મોબાઇલ ડેટા, કૉલ અને SMS મેસેજ માટે આ સિમનો ઉપયોગ કરવા માગો છો?"</string>
     <string name="enable_auto_data_switch_dialog_title" msgid="3563043560556718994">"મોબાઇલ ડેટા કવરેજ બહેતર કરીએ?"</string>
     <string name="enable_auto_data_switch_dialog_message" msgid="5777287241521946883">"જ્યારે તેની ઉપલબ્ધતા બહેતર હોય, ત્યારે તમારા ડિવાઇસને મોબાઇલ ડેટા માટે <xliff:g id="BACKUP_CARRIER">%1$s</xliff:g> પર ઑટોમૅટિક રીતે સ્વિચ કરવાની મંજૂરી આપો."</string>
     <string name="auto_data_switch_dialog_managed_profile_warning" msgid="6839438290079866605">\n\n"કદાચ તમારી સંસ્થાને કૉલ, મેસેજ અને નેટવર્ક ટ્રાફિક દેખાઈ શકે છે."</string>
@@ -2764,7 +2764,7 @@
     <string name="backup_erase_dialog_title" msgid="5892431263348766484"></string>
     <string name="backup_erase_dialog_message" msgid="2250872501409574331">"વાઇ-ફાઇ પાસવર્ડ, બુકમાર્ક, અન્ય સેટિંગ અને ઍપ ડેટાનો બૅકઅપ લેવાનું રોકીએ, તેમજ Google સર્વર પરની બધી કૉપિને કાઢી નાખીએ?"</string>
     <string name="fullbackup_erase_dialog_message" msgid="2379053988557486162">"ડિવાઇસ ડેટા (જેમ કે વાઇ-ફાઇ પાસવર્ડ અને કૉલ ઇતિહાસ) અને ઍપ ડેટા (જેમ કે સેટિંગ અને ઍપ દ્વારા  થયેલી ફાઇલો)નું બૅકઅપ લેવાનું રોકીએ, ઉપરાંત રિમોટ સર્વર પરની તમામ કૉપિ કાઢી નાખીએ?"</string>
-    <string name="fullbackup_data_summary" msgid="971587401251601473">"ડિવાઇસ ડેટા (જેમ કે વાઇ-ફાઇ પાસવર્ડ અને કૉલ ઇતિહાસ) અને ઍપ ડેટા (જેમ કે સેટિંગ અને ઍપ દ્વારા સંગ્રહિત ફાઇલો)નો રિમોટલી ઑટોમૅટિક રીતે બૅકઅપ લો.\n\nજ્યારે તમે ઑટોમૅટિક રીતે બૅકઅપ ચાલુ કરો છો, ત્યારે ડિવાઇસ અને ઍપ ડેટા સમયાંતરે રિમોટલી સચવાય છે. ઍપ ડેટા એવો કોઈપણ ડેટા હોઈ શકે જેને કોઈ ઍપએ સાચવ્યો હોય (ડેવલપર સેટિંગના આધારે) જેમાં સંપર્કો, સંદેશા અને ફોટો જેવા સંભવિતપણે સંવેદનશીલ ડેટાનો સમાવેશ થાય છે."</string>
+    <string name="fullbackup_data_summary" msgid="971587401251601473">"ડિવાઇસ ડેટા (જેમ કે વાઇ-ફાઇ પાસવર્ડ અને કૉલ ઇતિહાસ) અને ઍપ ડેટા (જેમ કે સેટિંગ અને ઍપ દ્વારા સંગ્રહિત ફાઇલો)નો રિમોટલી ઑટોમૅટિક રીતે બૅકઅપ લો.\n\nજ્યારે તમે ઑટોમૅટિક રીતે બૅકઅપ ચાલુ કરો છો, ત્યારે ડિવાઇસ અને ઍપ ડેટા સમયાંતરે રિમોટલી સચવાય છે. ઍપ ડેટા એવો કોઈપણ ડેટા હોઈ શકે જેને કોઈ ઍપએ સાચવ્યો હોય (ડેવલપર સેટિંગના આધારે) જેમાં સંપર્કો, મેસેજ અને ફોટા જેવા સંભવિતપણે સંવેદનશીલ ડેટાનો સમાવેશ થાય છે."</string>
     <string name="device_admin_settings_title" msgid="31392408594557070">"ડિવાઇસ વ્યવસ્થાપક સેટિંગ"</string>
     <string name="active_device_admin_msg" msgid="7744106305636543184">"ડિવાઇસ વ્યવસ્થાપક ઍપ"</string>
     <string name="remove_device_admin" msgid="3143059558744287259">"આ ડિવાઇસ વ્યવસ્થાપક ઍપને નિષ્ક્રિય કરો"</string>
@@ -3430,8 +3430,8 @@
     <string name="zen_custom_settings_dialog_ok" msgid="8842373418878278246">"સમજાઈ ગયું"</string>
     <string name="zen_custom_settings_notifications_header" msgid="7635280645171095398">"નોટિફિકેશન"</string>
     <string name="zen_custom_settings_duration_header" msgid="5065987827522064943">"અવધિ"</string>
-    <string name="zen_msg_event_reminder_title" msgid="5362025129007417554">"સંદેશા, ઇવેન્ટ અને રિમાઇન્ડર"</string>
-    <string name="zen_msg_event_reminder_footer" msgid="2700459146293750387">"ખલેલ પાડશો નહીં મોડ ચાલુ હોય, ત્યારે સંદેશા, રિમાઇન્ડર અને ઇવેન્ટ મ્યૂટ કરવામાં આવશે, જેમાં તમે ઉપરની જે આઇટમને મંજૂરી આપો તે અપવાદ છે. તમારા મિત્રો, પરિવારજનો અથવા અન્ય સંપર્કો તમારો સંપર્ક કરી શકે તે માટે તમે સંદેશાની સેટિંગ અનુકૂળ કરી શકો છો."</string>
+    <string name="zen_msg_event_reminder_title" msgid="5362025129007417554">"મેસેજ, ઇવેન્ટ અને રિમાઇન્ડર"</string>
+    <string name="zen_msg_event_reminder_footer" msgid="2700459146293750387">"ખલેલ પાડશો નહીં મોડ ચાલુ હોય, ત્યારે મેસેજ, રિમાઇન્ડર અને ઇવેન્ટ મ્યૂટ કરવામાં આવશે, જેમાં તમે ઉપરની જે આઇટમને મંજૂરી આપો તે અપવાદ છે. તમારા મિત્રો, પરિવારજનો અથવા અન્ય સંપર્કો તમારો સંપર્ક કરી શકે તે માટે તમે મેસેજના સેટિંગ અનુકૂળ કરી શકો છો."</string>
     <string name="zen_onboarding_ok" msgid="8764248406533833392">"થઈ ગયું"</string>
     <string name="zen_onboarding_settings" msgid="2815839576245114342">"સેટિંગ"</string>
     <string name="zen_onboarding_new_setting_title" msgid="8813308612916316657">"નોટિફિકેશનમાં કોઈ વિઝ્યુઅલ અથવા સાઉન્ડ નથી"</string>
@@ -3732,7 +3732,7 @@
     <string name="zen_mode_messages_title" msgid="1777598523485334405">"મેસેજ"</string>
     <string name="zen_mode_messages_header" msgid="253721635061451577">"વિક્ષેપ ઊભો કરી શકે તેવા મેસેજ"</string>
     <string name="zen_mode_messages_footer" msgid="6002468050854126331">"જે મેસેજની મંજૂરી આપી હોય તેમાં સાઉન્ડ આવે તેની ખાતરી કરવા માટે, ડિવાઇસ રિંગ વાગે તેમ સેટ કરેલું હોવાનું ચેક કરો"</string>
-    <string name="zen_mode_custom_messages_footer" msgid="7545180036949550830">"‘<xliff:g id="SCHEDULE_NAME">%1$s</xliff:g>’ માટે આવનારા સંદેશા બ્લૉક કરેલા છે. તમારા મિત્રો, પરિવારજનો અથવા અન્ય સંપર્કો તમારો સંપર્ક કરી શકે તે માટે તમે સેટિંગને અનુકૂળ કરી શકો છો."</string>
+    <string name="zen_mode_custom_messages_footer" msgid="7545180036949550830">"‘<xliff:g id="SCHEDULE_NAME">%1$s</xliff:g>’ માટે આવનારા મેસેજ બ્લૉક કરેલા છે. તમારા મિત્રો, પરિવારજનો અથવા અન્ય સંપર્કો તમારો સંપર્ક કરી શકે તે માટે તમે સેટિંગને અનુકૂળ કરી શકો છો."</string>
     <string name="zen_mode_all_messages_summary" msgid="3756267858343104554">"બધા મેસેજ તમને પ્રાપ્ત થઈ શકે છે"</string>
     <string name="zen_mode_all_calls_summary" msgid="7337907849083824698">"બધા કૉલ તમારા પર આવી શકે છે"</string>
     <string name="zen_mode_contacts_count" msgid="6568631261119795799">"{count,plural, =0{એકપણ નહીં}=1{1 સંપર્ક}one{# સંપર્ક}other{# સંપર્ક}}"</string>
@@ -4065,7 +4065,7 @@
     <string name="disabled_by_policy_title" msgid="6852347040813204503">"ઑફિસની પૉલિસી દ્વારા બ્લૉક કરેલો છે"</string>
     <string name="disabled_by_policy_title_adjust_volume" msgid="1669689058213728099">"વૉલ્યૂમ બદલી શકાતું નથી"</string>
     <string name="disabled_by_policy_title_outgoing_calls" msgid="400089720689494562">"કૉલ કરી શકાતા નથી"</string>
-    <string name="disabled_by_policy_title_sms" msgid="8951840850778406831">"SMS સંદેશા મોકલી શકાતા નથી"</string>
+    <string name="disabled_by_policy_title_sms" msgid="8951840850778406831">"SMS મેસેજ મોકલી શકાતા નથી"</string>
     <string name="disabled_by_policy_title_camera" msgid="6616508876399613773">"કૅમેરાનો ઉપયોગ કરી શકાતો નથી"</string>
     <string name="disabled_by_policy_title_screen_capture" msgid="6085100101044105811">"સ્ક્રીનશૉટ લઈ શકાતા નથી"</string>
     <string name="disabled_by_policy_title_suspend_packages" msgid="4223983156635729793">"આ ઍપ ખોલી શકાતી નથી"</string>
@@ -4838,10 +4838,10 @@
     <string name="wfc_disclaimer_emergency_limitation_title_text" msgid="8276287227589397162">"ઇમર્જન્સી કૉલ"</string>
     <string name="wfc_disclaimer_emergency_limitation_desc_text" msgid="5503902001191552196">"વાઇ-ફાઇ કૉલિંગ પર ઇમર્જન્સી કૉલ કરવાની સુવિધા તમારા કૅરિઅર પર સમર્થિત નથી.\nઇમર્જન્સી કૉલ કરવા માટે ડિવાઇસ ઑટોમૅટિક રીતે સેલ્યુલર નેટવર્ક પર સ્વિચ કરે છે.\nઇમર્જન્સી કૉલ કરવાનું ફક્ત સેલ્યુલર કવરેજ ધરાવતા વિસ્તારમાં જ શક્ય છે."</string>
     <string name="wifi_calling_summary" msgid="8566648389959032967">"ક્વૉલિટી સુધારવા કૉલ માટે વાઇ-ફાઇનો ઉપયોગ કરો"</string>
-    <string name="enable_receiving_mms_notification_title" msgid="6465218559386990248">"ઇનક્મિંગ MMS સંદેશ"</string>
-    <string name="enable_sending_mms_notification_title" msgid="7120641300854953375">"MMS સંદેશ મોકલી શકાતો નથી"</string>
-    <string name="enable_mms_notification_summary" msgid="6432752438276672500">"મોબાઇલ ડેટા બંધ હોય ત્યારે પણ <xliff:g id="OPERATOR_NAME">%1$s</xliff:g> પર MMS સંદેશ મોકલવાની મંજૂરી આપવા માટે ટૅપ કરો"</string>
-    <string name="enable_mms_notification_channel_title" msgid="1798206332620642108">"MMS સંદેશ"</string>
+    <string name="enable_receiving_mms_notification_title" msgid="6465218559386990248">"ઇનકમિંગ મલ્ટિમીડિયા મેસેજ (MMS)"</string>
+    <string name="enable_sending_mms_notification_title" msgid="7120641300854953375">"મલ્ટિમીડિયા મેસેજ (MMS) મોકલી શકાતો નથી"</string>
+    <string name="enable_mms_notification_summary" msgid="6432752438276672500">"મોબાઇલ ડેટા બંધ હોય ત્યારે પણ <xliff:g id="OPERATOR_NAME">%1$s</xliff:g> પર મલ્ટિમીડિયા મેસેજ (MMS) મોકલવાની મંજૂરી આપવા માટે ટૅપ કરો"</string>
+    <string name="enable_mms_notification_channel_title" msgid="1798206332620642108">"મલ્ટિમીડિયા મેસેજ (MMS)"</string>
     <string name="sim_combination_warning_notification_title" msgid="1365401631492986487">"સિમ કોમ્બિનેશનમાં સમસ્યા"</string>
     <string name="dual_cdma_sim_warning_notification_summary" msgid="2826474790710586487">"<xliff:g id="OPERATOR_NAMES">%1$s</xliff:g>ના વપરાશથી કાર્યક્ષમતામાં મર્યાદા આવી શકે છે. વધુ જાણવા માટે ટૅપ કરો."</string>
     <string name="dual_cdma_sim_warning_notification_channel_title" msgid="1049161096896074364">"સિમ કોમ્બિનેશન"</string>
@@ -4980,9 +4980,9 @@
     <string name="aware_summary_when_bedtime_on" msgid="2063856008597376344">"ઉપલબ્ધ નથી કારણ કે બેડટાઇમ મોડ ચાલુ છે"</string>
     <string name="reset_importance_completed" msgid="3595536767426097205">"નોટિફિકેશનનું મહત્ત્વ રીસેટ કરવાની પ્રક્રિયા પૂર્ણ થઈ."</string>
     <string name="apps_dashboard_title" msgid="3269953499954393706">"ઍપ"</string>
-    <string name="bluetooth_message_access_notification_content" msgid="5111712860712823893">"કોઈ ડિવાઇસ તમારા સંદેશા ઍક્સેસ કરવા માગે છે. વિગતો માટે ટૅપ કરો."</string>
-    <string name="bluetooth_message_access_dialog_title" msgid="9009836130395061579">"સંદેશા ઍક્સેસ કરવાની મંજૂરી આપીએ?"</string>
-    <string name="bluetooth_message_access_dialog_content" msgid="7186694737578788487">"કોઈ બ્લૂટૂથ ડિવાઇસ, <xliff:g id="DEVICE_NAME_0">%1$s</xliff:g>, તમારા સંદેશા ઍક્સેસ કરવા માગે છે.\n\nતમે પહેલાં ક્યારેય <xliff:g id="DEVICE_NAME_1">%2$s</xliff:g> સાથે કનેક્ટ થયા નથી."</string>
+    <string name="bluetooth_message_access_notification_content" msgid="5111712860712823893">"કોઈ ડિવાઇસ તમારા મેસેજ ઍક્સેસ કરવા માગે છે. વિગતો માટે ટૅપ કરો."</string>
+    <string name="bluetooth_message_access_dialog_title" msgid="9009836130395061579">"મેસેજ ઍક્સેસ કરવાની મંજૂરી આપીએ?"</string>
+    <string name="bluetooth_message_access_dialog_content" msgid="7186694737578788487">"કોઈ બ્લૂટૂથ ડિવાઇસ, <xliff:g id="DEVICE_NAME_0">%1$s</xliff:g>, તમારા મેસેજ ઍક્સેસ કરવા માગે છે.\n\nતમે પહેલાં ક્યારેય <xliff:g id="DEVICE_NAME_1">%2$s</xliff:g> સાથે કનેક્ટ થયા નથી."</string>
     <string name="bluetooth_phonebook_access_notification_content" msgid="9175220052703433637">"કોઈ ડિવાઇસ તમારા સંપર્કો અને કૉલ લૉગ ઍક્સેસ કરવા માગે છે. વિગતો માટે ટૅપ કરો."</string>
     <string name="bluetooth_phonebook_access_dialog_title" msgid="7624607995928968721">"સંપર્કો અને કૉલ લૉગ ઍક્સેસ કરવાની મંજૂરી આપીએ?"</string>
     <string name="bluetooth_phonebook_access_dialog_content" msgid="959658135522249170">"કોઈ બ્લૂટૂથ ડિવાઇસ, <xliff:g id="DEVICE_NAME_0">%1$s</xliff:g>, તમારા સંપર્કો અને કૉલ લૉગ ઍક્સેસ કરવા માગે છે. આમાં ઇનકમિંગ અને આઉટગોઇંગ કૉલ વિશેનો ડેટા શામેલ છે.\n\nતમે પહેલાં ક્યારેય <xliff:g id="DEVICE_NAME_1">%2$s</xliff:g> સાથે કનેક્ટ થયા નથી."</string>
