--- a/res/values-hr/strings.xml
+++ b/res/values-hr/strings.xml
@@ -654,7 +654,7 @@
     <string name="no_screen_lock_issue_notification_text" msgid="8696194459170873345">"Za dodatnu sigurnost postavite PIN, uzorak ili zaporku za ovaj uređaj."</string>
     <string name="suggested_lock_settings_title" msgid="7836065447159730217">"Zaštitite telefon"</string>
     <string name="suggested_fingerprint_lock_settings_title" msgid="3140266181874137984">"Dodajte otisak prsta za otključavanje"</string>
-    <string name="lock_settings_picker_title" msgid="9219376327364915334">"Zaključavanje zaslona"</string>
+    <string name="lock_settings_picker_title" msgid="9219376327364915334">"Odaberite način zaključavanja zaslona"</string>
     <string name="lock_settings_picker_new_lock_title" msgid="3113042086804290919">"Odaberite način zaključavanja zaslona"</string>
     <string name="lock_settings_picker_update_lock_title" msgid="536853138943415927">"Odaberite novo zaključavanje zaslona"</string>
     <string name="lock_settings_picker_new_profile_lock_title" msgid="2270462215256413800">"Zaključavanje za poslovne aplikacije"</string>
@@ -5284,7 +5284,7 @@
     <string name="audio_sharing_dialog_connect_device_content" msgid="2873230647152283734">"Povežite još jedan par kompatibilnih slušalica ili s drugom osobom podijelite naziv i zaporku svojeg streama"</string>
     <string name="audio_sharing_dialog_pair_device_content" msgid="3136997898244863470">"Uparite još jedan komplet kompatibilnih slušalica ili s drugom osobom podijelite QR kôd svojeg audiostreama"</string>
     <string name="audio_sharing_sharing_label" msgid="1038021053061111508">"Zajedničko slušanje"</string>
-    <string name="audio_sharing_pair_button_label" msgid="7987236990273083588">"Upari novi uređaj"</string>
+    <string name="audio_sharing_pair_button_label" msgid="7987236990273083588">"Uparite novi uređaj"</string>
     <string name="audio_sharing_qrcode_button_label" msgid="3207039106555097659">"Prikaži QR kôd"</string>
     <string name="audio_sharing_notification_title" msgid="1204798942946033005">"Zajednički slušate"</string>
     <string name="audio_sharing_notification_content" msgid="1577180829878785642">"Osobe koje slušaju mogu čuti vaše medijske sadržaje. Neće čuti pozive."</string>
