--- a/res/values-hy/strings.xml
+++ b/res/values-hy/strings.xml
@@ -1382,9 +1382,9 @@
     <string name="storage_menu_migrate" msgid="2196088149560070193">"Տեղափոխել տվյալները"</string>
     <string name="storage_menu_forget" msgid="5154017890033638936">"Հեռացնել"</string>
     <string name="storage_menu_set_up" msgid="4401074025612064744">"Կարգավորել"</string>
-    <string name="storage_menu_free" msgid="616100170298501673">"Ազատել տարածք"</string>
+    <string name="storage_menu_free" msgid="616100170298501673">"Տարածք ազատել"</string>
     <string name="storage_menu_manage" msgid="7465522758801346408">"Կառավարել հիշողությունը"</string>
-    <string name="storage_free_up_space_title" msgid="281047807372131975">"Ազատել տարածք"</string>
+    <string name="storage_free_up_space_title" msgid="281047807372131975">"Տարածք ազատել"</string>
     <string name="storage_free_up_space_summary" msgid="6650027929735481350">"Անցեք Files հավելված՝ տեղ ազատելու և տարածքը կառավարելու համար"</string>
     <string name="storage_other_users" msgid="7017206190449510992">"Այլ օգտատերեր"</string>
     <string name="storage_size_large" msgid="1155308277890194878">"<xliff:g id="NUMBER">^1</xliff:g>"<small><small>" <xliff:g id="UNIT">^2</xliff:g>"</small></small>""</string>
@@ -5251,9 +5251,9 @@
     <string name="sync_across_devices_title" msgid="3447757705383089345">"Սարքերի միջև համաժամացում"</string>
     <string name="device_diagnostics_title" msgid="2914523189695727897">"Սարքի դիագնոստիկա"</string>
     <string name="audio_sharing_title" msgid="4144157137502923821">"Աուդիոյի փոխանցում"</string>
-    <string name="audio_sharing_switch_title" msgid="7052827328670825701">"Փոխանցել աուդիո"</string>
+    <string name="audio_sharing_switch_title" msgid="7052827328670825701">"Փոխանցել աուդիոն"</string>
     <string name="calls_and_alarms_device_title" msgid="6993559028175454198">"Զանգեր և զարթուցիչներ"</string>
-    <string name="audio_sharing_description" msgid="1660255584523640628">"Թույլ տվեք մարդկանք ձեզ հետ միասին լսել ձեր մեդիան։ Լսողները պետք է իրենց LE Audio ականջակալն ունենան։"</string>
+    <string name="audio_sharing_description" msgid="1660255584523640628">"Թույլ տվեք մարդկանք ձեզ հետ միասին լսել ձեր մեդիա ֆայլերը։ Լսողները պետք է իրենց LE Audio ականջակալն ունենան։"</string>
     <string name="audio_sharing_device_group_title" msgid="3019780581643956943">"Ակտիվ մեդիա սարքեր"</string>
     <string name="audio_sharing_call_audio_title" msgid="7978867452289583929">"Զանգի ձայներանգ"</string>
     <string name="audio_sharing_call_audio_description" msgid="6573621048260616924">"Նվագարկել միայն <xliff:g id="DEVICE_NAME">%1$s</xliff:g> սարքում"</string>
@@ -5274,7 +5274,7 @@
     <string name="audio_sharing_summary_off" msgid="8833198995257547378">"Անջատված է"</string>
     <string name="audio_sharing_share_dialog_title" msgid="427514648577553621">"Փոխանցեք ձեր աուդիոն"</string>
     <string name="audio_sharing_share_dialog_subtitle" msgid="5208582843732057871">"<xliff:g id="DEVICE_NAME1">%1$s</xliff:g> և <xliff:g id="DEVICE_NAME2">%2$s</xliff:g>"</string>
-    <string name="audio_sharing_share_button_label" msgid="3895900668317105537">"Փոխանցել աուդիո"</string>
+    <string name="audio_sharing_share_button_label" msgid="3895900668317105537">"Փոխանցել աուդիոն"</string>
     <string name="audio_sharing_no_thanks_button_label" msgid="5822491984114744357">"Ոչ, շնորհակալություն"</string>
     <string name="audio_sharing_share_with_dialog_title" msgid="3934377530640830364">"Փոխանցե՞լ աուդիոն <xliff:g id="DEVICE_NAME">%1$s</xliff:g> սարքին"</string>
     <string name="audio_sharing_share_with_more_dialog_title" msgid="2840069088858232267">"Փոխանցել աուդիոն մեկ այլ սարքի"</string>
@@ -5282,7 +5282,7 @@
     <string name="audio_sharing_close_button_label" msgid="2666534149100498574">"Փակել"</string>
     <string name="audio_sharing_dialog_connect_device_content" msgid="2873230647152283734">"Միացրեք մեկ այլ համատեղելի ականջակալ կամ մյուս մարդու հետ կիսվեք ձեր հոսքի անունով և գաղտնաբառով"</string>
     <string name="audio_sharing_dialog_pair_device_content" msgid="3136997898244863470">"Զուգակցեք մեկ այլ համատեղելի ականջակալ կամ մյուս մարդու հետ կիսվեք ձեր աուդիո հոսքի QR Կոդով"</string>
-    <string name="audio_sharing_sharing_label" msgid="1038021053061111508">"Փոխանցում է աուդիոն"</string>
+    <string name="audio_sharing_sharing_label" msgid="1038021053061111508">"Աուդիոն փոխանցվում է"</string>
     <string name="audio_sharing_pair_button_label" msgid="7987236990273083588">"Նոր սարքի զուգակցում"</string>
     <string name="audio_sharing_qrcode_button_label" msgid="3207039106555097659">"Ցույց տալ QR կոդը"</string>
     <string name="audio_sharing_notification_title" msgid="1204798942946033005">"Դուք փոխանցում եք ձեր աուդիոն"</string>
@@ -5290,7 +5290,7 @@
     <string name="audio_sharing_stop_button_label" msgid="8770519671470608849">"Կանգնեցնել փոխանցումը"</string>
     <string name="audio_sharing_settings_button_label" msgid="8574808650318270491">"Կարգավորումներ"</string>
     <string name="audio_sharing_disconnect_dialog_title" msgid="2192751727237748602">"Ընտրեք սարքը՝ կապն անջատելու համար"</string>
-    <string name="audio_sharing_dialog_disconnect_content" msgid="3840488888970653308">"Աուդիոն միաժամանակ կարող է նվագարկվել ոչ ավել, քան երկու սարքերում"</string>
+    <string name="audio_sharing_dialog_disconnect_content" msgid="3840488888970653308">"Աուդիոն միաժամանակ կարող է նվագարկվել ոչ ավելի, քան երկու սարքերում"</string>
     <string name="audio_sharing_disconnect_device_button_label" msgid="4272897217708930576">"Չեղարկել <xliff:g id="DEVICE_NAME">%1$s</xliff:g>-ի զուգակցումը"</string>
     <string name="audio_sharing_stop_dialog_title" msgid="4872853738164232075">"Միացնե՞լ <xliff:g id="DEVICE_NAME">%1$s</xliff:g> սարքը"</string>
     <string name="audio_sharing_stop_dialog_content" msgid="6371546856710692910">"Դուք կկանգնեցնեք աուդիոյի փոխանցումը <xliff:g id="DEVICE_NAME">%1$s</xliff:g> սարքին"</string>
