--- a/res/values-iw/strings.xml
+++ b/res/values-iw/strings.xml
@@ -300,7 +300,7 @@
     <string name="security_settings_face_preference_summary_none" msgid="523320857738436024">"צריך להגדיר זיהוי פנים"</string>
     <string name="security_settings_face_preference_title" msgid="2126625155005348417">"פתיחה בזיהוי פנים"</string>
     <string name="security_settings_face_profile_preference_title" msgid="7519527436266375005">"פתיחה ע\"י זיהוי הפנים לצורכי עבודה"</string>
-    <string name="security_settings_face_enroll_education_title" msgid="6448806884597691208">"איך להגדיר פתיחה ע\"י זיהוי הפנים"</string>
+    <string name="security_settings_face_enroll_education_title" msgid="6448806884597691208">"איך להגדיר פתיחה בזיהוי הפנים"</string>
     <string name="security_settings_face_enroll_education_title_accessibility" msgid="3701874093226957891">"הגדרת התכונה \'פתיחה ע\"י זיהוי הפנים\'"</string>
     <string name="security_settings_face_enroll_education_title_unlock_disabled" msgid="8810954233979716906">"שימוש באימות פנים"</string>
     <string name="security_settings_face_enroll_education_message" msgid="4308030157487176799"></string>
@@ -464,7 +464,7 @@
     <string name="security_settings_sfps_enroll_find_sensor_title" msgid="8327884364635804363">"צריך לגעת בלחצן ההפעלה בלי ללחוץ עליו"</string>
     <string name="security_settings_udfps_enroll_find_sensor_title" msgid="8077484429913330179">"איך מגדירים טביעת אצבע?"</string>
     <string name="security_settings_fingerprint_enroll_find_sensor_message" msgid="6160543980992596286">"החיישן נמצא בגב הטלפון. יש להשתמש באצבע המורה."</string>
-    <string name="security_settings_udfps_enroll_find_sensor_message" msgid="8383106460819519961">"חיישן טביעות האצבע מופיע במסך. נצלם את טביעת האצבע שלך במסך הבא."</string>
+    <string name="security_settings_udfps_enroll_find_sensor_message" msgid="8383106460819519961">"סימנו במסך איפה ממוקם חיישן טביעות האצבע. נצלם את טביעת האצבע שלך במסך הבא."</string>
     <string name="security_settings_udfps_enroll_find_sensor_start_button" msgid="3172268783620336357">"התחלה"</string>
     <string name="security_settings_udfps_enroll_a11y" msgid="1899453114050362235">"מזיזים את האצבע לאורך המסך כדי לאתר את החיישן. לוחצים לחיצה ארוכה על חיישן טביעות האצבע."</string>
     <string name="security_settings_fingerprint_enroll_find_sensor_content_description" msgid="3065850549419750523">"איור המציג את המיקום של חיישן טביעת האצבע במכשיר"</string>
@@ -655,13 +655,13 @@
     <string name="suggested_lock_settings_title" msgid="7836065447159730217">"שמירה על אבטחת הטלפון"</string>
     <string name="suggested_fingerprint_lock_settings_title" msgid="3140266181874137984">"הוספת טביעת אצבע לביטול הנעילה"</string>
     <string name="lock_settings_picker_title" msgid="9219376327364915334">"בחירת נעילת מסך"</string>
-    <string name="lock_settings_picker_new_lock_title" msgid="3113042086804290919">"בחירה של נעילת מסך"</string>
+    <string name="lock_settings_picker_new_lock_title" msgid="3113042086804290919">"בחירת שיטה לביטול הנעילה"</string>
     <string name="lock_settings_picker_update_lock_title" msgid="536853138943415927">"בחירה של נעילת מסך חדשה"</string>
     <string name="lock_settings_picker_new_profile_lock_title" msgid="2270462215256413800">"נעילת אפליקציות לעבודה"</string>
     <string name="lock_settings_picker_update_profile_lock_title" msgid="5929068163516308927">"בחירת נעילה חדשה לפרופיל העבודה"</string>
     <string name="lock_settings_picker_biometrics_added_security_message" msgid="1105247657304421299">"לשיפור האבטחה, מומלץ להגדיר שיטת גיבוי לנעילת המסך"</string>
     <string name="lock_settings_picker_biometric_message" msgid="2609666443527262781">"יש לבחור את שיטת הגיבוי לנעילת המסך"</string>
-    <string name="lock_settings_picker_admin_restricted_personal_message" msgid="3532653662159888328">"‏אם שכחת איך לבטל את נעילת המסך, מנהל ה-IT לא יוכל לאפס אותה."</string>
+    <string name="lock_settings_picker_admin_restricted_personal_message" msgid="3532653662159888328">"‏אם שכחת איך לבטל את נעילת המסך, האדמין ב-IT לא יוכל לאפס אותה."</string>
     <string name="lock_settings_picker_admin_restricted_personal_message_action" msgid="5956615234246626264">"אפשר להגדיר נעילה נפרדת לפרופיל העבודה"</string>
     <string name="lock_settings_picker_profile_message" msgid="9142379549980873478">"‏שכחת את הנעילה הזו? צריך לבקש מאדמין ב-IT לאפס אותה"</string>
     <string name="setup_lock_settings_options_button_label" msgid="6098297461618298505">"אפשרויות לנעילת המסך"</string>
@@ -680,7 +680,7 @@
     <string name="unlock_set_unlock_pin_title" msgid="5283636759362880407">"קוד אימות"</string>
     <string name="unlock_set_unlock_password_title" msgid="2559842616268607041">"סיסמה"</string>
     <string name="unlock_set_do_later_title" msgid="6565575303676064364">"לא עכשיו"</string>
-    <string name="current_screen_lock" msgid="1367883977261098017">"נעילת המסך הנוכחית"</string>
+    <string name="current_screen_lock" msgid="1367883977261098017">"השיטה הנוכחית לביטול הנעילה"</string>
     <string name="fingerprint_unlock_set_unlock_pattern" msgid="2229689425933043901">"קו ביטול נעילה • טביעת אצבע"</string>
     <string name="fingerprint_unlock_set_unlock_pin" msgid="7979848492740627674">"קוד אימות • טביעת אצבע"</string>
     <string name="fingerprint_unlock_set_unlock_password" msgid="6207676267295036963">"סיסמה • טביעת אצבע"</string>
@@ -761,7 +761,7 @@
     <string name="unlock_footer_high_complexity_requested" msgid="4471274783909915352">"<xliff:g id="APP_NAME">%1$s</xliff:g> ממליצה על סיסמה או קוד אימות חזקים. אחרת, ייתכן שהיא לא תפעל כצפוי"</string>
     <string name="unlock_footer_medium_complexity_requested" msgid="5515870066751600640">"<xliff:g id="APP_NAME">%1$s</xliff:g> ממליצה על סיסמה או קוד אימות חדשים. אחרת, ייתכן שהיא לא תפעל כצפוי"</string>
     <string name="unlock_footer_low_complexity_requested" msgid="2517656037576567971">"<xliff:g id="APP_NAME">%1$s</xliff:g> ממליצה על קו ביטול נעילה, סיסמה או קוד אימות חדשים. אחרת, ייתכן שהיא לא תפעל כצפוי"</string>
-    <string name="unlock_footer_none_complexity_requested" msgid="8534900170428140529">"האפליקציה <xliff:g id="APP_NAME">%1$s</xliff:g> ממליצה על נעילת מסך חדשה"</string>
+    <string name="unlock_footer_none_complexity_requested" msgid="8534900170428140529">"האפליקציה <xliff:g id="APP_NAME">%1$s</xliff:g> ממליצה להגדיר שיטה חדשה לביטול הנעילה"</string>
     <string name="lock_failed_attempts_before_wipe" msgid="6874652886647631418">"יש לנסות שוב. ניסיון <xliff:g id="CURRENT_ATTEMPTS">%1$d</xliff:g> מתוך <xliff:g id="TOTAL_ATTEMPTS">%2$d</xliff:g>."</string>
     <string name="lock_last_attempt_before_wipe_warning_title" msgid="7450322567217745999">"הנתונים שלך יימחקו"</string>
     <string name="lock_last_pattern_attempt_before_wipe_device" msgid="5816668400104558952">"אם יוזן קו ביטול נעילה שגוי בניסיון הבא, הנתונים במכשיר יימחקו"</string>
@@ -971,7 +971,7 @@
     <string name="wifi_dpp_center_qr_code" msgid="5270782275746178104">"‏יש להציב את קוד ה-QR במרכז החלון שלמטה כדי להוסיף את המכשיר אל “<xliff:g id="SSID">%1$s</xliff:g>”"</string>
     <string name="wifi_dpp_scan_qr_code" msgid="3543923817779444434">"‏סריקת קוד QR"</string>
     <string name="wifi_dpp_scan_qr_code_join_network" msgid="969985020363459133">"‏יש להציב את קוד ה-QR במרכז החלון שלמטה כדי להתחבר אל “<xliff:g id="SSID">%1$s</xliff:g>”"</string>
-    <string name="wifi_dpp_scan_qr_code_join_unknown_network" msgid="3180020429793614145">"‏כדי להצטרף לרשת Wi-Fi, עליך לסרוק את קוד ה-QR שלה במסך הזה"</string>
+    <string name="wifi_dpp_scan_qr_code_join_unknown_network" msgid="3180020429793614145">"‏כדי להצטרף לרשת Wi-Fi, צריך לסרוק את קוד ה-QR שלה במסך הזה"</string>
     <string name="wifi_dpp_share_wifi" msgid="2431744447544057866">"‏שיתוף Wi‑Fi"</string>
     <string name="wifi_dpp_scan_qr_code_with_another_device" msgid="6967364080214325016">"‏יש לסרוק את קוד ה-QR הזה בעזרת מכשיר אחר כדי להצטרף אל “<xliff:g id="SSID">%1$s</xliff:g>”"</string>
     <string name="wifi_dpp_scan_open_network_qr_code_with_another_device" msgid="5398619697898444311">"‏כדי להתחבר אל \"<xliff:g id="SSID">%1$s</xliff:g>\" צריך לסרוק את קוד ה-QR הזה"</string>
@@ -1369,7 +1369,7 @@
     <string name="status_up_time" msgid="4250719389455342087">"זמן פעולה תקינה"</string>
     <string name="battery_manufacture_date" msgid="7139426520156833987">"תאריך הייצור"</string>
     <string name="battery_first_use_date" msgid="3157207331722711317">"תאריך השימוש הראשון"</string>
-    <string name="battery_cycle_count" msgid="2912949283386571900">"מספר מחזורי הטעינה"</string>
+    <string name="battery_cycle_count" msgid="2912949283386571900">"מחזורי הסוללה שהושלמו"</string>
     <string name="battery_cycle_count_not_available" msgid="2426584515665184664">"לא זמין"</string>
     <string name="memory_calculating_size" msgid="3898240439798661242">"החישוב מתבצע…"</string>
     <string name="storage_menu_rename" msgid="8549835371429159336">"שינוי שם"</string>
@@ -1899,9 +1899,9 @@
     <string name="bounce_keys" msgid="7419450970351743904">"מקשים חוזרים"</string>
     <string name="bounce_keys_summary" msgid="7347050868868080302">"המקלדת מתעלמת מלחיצות מהירות חוזרות על אותו המקש שנעשות תוך <xliff:g id="BOUNCE_KEYS_THRESHOLD">%1$d</xliff:g> אלפיות השנייה"</string>
     <string name="slow_keys" msgid="2891452895499690837">"מקשים איטיים"</string>
-    <string name="slow_keys_summary" msgid="1784371292745423292">"שינוי משך הזמן להפעלה של לחיצה על מקש ל-<xliff:g id="SLOW_KEYS_THRESHOLD">%1$d</xliff:g> אלפיות השנייה"</string>
+    <string name="slow_keys_summary" msgid="1784371292745423292">"הזמן שעובר מהקשה על מקש ועד להפעלה שלו ישתנה ל-<xliff:g id="SLOW_KEYS_THRESHOLD">%1$d</xliff:g> אלפיות השנייה"</string>
     <string name="sticky_keys" msgid="7317317044898161747">"מקשים \"דביקים\""</string>
-    <string name="sticky_keys_summary" msgid="1844953803625480623">"לוחצים על מקש אחד בכל פעם לקיצורי הדרך במקום ללחוץ על כמה מקשים בו-זמנית"</string>
+    <string name="sticky_keys_summary" msgid="1844953803625480623">"מקישים אחד-אחד על רצף של מקשי קיצור, ולא צריך ללחוץ עליהם בו-זמנית."</string>
     <string name="keyboard_shortcuts_helper" msgid="2553221039203165344">"מקשי קיצור"</string>
     <string name="keyboard_shortcuts_helper_summary" msgid="5979507677602559203">"הצגת רשימה של מקשי הקיצור"</string>
     <string name="language_and_input_for_work_category_title" msgid="2546950919124199743">"מקלדות וכלים בפרופיל העבודה"</string>
@@ -1947,7 +1947,7 @@
     <string name="trackpad_go_back_summary" msgid="4201901101085902768">"מחליקים ימינה או שמאלה עם שלוש אצבעות"</string>
     <string name="trackpad_go_home_title" msgid="2146525662148291552">"מעבר לדף הבית"</string>
     <string name="trackpad_go_home_summary" msgid="2222744701528360887">"מחליקים למעלה עם שלוש אצבעות"</string>
-    <string name="trackpad_recent_apps_title" msgid="8195970908411585445">"האפליקציות האחרונות"</string>
+    <string name="trackpad_recent_apps_title" msgid="8195970908411585445">"אפליקציות שהיו בשימוש לאחרונה"</string>
     <string name="trackpad_recent_apps_summary" msgid="2685092851677573794">"מחליקים למעלה עם שלוש אצבעות ומחזיקים"</string>
     <string name="trackpad_notifications_title" msgid="3521663305043747880">"התראות"</string>
     <string name="trackpad_notifications_summary" msgid="7663647367648690040">"מחליקים למטה עם שלוש אצבעות"</string>
@@ -3134,7 +3134,7 @@
     <string name="sim_signal_strength" msgid="6351052821700294501">"‏<xliff:g id="DBM">%1$d</xliff:g> dBm ‏<xliff:g id="ASU">%2$d</xliff:g> asu"</string>
     <string name="sim_notification_title" msgid="6839556577405929262">"‏כרטיסי ה-SIM שונו"</string>
     <string name="sim_notification_summary" msgid="5593339846307029991">"יש להקיש כדי להגדיר"</string>
-    <string name="sim_calls_ask_first_prefs_title" msgid="3077694594349657933">"אני רוצה לאשר בכל פעם"</string>
+    <string name="sim_calls_ask_first_prefs_title" msgid="3077694594349657933">"אני רוצה לבחור בכל פעם"</string>
     <string name="sim_selection_required_pref" msgid="231437651041498359">"יש לציין בחירה"</string>
     <string name="sim_selection_channel_title" msgid="3193666315607572484">"‏בחירת SIM"</string>
     <string name="dashboard_title" msgid="5660733037244683387">"הגדרות"</string>
@@ -3811,7 +3811,7 @@
     <string name="device_feedback" msgid="5351614458411688608">"שליחת משוב על המכשיר הזה"</string>
     <string name="restr_pin_enter_admin_pin" msgid="4435410646541671918">"יש להזין את קוד הגישה של מנהל המכשיר"</string>
     <string name="switch_on_text" msgid="5664542327776075105">"פועל"</string>
-    <string name="switch_off_text" msgid="1315547447393646667">"מצב כבוי"</string>
+    <string name="switch_off_text" msgid="1315547447393646667">"מושבת"</string>
     <string name="nfc_setting_on" msgid="7701896496026725772">"התכונה פועלת"</string>
     <string name="nfc_setting_off" msgid="7142103438532732309">"התכונה כבויה"</string>
     <string name="screen_pinning_switch_on_text" msgid="6971386830247542552">"פועלת"</string>
@@ -5032,8 +5032,8 @@
     <string name="show_clip_access_notification_summary" msgid="474090757777203207">"הצגת הודעה בזמן גישה של אפליקציות לטקסט, לתמונות או לכל תוכן אחר שהעתקת"</string>
     <string name="all_apps" msgid="3054120149509114789">"כל האפליקציות"</string>
     <string name="request_manage_bluetooth_permission_dont_allow" msgid="8798061333407581300">"אין אישור"</string>
-    <string name="uwb_settings_title" msgid="8578498712312002231">"‏תחום רחב סרט (UWB)"</string>
-    <string name="uwb_settings_summary" msgid="3074271396764672268">"‏עזרה בזיהוי המיקום היחסי של מכשירים עם תחום רחב סרט (UWB) בקרבת מקום"</string>
+    <string name="uwb_settings_title" msgid="8578498712312002231">"‏Ultra Wideband ‏(UWB)"</string>
+    <string name="uwb_settings_summary" msgid="3074271396764672268">"‏עזרה בזיהוי המיקום היחסי של מכשירים עם UWB בקרבת מקום"</string>
     <string name="uwb_settings_summary_airplane_mode" msgid="1328864888135086484">"‏כיבוי מצב טיסה לשימוש בתחום רחב סרט (UWB)"</string>
     <string name="uwb_settings_summary_no_uwb_regulatory" msgid="3465456428217979428">"‏UWB לא זמין במיקום הנוכחי"</string>
     <string name="thread_network_settings_title" msgid="4212301030523859220">"‏פרוטוקול Thread"</string>
@@ -5255,8 +5255,8 @@
     <string name="audio_sharing_switch_title" msgid="7052827328670825701">"שיתוף האודיו"</string>
     <string name="calls_and_alarms_device_title" msgid="6993559028175454198">"שיחות והתראות"</string>
     <string name="audio_sharing_description" msgid="1660255584523640628">"‏ההגדרה הזו מאפשרת לאנשים להאזין למדיה ביחד איתך. מאזינים צריכים אוזניות LE Audio משלהם."</string>
-    <string name="audio_sharing_device_group_title" msgid="3019780581643956943">"מכשירים פעילים לאחסון מדיה"</string>
-    <string name="audio_sharing_call_audio_title" msgid="7978867452289583929">"שיחת אודיו"</string>
+    <string name="audio_sharing_device_group_title" msgid="3019780581643956943">"מכשירי מדיה פעילים"</string>
+    <string name="audio_sharing_call_audio_title" msgid="7978867452289583929">"אודיו מהשיחה"</string>
     <string name="audio_sharing_call_audio_description" msgid="6573621048260616924">"הפעלה רק ב-<xliff:g id="DEVICE_NAME">%1$s</xliff:g>"</string>
     <string name="audio_sharing_test_sound_title" msgid="6438868185641027763">"השמעת צליל בדיקה"</string>
     <string name="audio_sharing_test_sound_description" msgid="4072462502371937399">"כל המאזינים ישמעו את זה"</string>
@@ -5270,9 +5270,9 @@
     <string name="audio_sharing_footer_description" msgid="4786942197840271680">"‏התכונה \'שיתוף אודיו\' תומכת ב-‎Auracast™‎"</string>
     <string name="audio_sharing_stream_name_dialog_title" msgid="6706027295417556499">"השם של שידור האודיו"</string>
     <string name="audio_sharing_stream_password_dialog_title" msgid="4148196538860845705">"הסיסמה של שידור האודיו"</string>
-    <string name="audio_sharing_media_device_group_title" msgid="4850674234590549565">"מכשירים אחרים לאחסון מדיה"</string>
-    <string name="audio_sharing_summary_on" msgid="611197542982323788">"מצב פעיל"</string>
-    <string name="audio_sharing_summary_off" msgid="8833198995257547378">"מצב מושבת"</string>
+    <string name="audio_sharing_media_device_group_title" msgid="4850674234590549565">"מכשירי מדיה אחרים"</string>
+    <string name="audio_sharing_summary_on" msgid="611197542982323788">"התכונה פועלת"</string>
+    <string name="audio_sharing_summary_off" msgid="8833198995257547378">"התכונה מושבתת"</string>
     <string name="audio_sharing_share_dialog_title" msgid="427514648577553621">"שיתוף האודיו שלך"</string>
     <string name="audio_sharing_share_dialog_subtitle" msgid="5208582843732057871">"<xliff:g id="DEVICE_NAME1">%1$s</xliff:g> וגם <xliff:g id="DEVICE_NAME2">%2$s</xliff:g>"</string>
     <string name="audio_sharing_share_button_label" msgid="3895900668317105537">"שיתוף האודיו"</string>
@@ -5342,6 +5342,6 @@
     <string name="audio_streams_main_page_scan_qr_code_title" msgid="8337270277392468895">"‏סריקת קוד QR"</string>
     <string name="audio_streams_main_page_scan_qr_code_summary" msgid="1991792283368249499">"‏אפשר להתחיל להאזין על ידי סריקת קוד ה-QR של השידור"</string>
     <string name="audio_streams_main_page_password_dialog_join_button" msgid="2967747276379153408">"האזנה לשידור"</string>
-    <string name="audio_streams_main_page_qr_code_scanner_summary" msgid="5312980105735143360">"‏סריקת קוד QR של שידור אודיו כדי להאזין עם <xliff:g id="DEVICE_NAME">%1$s</xliff:g>"</string>
+    <string name="audio_streams_main_page_qr_code_scanner_summary" msgid="5312980105735143360">"‏צריך לסרוק קוד QR של שידור אודיו כדי להאזין עם <xliff:g id="DEVICE_NAME">%1$s</xliff:g>"</string>
     <string name="audio_streams_main_page_password_dialog_cannot_edit" msgid="9020898619297520153">"אי אפשר לערוך את הסיסמה בזמן השיתוף. כדי לשנות את הסיסמה, קודם צריך להשבית את שיתוף האודיו."</string>
 </resources>
