--- a/res/values-kk/strings.xml
+++ b/res/values-kk/strings.xml
@@ -969,7 +969,7 @@
     <string name="wifi_privacy_settings_ephemeral_summary" msgid="8502084692297249372">"Кездейсоқ MAC"</string>
     <string name="wifi_dpp_add_device_to_network" msgid="6141246783457722976">"Құрылғыны қосу"</string>
     <string name="wifi_dpp_center_qr_code" msgid="5270782275746178104">"Құрылғыны “<xliff:g id="SSID">%1$s</xliff:g>” желісіне қосу үшін төмендегі QR кодын ортасына туралаңыз"</string>
-    <string name="wifi_dpp_scan_qr_code" msgid="3543923817779444434">"QR кодын сканерлеу"</string>
+    <string name="wifi_dpp_scan_qr_code" msgid="3543923817779444434">"QR кодын сканерлеңіз"</string>
     <string name="wifi_dpp_scan_qr_code_join_network" msgid="969985020363459133">"“<xliff:g id="SSID">%1$s</xliff:g>” желісіне жалғау үшін төмендегі QR кодын ортасына туралаңыз"</string>
     <string name="wifi_dpp_scan_qr_code_join_unknown_network" msgid="3180020429793614145">"Wi‑Fi желісіне қосылу үшін QR кодын сканерлеңіз."</string>
     <string name="wifi_dpp_share_wifi" msgid="2431744447544057866">"Wi‑Fi желісін бөлісу"</string>
@@ -1665,7 +1665,7 @@
     <string name="lockpassword_confirm_your_password_header_frp" msgid="7932240547542564033">"Құпия сөзді растау"</string>
     <string name="lockpassword_remote_validation_header" msgid="4992647285784962073">"Жеке басты растау"</string>
     <string name="lockpassword_remote_validation_pattern_details" msgid="4655537780358707983">"Google аккаунттарын, параметрлерін және т.б. тасымалдау үшін басқа құрылғыңыздың өрнегін енгізіңіз. Өрнегіңіз шифрланды."</string>
-    <string name="lockpassword_remote_validation_pin_details" msgid="2373654227583206297">"Google аккаунттарын, параметрлерін және т.б. тасымалдау үшін басқа құрылғыңыздың PIN кодын енгізіңіз. PIN кодыңыз шифрланды."</string>
+    <string name="lockpassword_remote_validation_pin_details" msgid="2373654227583206297">"Google аккаунттарын, параметрлерін және т.б. тасымалдау үшін басқа құрылғыңыздың PIN кодын енгізіңіз. PIN кодыңыз шифрланған."</string>
     <string name="lockpassword_remote_validation_password_details" msgid="3482328925925888340">"Google аккаунттарын, параметрлерін және т.б. тасымалдау үшін басқа құрылғыңыздың құпия сөзін енгізіңіз. Құпия сөзіңіз шифрланды."</string>
     <string name="lockpassword_remote_validation_set_pattern_as_screenlock" msgid="7595104317648465901">"Құрылғының құлпын ашу үшін өрнекті пайдалану"</string>
     <string name="lockpassword_remote_validation_set_pin_as_screenlock" msgid="509672303005547218">"Құрылғының құлпын ашу үшін PIN кодын пайдалану"</string>
@@ -4548,7 +4548,7 @@
     <string name="media_output_label_title" msgid="4139048973886819148">"<xliff:g id="LABEL">%s</xliff:g> қолданбасын ойнату орны:"</string>
     <string name="media_output_title_without_playing" msgid="3339321669132875821">"Аудио әрі қарай ойнатылады"</string>
     <string name="media_output_default_summary" msgid="4200343059396412376">"Осы құрылғы"</string>
-    <string name="media_output_audio_sharing" msgid="8169294522817470115">"Аудио бөлісу"</string>
+    <string name="media_output_audio_sharing" msgid="8169294522817470115">"Аудио беріліп жатыр"</string>
     <string name="media_out_summary_ongoing_call_state" msgid="475188726850090363">"Қоңыраулар кезінде қолжетімді емес"</string>
     <string name="take_call_on_title" msgid="1159417893879946757">"Қоңырауды қабылдау құрылғысы"</string>
     <string name="cannot_change_apn_toast" msgid="296540724089240405">"Бұл APN параметрлерін өзгерту мүмкін емес."</string>
@@ -5253,11 +5253,11 @@
     <string name="audio_sharing_title" msgid="4144157137502923821">"Аудио бөлісу"</string>
     <string name="audio_sharing_switch_title" msgid="7052827328670825701">"Аудионы бөлісу"</string>
     <string name="calls_and_alarms_device_title" msgid="6993559028175454198">"Қоңыраулар мен оятқыштар"</string>
-    <string name="audio_sharing_description" msgid="1660255584523640628">"Адамдарға мультимедианы сізбен бірге тыңдауға рұқсат етіңіз. Тыңдаушыларға өз LE Audio құлақаспаптарын пайдалану қажет."</string>
-    <string name="audio_sharing_device_group_title" msgid="3019780581643956943">"Белсенді медиа құрылғылар"</string>
+    <string name="audio_sharing_description" msgid="1660255584523640628">"Адамдарға мультимедианы сізбен бірге тыңдауға рұқсат етіңіз. Тыңдаушылар өз LE Audio құлақаспаптарын пайдалануы қажет."</string>
+    <string name="audio_sharing_device_group_title" msgid="3019780581643956943">"Істеп тұрған медиа құрылғылар"</string>
     <string name="audio_sharing_call_audio_title" msgid="7978867452289583929">"Қоңырау кезіндегі дыбыс"</string>
     <string name="audio_sharing_call_audio_description" msgid="6573621048260616924">"Тек <xliff:g id="DEVICE_NAME">%1$s</xliff:g> құрылғысында ойнату"</string>
-    <string name="audio_sharing_test_sound_title" msgid="6438868185641027763">"Сынама дыбыс ойнатыңыз"</string>
+    <string name="audio_sharing_test_sound_title" msgid="6438868185641027763">"Дыбысты тексеріп көріңіз"</string>
     <string name="audio_sharing_test_sound_description" msgid="4072462502371937399">"Барлық тыңдаушы оны естуі керек."</string>
     <string name="audio_sharing_stream_settings_title" msgid="1374391898689242036">"Аудио трансляция параметрлері"</string>
     <string name="audio_sharing_stream_name_title" msgid="8156859441897180940">"Атауы"</string>
@@ -5282,11 +5282,11 @@
     <string name="audio_sharing_close_button_label" msgid="2666534149100498574">"Жабу"</string>
     <string name="audio_sharing_dialog_connect_device_content" msgid="2873230647152283734">"Басқа үйлесімді құлақаспапты жалғаңыз немесе трансляция атауын және құпия сөзін басқа адамға жіберіңіз."</string>
     <string name="audio_sharing_dialog_pair_device_content" msgid="3136997898244863470">"Басқа үйлесімді құлақаспапты жұптаңыз немесе аудио трансляцияның QR кодын басқа адамға жіберіңіз."</string>
-    <string name="audio_sharing_sharing_label" msgid="1038021053061111508">"Аудио бөлісу әрекеті орындалып жатыр."</string>
+    <string name="audio_sharing_sharing_label" msgid="1038021053061111508">"Аудио беріліп жатыр"</string>
     <string name="audio_sharing_pair_button_label" msgid="7987236990273083588">"Жаңа құрылғыны жұптау"</string>
-    <string name="audio_sharing_qrcode_button_label" msgid="3207039106555097659">"QR кодты көрсету"</string>
+    <string name="audio_sharing_qrcode_button_label" msgid="3207039106555097659">"QR кодын көрсету"</string>
     <string name="audio_sharing_notification_title" msgid="1204798942946033005">"Аудио бөлісіп жатырсыз"</string>
-    <string name="audio_sharing_notification_content" msgid="1577180829878785642">"Тыңдап жатқан адамдар сізде ойнатылатын мультимедианы тыңдай алады. Олар қоңырауларды естімейді."</string>
+    <string name="audio_sharing_notification_content" msgid="1577180829878785642">"Басқалар мультимедианы ғана тыңдайды, қоңырауларды естімейді."</string>
     <string name="audio_sharing_stop_button_label" msgid="8770519671470608849">"Бөлісуді тоқтату"</string>
     <string name="audio_sharing_settings_button_label" msgid="8574808650318270491">"Параметрлер"</string>
     <string name="audio_sharing_disconnect_dialog_title" msgid="2192751727237748602">"Ажыратылатын құрылғыны таңдаңыз"</string>
