--- a/res/values-mr/strings.xml
+++ b/res/values-mr/strings.xml
@@ -689,7 +689,7 @@
     <string name="face_unlock_set_unlock_pin" msgid="9034912683791069602">"पिन • फेस"</string>
     <string name="face_unlock_set_unlock_password" msgid="5874950853246424756">"पासवर्ड • फेस"</string>
     <string name="face_unlock_skip_face" msgid="189695556498300008">"फेस अनलॉक शिवाय पुढे सुरू ठेवा"</string>
-    <string name="biometrics_unlock_skip_biometrics" msgid="7399882488272450182">"फिंगरप्रिंट किंवा फेस अनलॉकशिवाय पुढे सुरू ठेवा"</string>
+    <string name="biometrics_unlock_skip_biometrics" msgid="7399882488272450182">"फिंगरप्रिंट किंवा चेहरा अनलॉकशिवाय पुढे सुरू ठेवा"</string>
     <string name="unlock_set_unlock_mode_off" msgid="4632139864722236359">"काहीही नाही"</string>
     <string name="unlock_set_unlock_mode_none" msgid="5596049938457028214">"स्‍वाइप करा"</string>
     <string name="unlock_set_unlock_mode_pattern" msgid="1926480143883094896">"पॅटर्न"</string>
