--- a/res/values-ms/strings.xml
+++ b/res/values-ms/strings.xml
@@ -689,7 +689,7 @@
     <string name="face_unlock_set_unlock_pin" msgid="9034912683791069602">"PIN • Wajah"</string>
     <string name="face_unlock_set_unlock_password" msgid="5874950853246424756">"Kata Laluan • Wajah"</string>
     <string name="face_unlock_skip_face" msgid="189695556498300008">"Teruskan tanpa Buka Kunci Wajah"</string>
-    <string name="biometrics_unlock_skip_biometrics" msgid="7399882488272450182">"Teruskan tindakan tanpa cap jari atau wajah"</string>
+    <string name="biometrics_unlock_skip_biometrics" msgid="7399882488272450182">"Teruskan tanpa cap jari atau wajah"</string>
     <string name="unlock_set_unlock_mode_off" msgid="4632139864722236359">"Tiada"</string>
     <string name="unlock_set_unlock_mode_none" msgid="5596049938457028214">"Leret"</string>
     <string name="unlock_set_unlock_mode_pattern" msgid="1926480143883094896">"Corak"</string>
@@ -5289,7 +5289,7 @@
     <string name="audio_sharing_notification_content" msgid="1577180829878785642">"Orang yang mendengar boleh mendengar media anda. Mereka tidak akan mendengar panggilan."</string>
     <string name="audio_sharing_stop_button_label" msgid="8770519671470608849">"Hentikan perkongsian"</string>
     <string name="audio_sharing_settings_button_label" msgid="8574808650318270491">"Tetapan"</string>
-    <string name="audio_sharing_disconnect_dialog_title" msgid="2192751727237748602">"Pilih peranti untuk memutuskan sambungan"</string>
+    <string name="audio_sharing_disconnect_dialog_title" msgid="2192751727237748602">"Pilih peranti yang akan diputuskan sambungan"</string>
     <string name="audio_sharing_dialog_disconnect_content" msgid="3840488888970653308">"Hanya 2 peranti boleh berkongsi audio pada satu masa"</string>
     <string name="audio_sharing_disconnect_device_button_label" msgid="4272897217708930576">"Putuskan sambungan <xliff:g id="DEVICE_NAME">%1$s</xliff:g>"</string>
     <string name="audio_sharing_stop_dialog_title" msgid="4872853738164232075">"Sambungkan <xliff:g id="DEVICE_NAME">%1$s</xliff:g> ?"</string>
