--- a/res/values-nb/strings.xml
+++ b/res/values-nb/strings.xml
@@ -5329,7 +5329,7 @@
     <string name="audio_streams_media_service_notification_leave_broadcast_text" msgid="4938656134300913647">"Slutt å lytte"</string>
     <string name="audio_streams_dialog_no_le_device_title" msgid="3931163990976742282">"Koble til kompatible hodetelefoner"</string>
     <string name="audio_streams_dialog_no_le_device_button" msgid="4484355549428642588">"Koble til en enhet"</string>
-    <string name="audio_streams_detail_page_title" msgid="7884132061275273766">"Detaljer for lydstrømmen"</string>
+    <string name="audio_streams_detail_page_title" msgid="7884132061275273766">"Detaljer om lydstrømmen"</string>
     <string name="audio_streams_qr_code_page_title" msgid="9169570362469544641">"QR-kode for lydstrømmen"</string>
     <string name="audio_streams_qr_code_page_password" msgid="7268475614131297060">"Passord: <xliff:g id="PASSWORD">%1$s</xliff:g>"</string>
     <string name="audio_streams_qr_code_page_description" msgid="1317961663706630428">"For å lytte til <xliff:g id="STREAM_NAME">%1$s</xliff:g> kan folk koble kompatible hodetelefoner til Android-enheten sin. Deretter kan de skanne denne QR-koden."</string>
