--- a/res/values-or/strings.xml
+++ b/res/values-or/strings.xml
@@ -226,7 +226,7 @@
     <string name="action_drag_label_move_bottom" msgid="6266165197792827003">"ତଳକୁ ଘୁଞ୍ଚାନ୍ତୁ"</string>
     <string name="action_drag_label_remove" msgid="1034900377796780568">"ଭାଷାକୁ କାଢ଼ିଦିଅନ୍ତୁ"</string>
     <string name="activity_picker_label" msgid="351250401590691126">"କାର୍ଯ୍ୟକଳାପ ବାଛନ୍ତୁ"</string>
-    <string name="cancel" msgid="5780102414089664898">"ବାତିଲ"</string>
+    <string name="cancel" msgid="5780102414089664898">"ବାତିଲ କରନ୍ତୁ"</string>
     <string name="okay" msgid="4827099303045669054">"ଠିକ ଅଛି"</string>
     <string name="forget" msgid="3754013654135912783">"ଭୁଲିଯାଆନ୍ତୁ"</string>
     <string name="save" msgid="3125033126936493822">"ସେଭ୍‌ କରନ୍ତୁ"</string>
@@ -277,7 +277,7 @@
     <string name="owner_info_settings_title" msgid="3555626140700093017">"ଲକ ସ୍କ୍ରିନରେ ଟେକ୍ସଟ ଯୋଗ କରନ୍ତୁ"</string>
     <string name="owner_info_settings_summary" msgid="347238313388083297">"କିଛି ନାହିଁ"</string>
     <string name="owner_info_settings_edit_text_hint" msgid="841926875876050274">"ଯେପରିକି ଶୁଭ୍ରାର Android।"</string>
-    <string name="location_settings_title" msgid="8375074508036087178">"ଲୋକେସନ୍‌"</string>
+    <string name="location_settings_title" msgid="8375074508036087178">"ଲୋକେସନ"</string>
     <string name="location_settings_primary_switch_title" msgid="8849081766644685127">"ଲୋକେସନ ବ୍ୟବହାର କରନ୍ତୁ"</string>
     <string name="location_settings_summary_location_off" msgid="4797932754681162262">"ବନ୍ଦ"</string>
     <string name="location_settings_summary_location_on" msgid="4273299717586679786">"{count,plural, =1{ଚାଲୁ ଅଛି / # ଆପର ଲୋକେସନକୁ ଆକ୍ସେସ ଅଛି}other{ଚାଲୁ ଅଛି / # ଆପ୍ସର ଲୋକେସନକୁ ଆକ୍ସେସ ଅଛି}}"</string>
@@ -372,7 +372,7 @@
     <string name="security_settings_fingerprint_enroll_introduction_footer_title_consent_1" msgid="1122676690472680734">"ଆପଣଙ୍କ ଏବଂ ଆପଣଙ୍କ ପିଲା ପାଖରେ ନିୟନ୍ତ୍ରଣ ଅଛି"</string>
     <string name="security_settings_fingerprint_enroll_introduction_footer_title_2" msgid="5663733424583416266">"ମନେ ରଖନ୍ତୁ"</string>
     <string name="security_settings_fingerprint_enroll_introduction_message_unlock_disabled" msgid="8957789840251747092">"ଫୋନକୁ ଅନଲକ କରିବା କିମ୍ୱା କ୍ରୟକୁ ଅନୁମୋଦନ କରିବା ପାଇଁ ନିଜ ଟିପଚିହ୍ନର ବ୍ୟବହାର କରନ୍ତୁ।\n\nଧ୍ୟାନଦିଅନ୍ତୁ: ଏହି ଡିଭାଇସ ଅନଲକ କରିବାକୁ ଆପଣ ଟିପଚିହ୍ନ ବ୍ୟବହାର କରିପାରିବେ ନାହିଁ। ଅଧିକ ସୂଚନା ପାଇଁ, ଆପଣଙ୍କ ସଂସ୍ଥାର ଆଡମିନଙ୍କ ସହ କଣ୍ଟାକ୍ଟ କରନ୍ତୁ।"</string>
-    <string name="security_settings_fingerprint_enroll_introduction_cancel" msgid="6086532316718920562">"ବାତିଲ"</string>
+    <string name="security_settings_fingerprint_enroll_introduction_cancel" msgid="6086532316718920562">"ବାତିଲ କରନ୍ତୁ"</string>
     <string name="security_settings_fingerprint_enroll_introduction_no_thanks" msgid="1663906389456119842">"ବର୍ତ୍ତମାନ ନୁହେଁ"</string>
     <string name="security_settings_fingerprint_enroll_introduction_agree" msgid="4068276083536421828">"ମୁଁ ରାଜି"</string>
     <string name="setup_fingerprint_enroll_skip_title" msgid="2473807887676247264">"ଟିପଚିହ୍ନ ବାଦ ଦେବେ?"</string>
@@ -464,7 +464,7 @@
     <string name="security_settings_sfps_enroll_find_sensor_title" msgid="8327884364635804363">"ଏହାକୁ ନଦବାଇ ପାୱାର ବଟନକୁ ସ୍ପର୍ଶ କରନ୍ତୁ"</string>
     <string name="security_settings_udfps_enroll_find_sensor_title" msgid="8077484429913330179">"ଆପଣଙ୍କ ଟିପଚିହ୍ନ କିପରି ସେଟ ଅପ କରିବେ"</string>
     <string name="security_settings_fingerprint_enroll_find_sensor_message" msgid="6160543980992596286">"ଏହା ଆପଣଙ୍କ ଫୋନ୍‌ର ପଛରେ ଅଛି। ନିଜ ପ୍ରଥମ ଆଙ୍ଗୁଠିର ବ୍ୟବହାର କରନ୍ତୁ।"</string>
-    <string name="security_settings_udfps_enroll_find_sensor_message" msgid="8383106460819519961">"ଟିପଚିହ୍ନ ସେନ୍ସର ଆପଣଙ୍କ ସ୍କ୍ରିନରେ ଅଛି। ପରବର୍ତ୍ତୀ ସ୍କ୍ରିନରେ ଆପଣ ଆପଣଙ୍କର ଟିପଚିହ୍ନକୁ କେପଚର କରିବେ।"</string>
+    <string name="security_settings_udfps_enroll_find_sensor_message" msgid="8383106460819519961">"ଟିପଚିହ୍ନ ସେନ୍ସର ଆପଣଙ୍କ ସ୍କ୍ରିନରେ ଅଛି। ଆପଣ ପରବର୍ତ୍ତୀ ସ୍କ୍ରିନରେ ଆପଣଙ୍କର ଟିପଚିହ୍ନକୁ କେପଚର କରିବେ।"</string>
     <string name="security_settings_udfps_enroll_find_sensor_start_button" msgid="3172268783620336357">"ଆରମ୍ଭ କରନ୍ତୁ"</string>
     <string name="security_settings_udfps_enroll_a11y" msgid="1899453114050362235">"ସେନ୍ସର୍ ଖୋଜିବା ପାଇଁ ସ୍କ୍ରିନ୍ ଉପରେ ଆପଣଙ୍କ ଆଙ୍ଗୁଠିକୁ ମୁଭ୍ କରନ୍ତୁ। ଟିପଚିହ୍ନ ସେନ୍ସରକୁ ସ୍ପର୍ଶ କରି ଧରି ରଖନ୍ତୁ।"</string>
     <string name="security_settings_fingerprint_enroll_find_sensor_content_description" msgid="3065850549419750523">"ଡିଭାଇସ୍‌ ଏବଂ ଟିପଚିହ୍ନ ସେନସର୍ ଲୋକେସନ୍‌ ଚିତ୍ରଣ"</string>
@@ -1035,7 +1035,7 @@
     <string name="wifi_modify" msgid="5127926476383659412">"ସଂଶୋଧନ"</string>
     <string name="wifi_save" msgid="2312643132472226807">"ସେଭ୍‍ କରନ୍ତୁ"</string>
     <string name="wifi_failed_save_message" msgid="1830279872341387120">"ନେଟୱାର୍କ୍‌ ସେଭ୍‌ କରି ପାରିଲା ନାହିଁ"</string>
-    <string name="wifi_cancel" msgid="6698897376888935410">"ବାତିଲ"</string>
+    <string name="wifi_cancel" msgid="6698897376888935410">"ବାତିଲ କରନ୍ତୁ"</string>
     <string name="wifi_forget_dialog_title" msgid="4363829200968563164">"ନେଟୱର୍କକୁ ଭୁଲିଯିବେ?"</string>
     <string name="wifi_saved_access_points_summary" msgid="6637163320524940353">"{count,plural, =1{1ଟି ନେଟୱାର୍କ}other{#ଟି ନେଟୱାର୍କ}}"</string>
     <string name="wifi_saved_passpoint_access_points_summary" msgid="8939933724918673785">"{count,plural, =1{1ଟି ସଦସ୍ୟତା}other{#ଟି ସଦସ୍ୟତା}}"</string>
@@ -2040,7 +2040,7 @@
     <string name="color_contrast_preview_email_attachment_name" msgid="852407311884814746">"କ୍ଲାଏଣ୍ଟର ଖର୍ଚ୍ଚ"</string>
     <string name="color_contrast_about_title" msgid="5939566801408667867">"ରଙ୍ଗ କଣ୍ଟ୍ରାଷ୍ଟ ବିଷୟରେ"</string>
     <string name="accessibility_turn_screen_darker_title" msgid="5986223133285858349">"ସ୍କ୍ରିନକୁ ଅଧିକ ଗାଢ଼ା କରନ୍ତୁ"</string>
-    <string name="interaction_control_category_title" msgid="2696474616743882372">"ଇଣ୍ଟରାକସନ୍‌ ନିୟନ୍ତ୍ରଣ"</string>
+    <string name="interaction_control_category_title" msgid="2696474616743882372">"ଇଣ୍ଟରାକ୍ସନ ନିୟନ୍ତ୍ରଣ"</string>
     <string name="accessibility_tap_assistance_title" msgid="1058913033421048284">"ସମୟ ନିୟନ୍ତ୍ରଣଗୁଡ଼ିକ"</string>
     <string name="accessibility_system_controls_title" msgid="6403287349518987624">"ସିଷ୍ଟମ ନିୟନ୍ତ୍ରଣଗୁଡ଼ିକ"</string>
     <string name="user_installed_services_category_title" msgid="2639470729311439731">"ଡାଉନଲୋଡ ହୋଇଥିବା ଆପ୍ସ"</string>
@@ -4235,7 +4235,7 @@
     <string name="keywords_long_background_tasks" msgid="5788956269136054574">"ଅଧିକ ସମୟର ଜବ, ଡାଟା ଟ୍ରାନ୍ସଫର, ପୃଷ୍ଠପଟର ଟାସ୍କଗୁଡ଼ିକ"</string>
     <string name="reset_shortcut_manager_throttling" msgid="2183940254903144298">"ShortcutManager ରେଟ-ଲିମିଟିଂକୁ ରିସେଟ କରନ୍ତୁ"</string>
     <string name="reset_shortcut_manager_throttling_complete" msgid="8949943009096885470">"ShortcutManager ର ହାର-ସୀମିତକରଣ ରିସେଟ୍‌ କରିଦିଆଗଲା"</string>
-    <string name="notification_suggestion_title" msgid="6309263655965785411">"ଲକ୍‌ ସ୍କ୍ରୀନ୍‌ ଉପରେ ନିୟନ୍ତ୍ରଣ ସମ୍ପର୍କିତ ବିଜ୍ଞପ୍ତି"</string>
+    <string name="notification_suggestion_title" msgid="6309263655965785411">"ଲକ ସ୍କ୍ରିନରେ ସୂଚନା ନିୟନ୍ତ୍ରଣ କରନ୍ତୁ"</string>
     <string name="notification_suggestion_summary" msgid="7615611244249276113">"ବିଜ୍ଞପ୍ତି କଣ୍ଟେଣ୍ଟକୁ ଦେଖାନ୍ତୁ କିମ୍ୱା ଲୁଚାନ୍ତୁ"</string>
     <string name="page_tab_title_support" msgid="3235725053332345773">"ଟିପ୍ସ ଓ ସପୋର୍ଟ"</string>
     <string name="developer_smallest_width" msgid="632354817870920911">"ସବୁଠାରୁ ଛୋଟ ଓସାର"</string>
@@ -4835,7 +4835,7 @@
     <string name="error_capturing_system_heap_dump_message" msgid="2352983250048200052">"ସିଷ୍ଟମ୍ ହିପ୍ ଡମ୍ପ୍ କ୍ୟାପଚର୍ ହେଲାନାହିଁ"</string>
     <string name="automatic_system_heap_dump_title" msgid="4093306504711109479">"ସ୍ବଚାଳିତ ଭାବେ ସିଷ୍ଟମ୍ ହିପ୍ ଡମ୍ପ କ୍ୟାପ୍‌ଚର୍ କରନ୍ତୁ"</string>
     <string name="automatic_system_heap_dump_summary" msgid="4060846186592886986">"ଯେତେବେଳେ Android ସିଷ୍ଟମ୍ ଅଧିକ ମେମୋରୀ ବ୍ୟବହାର କରେ, ସେତେବେଳେ ଏଥି ପାଇଁ ସ୍ବଚାଳିତ ଭାବେ ଏକ ହେଡ୍ ଡମ୍ପ କ୍ୟାପ୍ଚର୍ କରନ୍ତୁ"</string>
-    <string name="wifi_disconnect_button_text" msgid="5698154296678571998">"ବିଚ୍ଛିନ୍ନ କରନ୍ତୁ"</string>
+    <string name="wifi_disconnect_button_text" msgid="5698154296678571998">"ଡିସକନେକ୍ଟ କରନ୍ତୁ"</string>
     <string name="wfc_disclaimer_emergency_limitation_title_text" msgid="8276287227589397162">"ଜରୁରୀକାଳୀନ କଲ୍"</string>
     <string name="wfc_disclaimer_emergency_limitation_desc_text" msgid="5503902001191552196">"ଆପଣଙ୍କ ବାହକ ଦ୍ୱାରା ୱାଇ-ଫାଇ କଲିଂରେ ଜରୁରୀକାଳୀନ କଲ୍ ଉପଲବ୍ଧ ନାହିଁ।\nଏକ ଜରୁରୀକାଳୀନ କଲ୍ କରିବାକୁ ଡିଭାଇସ୍ ସ୍ୱଚାଳିତ ଭାବେ ମୋବାଇଲ୍ ନେଟ୍‌ୱାର୍କକୁ ପରିବର୍ତ୍ତନ ହୋଇଥାଏ।\nଜରୁରୀକାଳୀନ କଲ୍ କେବଳ ମୋବାଇଲ୍ ନେଟ୍‌ୱାର୍କ ଥିବା ସ୍ଥାନଗୁଡ଼ିକରେ ସମ୍ଭବ।"</string>
     <string name="wifi_calling_summary" msgid="8566648389959032967">"କଲ୍‌ର ମାନରେ ଉନ୍ନତି ପାଇଁ ପାଇଁ ୱାଇ-ଫାଇର ବ୍ୟବହାର କରନ୍ତୁ"</string>
@@ -5292,7 +5292,7 @@
     <string name="audio_sharing_settings_button_label" msgid="8574808650318270491">"ସେଟିଂସ"</string>
     <string name="audio_sharing_disconnect_dialog_title" msgid="2192751727237748602">"ଡିସକନେକ୍ଟ କରିବାକୁ ଏକ ଡିଭାଇସ ବାଛନ୍ତୁ"</string>
     <string name="audio_sharing_dialog_disconnect_content" msgid="3840488888970653308">"ଥରକେ କେବଳ 2 ଡିଭାଇସ ଅଡିଓ ସେୟାର କରିପାରିବ"</string>
-    <string name="audio_sharing_disconnect_device_button_label" msgid="4272897217708930576">"<xliff:g id="DEVICE_NAME">%1$s</xliff:g> ବିଚ୍ଛିନ୍ନ କରନ୍ତୁ"</string>
+    <string name="audio_sharing_disconnect_device_button_label" msgid="4272897217708930576">"<xliff:g id="DEVICE_NAME">%1$s</xliff:g> ଡିସକନେକ୍ଟ କରନ୍ତୁ"</string>
     <string name="audio_sharing_stop_dialog_title" msgid="4872853738164232075">"<xliff:g id="DEVICE_NAME">%1$s</xliff:g>କୁ କନେକ୍ଟ କରିବେ?"</string>
     <string name="audio_sharing_stop_dialog_content" msgid="6371546856710692910">"ଆପଣ <xliff:g id="DEVICE_NAME">%1$s</xliff:g> ସହିତ ଅଡିଓ ସେୟାର କରିବା ବନ୍ଦ କରିବେ"</string>
     <string name="audio_sharing_stop_dialog_with_two_content" msgid="2119020725467967219">"ଆପଣ <xliff:g id="DEVICE_NAME1">%1$s</xliff:g> ଏବଂ <xliff:g id="DEVICE_NAME2">%2$s</xliff:g> ସହିତ ଅଡିଓ ସେୟାର କରିବା ବନ୍ଦ କରିବେ"</string>
