--- a/res/values-sl/strings.xml
+++ b/res/values-sl/strings.xml
@@ -761,7 +761,7 @@
     <string name="unlock_footer_high_complexity_requested" msgid="4471274783909915352">"Aplikacija <xliff:g id="APP_NAME">%1$s</xliff:g> priporoča močno kodo PIN ali geslo, sicer morda ne bo delovala, kot je pričakovano"</string>
     <string name="unlock_footer_medium_complexity_requested" msgid="5515870066751600640">"Aplikacija <xliff:g id="APP_NAME">%1$s</xliff:g> priporoča novo kodo PIN ali geslo, sicer morda ne bo delovala, kot je pričakovano"</string>
     <string name="unlock_footer_low_complexity_requested" msgid="2517656037576567971">"Aplikacija <xliff:g id="APP_NAME">%1$s</xliff:g> priporoča nov vzorec, kodo PIN ali geslo, sicer morda ne bo delovala, kot je pričakovano"</string>
-    <string name="unlock_footer_none_complexity_requested" msgid="8534900170428140529">"Aplikacija <xliff:g id="APP_NAME">%1$s</xliff:g> priporoča novo zaklepanje zaslona."</string>
+    <string name="unlock_footer_none_complexity_requested" msgid="8534900170428140529">"<xliff:g id="APP_NAME">%1$s</xliff:g> priporoča novo zaklepanje zaslona."</string>
     <string name="lock_failed_attempts_before_wipe" msgid="6874652886647631418">"Poskusite znova. Poskus <xliff:g id="CURRENT_ATTEMPTS">%1$d</xliff:g> od <xliff:g id="TOTAL_ATTEMPTS">%2$d</xliff:g>."</string>
     <string name="lock_last_attempt_before_wipe_warning_title" msgid="7450322567217745999">"Vaši podatki bodo izbrisani"</string>
     <string name="lock_last_pattern_attempt_before_wipe_device" msgid="5816668400104558952">"Če pri naslednjem poskusu vnesete napačen vzorec, bodo podatki v napravi izbrisani."</string>
@@ -4314,7 +4314,7 @@
     <string name="ambient_display_summary" msgid="2650326740502690434">"Če želite preveriti uro, obvestila in druge informacije, se dvakrat dotaknite zaslona."</string>
     <string name="ambient_display_wake_screen_title" msgid="7637678749035378085">"Preklop zaslona iz stanja pripravljenosti"</string>
     <string name="ambient_display_tap_screen_summary" msgid="4480489179996521405">"Če želite preveriti uro, obvestila in druge informacije, se dotaknite zaslona."</string>
-    <string name="emergency_gesture_screen_title" msgid="3280543310204360902">"Nujni primer"</string>
+    <string name="emergency_gesture_screen_title" msgid="3280543310204360902">"Klic v sili"</string>
     <string name="emergency_gesture_switchbar_title" msgid="7421353963329899514">"Uporaba klica v sili"</string>
     <string name="emergency_gesture_screen_summary" msgid="6640521030845132507">"Za zagon spodaj navedenih dejanj vsaj petkrat hitro pritisnite gumb za vklop."</string>
     <string name="emergency_gesture_sound_setting_title" msgid="7153948164862156536">"Predvajanje alarma z odštevanjem"</string>
@@ -5121,7 +5121,7 @@
     <string name="reboot_dialog_reboot_later" msgid="4261717094186904568">"Znova zaženi pozneje"</string>
     <string name="bluetooth_details_spatial_audio_title" msgid="1368071116994002707">"Prostorski zvok"</string>
     <string name="bluetooth_details_spatial_audio_summary" msgid="5026859623681482668">"Zvok iz združljivih predstavnosti dobi prostornejšo razsežnost."</string>
-    <string name="bluetooth_details_head_tracking_title" msgid="5416972521040337799">"Spremljanje položaja glave"</string>
+    <string name="bluetooth_details_head_tracking_title" msgid="5416972521040337799">"Spremljanje premikov glave"</string>
     <string name="bluetooth_details_head_tracking_summary" msgid="3942238746595985395">"Zvok se med premikanjem glave spreminja za naravnejšo izkušnjo."</string>
     <string name="bluetooth_details_permissions_sync_title" msgid="7277580382321003521">"Sinhroniziranje dovoljenj iz telefona"</string>
     <string name="bluetooth_details_permissions_sync_summary" msgid="8125037984381432059">"Uri dodelite enaka dovoljenja za aplikacije, kot ste jih dodelili v tem telefonu"</string>
@@ -5255,7 +5255,7 @@
     <string name="audio_sharing_title" msgid="4144157137502923821">"Deljenje zvoka"</string>
     <string name="audio_sharing_switch_title" msgid="7052827328670825701">"Deli zvok"</string>
     <string name="calls_and_alarms_device_title" msgid="6993559028175454198">"Klici in alarmi"</string>
-    <string name="audio_sharing_description" msgid="1660255584523640628">"Naj tudi drugi skupaj z vami poslušajo vašo predstavnost. Poslušalci potrebujejo svoje slušalke s funkcijo LE zvok."</string>
+    <string name="audio_sharing_description" msgid="1660255584523640628">"Naj tudi drugi skupaj z vami poslušajo vašo predstavnost. Poslušalci potrebujejo svoje slušalke s funkcijo LE zvoka."</string>
     <string name="audio_sharing_device_group_title" msgid="3019780581643956943">"Aktivne predstavnostne naprave"</string>
     <string name="audio_sharing_call_audio_title" msgid="7978867452289583929">"Zvok klica"</string>
     <string name="audio_sharing_call_audio_description" msgid="6573621048260616924">"Predvajanje samo v napravi <xliff:g id="DEVICE_NAME">%1$s</xliff:g>"</string>
@@ -5287,7 +5287,7 @@
     <string name="audio_sharing_sharing_label" msgid="1038021053061111508">"Poteka deljenje zvoka"</string>
     <string name="audio_sharing_pair_button_label" msgid="7987236990273083588">"Seznanitev nove naprave"</string>
     <string name="audio_sharing_qrcode_button_label" msgid="3207039106555097659">"Pokaži kodo QR"</string>
-    <string name="audio_sharing_notification_title" msgid="1204798942946033005">"Vi delite zvok"</string>
+    <string name="audio_sharing_notification_title" msgid="1204798942946033005">"Delite zvok"</string>
     <string name="audio_sharing_notification_content" msgid="1577180829878785642">"Poslušalci lahko slišijo vašo predstavnost. Ne bodo pa slišali klicev."</string>
     <string name="audio_sharing_stop_button_label" msgid="8770519671470608849">"Ustavi deljenje"</string>
     <string name="audio_sharing_settings_button_label" msgid="8574808650318270491">"Nastavitve"</string>
@@ -5320,7 +5320,7 @@
     <string name="audio_streams_dialog_listen" msgid="7290340191504987685">"Poslušaj"</string>
     <string name="audio_streams_dialog_retry" msgid="4456843891970998556">"Poskusi znova"</string>
     <string name="audio_streams_dialog_listen_to_audio_stream" msgid="8585253007762261528">"Poslušanje pretočnega predvajanja zvoka"</string>
-    <string name="audio_streams_dialog_control_volume" msgid="7615062686016713544">"Pretočno predvajanje zvoka se bo izvajalo v napravi <xliff:g id="DEVICE_NAME">%1$s</xliff:g>. Za uravnavanje glasnosti uporabite to napravo."</string>
+    <string name="audio_streams_dialog_control_volume" msgid="7615062686016713544">"Zvok se bo pretočno predvajal v napravi <xliff:g id="DEVICE_NAME">%1$s</xliff:g>. Za uravnavanje glasnosti uporabite to napravo."</string>
     <string name="audio_streams_dialog_cannot_listen" msgid="4432257183698209966">"Pretočnega predvajanja zvoka ni mogoče poslušati"</string>
     <string name="audio_streams_dialog_default_device" msgid="6159800303379303266">"povezane združljive slušalke"</string>
     <string name="audio_streams_activity_title" msgid="6766869545769831935">"Pretočno predvajanje zvoka"</string>
