--- a/res/values-ta/strings.xml
+++ b/res/values-ta/strings.xml
@@ -561,7 +561,7 @@
     <string name="private_space_fingerprint_enroll_introduction_message" msgid="9092068873421435300">"உங்கள் கைரேகையைப் பயன்படுத்தி ரகசிய இடத்தை அன்லாக் செய்யலாம் அல்லது ஆப்ஸில் உள்நுழைதல், பர்ச்சேஸை அங்கீகரித்தல் போன்ற செயல்பாடுகளின்போது அதைச் செய்வது நீங்கள்தான் என்பதை உறுதிப்படுத்தலாம்"</string>
     <string name="private_space_fingerprint_enroll_introduction_footer_message" msgid="7125255484447984854">"உங்கள் விரலுக்கு அருகே மொபைலை வேறொருவர் பிடித்திருப்பது போன்ற சூழல்களில், தற்செயலாக உங்கள் விரல்கள் மொபைலில் பட்டால்கூட உங்கள் ரகசிய இடம் அன்லாக் ஆகிவிடக்கூடும்."</string>
     <string name="private_space_fingerprint_enroll_finish_message" msgid="4754797926493316965">"உங்கள் கைரேகையைப் பயன்படுத்தி ரகசிய இடத்தை அன்லாக் செய்யலாம் அல்லது பர்ச்சேஸ்களை அங்கீகரிக்கலாம்"</string>
-    <string name="private_space_face_enroll_introduction_title" msgid="3717541082520006032">"ரகசிய இடத்திற்கு \'முகம் காட்டித் திறத்தல்\' அம்சத்தை அமைத்தல்"</string>
+    <string name="private_space_face_enroll_introduction_title" msgid="3717541082520006032">"ரகசிய இடத்திற்கு \'முகம் காட்டித் திறத்தலை\' அமைத்தல்"</string>
     <string name="private_space_face_enroll_introduction_message" msgid="250239418499081821">"உங்கள் முகத்தைக் காட்டி ரகசிய இடத்தை அன்லாக் செய்யலாம் அல்லது ஆப்ஸில் உள்நுழைதல், பர்ச்சேஸை அங்கீகரித்தல் போன்ற செயல்பாடுகளின்போது அதைச் செய்வது நீங்கள்தான் என்பதை உறுதிப்படுத்தலாம்"</string>
     <string name="private_space_face_enroll_introduction_info_looking" msgid="5694757845303924042">"நீங்கள் தற்செயலாக மொபைலைப் பார்க்கும்போதும்கூட ரகசிய இடம் அன்லாக் ஆகிவிடக்கூடும். அதுமட்டுமின்றி, கிட்டத்தட்ட உங்கள் சாயலில் இருப்பவராலோ (எ.கா. ஒரே தோற்றமுடைய உடன்பிறந்தவர்) உங்கள் முகத்திற்கு நேராகச் சாதனத்தைக் காட்டி வேறொருவராலோ உங்கள் ரகசிய இடத்தை அன்லாக் செய்துவிட முடியும்."</string>
     <string name="private_space_face_enroll_introduction_info_less_secure" msgid="8460719783943533172">"வலுவான பேட்டர்ன், பின் (PIN) அல்லது கடவுச்சொல்லுடன் ஒப்பிடுகையில், உங்கள் முகத்தைப் பயன்படுத்தி ரகசிய இடத்தை அன்லாக் செய்வது குறைந்த பாதுகாப்புடையதாக இருக்கக்கூடும்"</string>
@@ -5289,7 +5289,7 @@
     <string name="audio_sharing_notification_content" msgid="1577180829878785642">"பிறரால் உங்கள் மீடியாவைக் கேட்க முடியும். அவரால் அழைப்புகளைக் கேட்க முடியாது."</string>
     <string name="audio_sharing_stop_button_label" msgid="8770519671470608849">"பகிர்வதை நிறுத்து"</string>
     <string name="audio_sharing_settings_button_label" msgid="8574808650318270491">"அமைப்புகள்"</string>
-    <string name="audio_sharing_disconnect_dialog_title" msgid="2192751727237748602">"இணைப்பைத் துண்டிக்க ஒரு சாதனத்தைத் தேர்வுசெய்யுங்கள்"</string>
+    <string name="audio_sharing_disconnect_dialog_title" msgid="2192751727237748602">"இணைப்பு நீக்க ஒரு சாதனத்தை தேர்வுசெய்க"</string>
     <string name="audio_sharing_dialog_disconnect_content" msgid="3840488888970653308">"ஒரே நேரத்தில் 2 சாதனங்கள் மட்டுமே ஆடியோவைப் பகிர முடியும்"</string>
     <string name="audio_sharing_disconnect_device_button_label" msgid="4272897217708930576">"<xliff:g id="DEVICE_NAME">%1$s</xliff:g> சாதனத்தின் இணைப்பைத் துண்டி"</string>
     <string name="audio_sharing_stop_dialog_title" msgid="4872853738164232075">"<xliff:g id="DEVICE_NAME">%1$s</xliff:g> சாதனத்தை இணைக்கவா?"</string>
@@ -5305,7 +5305,7 @@
     <string name="audio_streams_title" msgid="6617990880383079165">"ஆடியோ ஸ்ட்ரீம்கள்"</string>
     <string name="audio_streams_qr_code_summary" msgid="2838923349871884871">"QR குறியீட்டைப் பயன்படுத்தி ஆடியோ ஸ்ட்ரீமுடன் இணைக்கலாம்"</string>
     <string name="audio_streams_empty" msgid="8803517701437394982">"அருகில் ஆடியோ ஸ்ட்ரீம்கள் எதுவுமில்லை."</string>
-    <string name="audio_streams_disconnect" msgid="1755594831469579161">"இணைப்பை நீக்கும்"</string>
+    <string name="audio_streams_disconnect" msgid="1755594831469579161">"இணைப்பை நீக்கு"</string>
     <string name="audio_streams_connect" msgid="1955964373102927954">"இணை"</string>
     <string name="audio_streams_qr_code_is_not_valid_format" msgid="4856288389653121830">"QR குறியீடு சரியான வடிவமைப்பில் இல்லை"</string>
     <string name="audio_streams_qr_code_scanner" msgid="525396804963685478">"ஆடியோவைக் கேட்க, கீழுள்ள QR குறியீட்டை மையப்படுத்திக் காட்டுங்கள்"</string>
@@ -5313,7 +5313,7 @@
     <string name="audio_streams_add_source_failed_state_summary" msgid="3937546443978562322">"இணைக்க முடியவில்லை. மீண்டும் முயலவும்."</string>
     <string name="audio_streams_connecting_summary" msgid="7237827765572331702">"இணைக்கிறது…"</string>
     <string name="audio_streams_dialog_stream_is_not_available" msgid="4032878851270690546">"ஆடியோ ஸ்ட்ரீம் கிடைக்கவில்லை"</string>
-    <string name="audio_streams_is_not_playing" msgid="8480293894696007941">"தற்போது இந்த ஆடியோ ஸ்ட்ரீம் எதையும் பிளே செய்யாது"</string>
+    <string name="audio_streams_is_not_playing" msgid="8480293894696007941">"தற்போது இந்த ஆடியோ ஸ்ட்ரீம் எதையும் பிளே செய்யவில்லை"</string>
     <string name="audio_streams_dialog_close" msgid="8177201719298408431">"மூடு"</string>
     <string name="audio_streams_dialog_listen" msgid="7290340191504987685">"கேளுங்கள்"</string>
     <string name="audio_streams_dialog_retry" msgid="4456843891970998556">"மீண்டும் முயல்க"</string>
