--- a/res/values-uz/strings.xml
+++ b/res/values-uz/strings.xml
@@ -5329,7 +5329,7 @@
     <string name="audio_streams_media_service_notification_leave_broadcast_text" msgid="4938656134300913647">"Tinglashni toʻxtatish"</string>
     <string name="audio_streams_dialog_no_le_device_title" msgid="3931163990976742282">"Mos quloqliklarni ulash"</string>
     <string name="audio_streams_dialog_no_le_device_button" msgid="4484355549428642588">"Qurilma ulash"</string>
-    <string name="audio_streams_detail_page_title" msgid="7884132061275273766">"Audio oqim axboroti"</string>
+    <string name="audio_streams_detail_page_title" msgid="7884132061275273766">"Audio oqim tafsilotlari"</string>
     <string name="audio_streams_qr_code_page_title" msgid="9169570362469544641">"Audio oqim QR kodi"</string>
     <string name="audio_streams_qr_code_page_password" msgid="7268475614131297060">"Parol: <xliff:g id="PASSWORD">%1$s</xliff:g>"</string>
     <string name="audio_streams_qr_code_page_description" msgid="1317961663706630428">"<xliff:g id="STREAM_NAME">%1$s</xliff:g> oqimini tinglash uchun boshqa foydalanuvchilar shaxsiy Android qurilmalariga mos quloqliklarni ulashi mumkin. Keyin bu QR kodni skanerlash kifoya."</string>
