--- a/res/values-vi/strings.xml
+++ b/res/values-vi/strings.xml
@@ -5196,7 +5196,7 @@
     <string name="flash_notifications_note" msgid="2426125248448055075">"Hãy thận trọng khi sử dụng tính năng thông báo bằng đèn flash nếu bạn nhạy cảm với ánh sáng"</string>
     <string name="flash_notifications_keywords" msgid="2458759275318514836">"đèn flash, đèn, thính giác kém, mất thính lực"</string>
     <string name="flash_notifications_preview" msgid="5320176885050440874">"Xem trước"</string>
-    <string name="camera_flash_notification_title" msgid="2475084876382922732">"Đèn flash của máy ảnh"</string>
+    <string name="camera_flash_notification_title" msgid="2475084876382922732">"Đèn flash của camera"</string>
     <string name="screen_flash_notification_title" msgid="3773100725793316708">"Đèn flash của màn hình"</string>
     <string name="screen_flash_notification_color_title" msgid="7213407653340970790">"Màu đèn flash của màn hình"</string>
     <string name="screen_flash_color_blue" msgid="3585766657607931371">"Xanh dương"</string>
@@ -5253,13 +5253,13 @@
     <string name="audio_sharing_title" msgid="4144157137502923821">"Chia sẻ âm thanh"</string>
     <string name="audio_sharing_switch_title" msgid="7052827328670825701">"Chia sẻ âm thanh"</string>
     <string name="calls_and_alarms_device_title" msgid="6993559028175454198">"Cuộc gọi và chuông báo"</string>
-    <string name="audio_sharing_description" msgid="1660255584523640628">"Hãy để mọi người nghe nội dung đa phương tiện cùng bạn Người nghe cần có tai nghe Âm thanh năng lượng thấp của riêng mình."</string>
+    <string name="audio_sharing_description" msgid="1660255584523640628">"Hãy để người khác cùng nghe nội dung nghe nhìn cùng bạn. Người nghe cần có tai nghe Âm thanh năng lượng thấp của riêng họ."</string>
     <string name="audio_sharing_device_group_title" msgid="3019780581643956943">"Thiết bị đa phương tiện đang hoạt động"</string>
     <string name="audio_sharing_call_audio_title" msgid="7978867452289583929">"Âm thanh cuộc gọi"</string>
     <string name="audio_sharing_call_audio_description" msgid="6573621048260616924">"Chỉ phát trên <xliff:g id="DEVICE_NAME">%1$s</xliff:g>"</string>
     <string name="audio_sharing_test_sound_title" msgid="6438868185641027763">"Phát thử âm thanh"</string>
     <string name="audio_sharing_test_sound_description" msgid="4072462502371937399">"Tất cả những ai đang nghe sẽ nghe thấy"</string>
-    <string name="audio_sharing_stream_settings_title" msgid="1374391898689242036">"Chế độ cài đặt luồng âm thanh"</string>
+    <string name="audio_sharing_stream_settings_title" msgid="1374391898689242036">"Cài đặt luồng âm thanh"</string>
     <string name="audio_sharing_stream_name_title" msgid="8156859441897180940">"Tên"</string>
     <string name="audio_sharing_stream_password_title" msgid="7026649168165764602">"Mật khẩu"</string>
     <string name="audio_sharing_stream_compatibility_title" msgid="5690947186724469918">"Cải thiện khả năng tương thích"</string>
@@ -5286,7 +5286,7 @@
     <string name="audio_sharing_pair_button_label" msgid="7987236990273083588">"Ghép nối thiết bị mới"</string>
     <string name="audio_sharing_qrcode_button_label" msgid="3207039106555097659">"Hiện mã QR"</string>
     <string name="audio_sharing_notification_title" msgid="1204798942946033005">"Bạn đang chia sẻ âm thanh"</string>
-    <string name="audio_sharing_notification_content" msgid="1577180829878785642">"Những người đang nghe có thể nghe thấy nội dung đa phương tiện của bạn. Họ sẽ không nghe được các cuộc gọi."</string>
+    <string name="audio_sharing_notification_content" msgid="1577180829878785642">"Những người đang nghe có thể nghe thấy nội dung nghe nhìn của bạn nhưng sẽ không nghe được các cuộc gọi."</string>
     <string name="audio_sharing_stop_button_label" msgid="8770519671470608849">"Dừng chia sẻ"</string>
     <string name="audio_sharing_settings_button_label" msgid="8574808650318270491">"Cài đặt"</string>
     <string name="audio_sharing_disconnect_dialog_title" msgid="2192751727237748602">"Chọn một thiết bị để ngắt kết nối"</string>
@@ -5341,6 +5341,6 @@
     <string name="audio_streams_main_page_scan_qr_code_title" msgid="8337270277392468895">"Quét mã QR"</string>
     <string name="audio_streams_main_page_scan_qr_code_summary" msgid="1991792283368249499">"Bắt đầu nghe bằng cách quét mã QR của luồng âm thanh"</string>
     <string name="audio_streams_main_page_password_dialog_join_button" msgid="2967747276379153408">"Nghe luồng âm thanh"</string>
-    <string name="audio_streams_main_page_qr_code_scanner_summary" msgid="5312980105735143360">"Hãy dùng <xliff:g id="DEVICE_NAME">%1$s</xliff:g> để quét mã QR của luồng âm thanh mà bạn muốn nghe"</string>
+    <string name="audio_streams_main_page_qr_code_scanner_summary" msgid="5312980105735143360">"Hãy quét mã QR của luồng âm thanh để nghe bằng <xliff:g id="DEVICE_NAME">%1$s</xliff:g>"</string>
     <string name="audio_streams_main_page_password_dialog_cannot_edit" msgid="9020898619297520153">"Không thể chỉnh sửa mật khẩu trong khi chia sẻ. Để đổi mật khẩu, trước tiên hãy tắt tính năng chia sẻ âm thanh."</string>
 </resources>
