--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -171,7 +171,7 @@
     <string name="app_locales_picker_menu_title" msgid="7617427959223831373">"应用语言"</string>
     <string name="app_locale_picker_summary" msgid="6742557329924446252">"设置每个应用的语言"</string>
     <string name="app_locale_picker_title" msgid="2431448962911301366">"应用语言"</string>
-    <string name="suggested_app_locales_title" msgid="8898358282377369405">"建议语言"</string>
+    <string name="suggested_app_locales_title" msgid="8898358282377369405">"建议的语言"</string>
     <string name="all_supported_app_locales_title" msgid="5479289964316009026">"所有语言"</string>
     <string name="preference_of_system_locale_title" msgid="8067226276038751504">"系统语言"</string>
     <string name="preference_of_system_locale_summary" msgid="5612241394431188535">"系统默认设置"</string>
@@ -2015,7 +2015,7 @@
     <string name="last_time_used_label" msgid="7589377271406011659">"上次使用时间"</string>
     <string name="last_time_used_never" msgid="2936073559267990034">"从未用过"</string>
     <string name="usage_time_label" msgid="9105343335151559883">"使用时间"</string>
-    <string name="accessibility_settings" msgid="4713215774904704682">"无障碍"</string>
+    <string name="accessibility_settings" msgid="4713215774904704682">"无障碍功能"</string>
     <string name="accessibility_settings_title" msgid="6739115703615065716">"无障碍设置"</string>
     <string name="accessibility_settings_summary" msgid="2366627644570558503">"显示、互动、音频"</string>
     <string name="vision_settings_title" msgid="8919983801864103069">"视觉辅助设置"</string>
@@ -3118,7 +3118,7 @@
     <string name="sim_cellular_data_unavailable" msgid="4653591727755387534">"无法使用移动数据网络"</string>
     <string name="sim_cellular_data_unavailable_summary" msgid="6505871722911347881">"点按即可选择上网用的 SIM 卡"</string>
     <string name="sim_calls_always_use" msgid="967857230039768111">"一律使用这张卡进行通话"</string>
-    <string name="select_sim_for_data" msgid="2642305487659432499">"选择提供移动数据的 SIM 卡"</string>
+    <string name="select_sim_for_data" msgid="2642305487659432499">"选择用哪张 SIM 卡上网"</string>
     <string name="select_sim_for_sms" msgid="5335510076282673497">"选择要用于收发短信的 SIM 卡"</string>
     <string name="data_switch_started" msgid="6292759843974720112">"正在切换用于连接数据网络的 SIM 卡，这最多可能需要 1 分钟的时间…"</string>
     <string name="select_specific_sim_for_data_title" msgid="5851980301321577985">"要使用<xliff:g id="NEW_SIM">%1$s</xliff:g>的移动数据吗？"</string>
@@ -3590,7 +3590,7 @@
     <string name="nls_feature_settings_title" msgid="8208164329853194414">"更改设置"</string>
     <string name="nls_feature_settings_summary" msgid="3770028705648985689">"该应用可以开启或关闭“勿扰”模式，并可以更改相关设置。"</string>
     <string name="notification_listener_disable_warning_summary" msgid="8373396293802088961">"如果您停用<xliff:g id="NOTIFICATION_LISTENER_NAME">%1$s</xliff:g>的通知使用权，勿扰模式的使用权可能也会遭到停用。"</string>
-    <string name="notification_listener_disable_warning_confirm" msgid="841492108402184976">"停用"</string>
+    <string name="notification_listener_disable_warning_confirm" msgid="841492108402184976">"关闭"</string>
     <string name="notification_listener_disable_warning_cancel" msgid="8802784105045594324">"取消"</string>
     <string name="notif_type_ongoing" msgid="135675014223627555">"实时"</string>
     <string name="notif_type_ongoing_summary" msgid="2348867528527573574">"来自以下来源的实时通信内容：正在使用的应用、导航、通话等"</string>
@@ -4717,7 +4717,7 @@
     <string name="sim_action_no_thanks" msgid="435717748384544195">"不用了"</string>
     <string name="sim_action_cancel" msgid="2668099867029610910">"取消"</string>
     <string name="sim_switch_button" msgid="1405772571706095387">"切换"</string>
-    <string name="sim_action_turn_off" msgid="3506698692916473000">"停用"</string>
+    <string name="sim_action_turn_off" msgid="3506698692916473000">"关闭"</string>
     <string name="dsds_activation_failure_title" msgid="4467364110584914794">"无法激活 SIM 卡"</string>
     <string name="dsds_activation_failure_body_msg2" msgid="73044349546544410">"请尝试重新启用 SIM 卡。如果问题仍然存在，请重启您的设备。"</string>
     <string name="sim_onboarding_dialog_starting_title" msgid="4212945803784596345">"设定您的 SIM 卡偏好设置"</string>
@@ -5137,7 +5137,7 @@
     <string name="disable_phantom_process_monitor_title" msgid="8348108346706188771">"停止限制子进程"</string>
     <string name="disable_phantom_process_monitor_summary" msgid="3044464635550256985">"停止限制应用子进程的系统资源用量"</string>
     <string name="enable_notes_role_title" msgid="7662702013496114763">"强制启用“记事”角色"</string>
-    <string name="enable_notes_role_summary" msgid="5495721409392395089">"通过“记事”角色启用记事系统集成。如果“记事”角色已启用，则无需执行任何操作。需要重新启动。"</string>
+    <string name="enable_notes_role_summary" msgid="5495721409392395089">"启用通过“记事”角色实现的记事系统集成。如果“记事”角色已启用，此设置不会有任何作用。需要重新启动。"</string>
     <string name="bluetooth_broadcast_dialog_title" msgid="9172775308463135884">"广播"</string>
     <string name="bluetooth_broadcast_dialog_broadcast_app" msgid="1016617579194329005">"广播“<xliff:g id="CURRENTAPP">%1$s</xliff:g>”的内容"</string>
     <string name="bluetooth_broadcast_dialog_find_message" msgid="6621660851669953883">"收听在您附近播放的广播"</string>
@@ -5226,7 +5226,7 @@
     <string name="color_inversion_state_on" msgid="1160969033636440368">"已开启"</string>
     <string name="color_inversion_state_off" msgid="6925638668080451724">"已关闭"</string>
     <string name="color_inversion_feature_summary" msgid="1199876648549627647">"将亮屏幕调暗，将暗屏幕调亮"</string>
-    <string name="magnification_feature_summary" msgid="2053971569640663564">"在屏幕上放大"</string>
+    <string name="magnification_feature_summary" msgid="2053971569640663564">"放大屏幕上的内容"</string>
     <string name="autoclick_disabled" msgid="3213396804955002120">"已关闭"</string>
     <string name="show_captions_disabled" msgid="690650956523818755">"已关闭"</string>
     <string name="show_captions_enabled" msgid="7089043007924626">"已开启"</string>
@@ -5258,12 +5258,12 @@
     <string name="audio_sharing_call_audio_title" msgid="7978867452289583929">"通话音频"</string>
     <string name="audio_sharing_call_audio_description" msgid="6573621048260616924">"仅通过“<xliff:g id="DEVICE_NAME">%1$s</xliff:g>”播放"</string>
     <string name="audio_sharing_test_sound_title" msgid="6438868185641027763">"播放测试音效"</string>
-    <string name="audio_sharing_test_sound_description" msgid="4072462502371937399">"每个正在收听的人应该都会听到它"</string>
-    <string name="audio_sharing_stream_settings_title" msgid="1374391898689242036">"音频流设置"</string>
+    <string name="audio_sharing_test_sound_description" msgid="4072462502371937399">"每个正在收听的人都应该能听到"</string>
+    <string name="audio_sharing_stream_settings_title" msgid="1374391898689242036">"音频串流设置"</string>
     <string name="audio_sharing_stream_name_title" msgid="8156859441897180940">"名称"</string>
     <string name="audio_sharing_stream_password_title" msgid="7026649168165764602">"密码"</string>
     <string name="audio_sharing_stream_compatibility_title" msgid="5690947186724469918">"提高兼容性"</string>
-    <string name="audio_sharing_stream_compatibility_description" msgid="8170241188606110963">"通过降低音频质量，帮助某些设备（例如助听器）连接"</string>
+    <string name="audio_sharing_stream_compatibility_description" msgid="8170241188606110963">"通过降低音频质量，帮助某些设备（如助听器）进行连接。"</string>
     <string name="audio_sharing_stream_compatibility_disabled_description" msgid="2586408353546825682">"关闭“音频分享”功能以配置兼容性"</string>
     <string name="audio_sharing_nearby_audio_title" msgid="4795438407040677177">"收听附近的音频"</string>
     <string name="audio_sharing_footer_description" msgid="4786942197840271680">"“音频分享”功能支持 Auracast™"</string>
@@ -5277,10 +5277,10 @@
     <string name="audio_sharing_share_button_label" msgid="3895900668317105537">"分享音频"</string>
     <string name="audio_sharing_no_thanks_button_label" msgid="5822491984114744357">"不了，谢谢"</string>
     <string name="audio_sharing_share_with_dialog_title" msgid="3934377530640830364">"与“<xliff:g id="DEVICE_NAME">%1$s</xliff:g>”分享音频？"</string>
-    <string name="audio_sharing_share_with_more_dialog_title" msgid="2840069088858232267">"与另一部设备分享音频"</string>
+    <string name="audio_sharing_share_with_more_dialog_title" msgid="2840069088858232267">"与其他设备分享音频"</string>
     <string name="audio_sharing_share_with_button_label" msgid="4146194430380237357">"与“<xliff:g id="DEVICE_NAME">%1$s</xliff:g>”分享"</string>
     <string name="audio_sharing_close_button_label" msgid="2666534149100498574">"关闭"</string>
-    <string name="audio_sharing_dialog_connect_device_content" msgid="2873230647152283734">"再连接一对兼容耳机，或者与对方分享您的音频流名称和密码"</string>
+    <string name="audio_sharing_dialog_connect_device_content" msgid="2873230647152283734">"再连接一对兼容耳机，或者与其他人分享您的音频流名称和密码"</string>
     <string name="audio_sharing_dialog_pair_device_content" msgid="3136997898244863470">"再连接一对兼容耳机，或者与对方分享您的音频流二维码"</string>
     <string name="audio_sharing_sharing_label" msgid="1038021053061111508">"正在分享音频"</string>
     <string name="audio_sharing_pair_button_label" msgid="7987236990273083588">"与新设备配对"</string>
@@ -5319,7 +5319,7 @@
     <string name="audio_streams_dialog_retry" msgid="4456843891970998556">"重试"</string>
     <string name="audio_streams_dialog_listen_to_audio_stream" msgid="8585253007762261528">"收听音频流"</string>
     <string name="audio_streams_dialog_control_volume" msgid="7615062686016713544">"该音频流将通过“<xliff:g id="DEVICE_NAME">%1$s</xliff:g>”播放。您可以使用这部设备控制音量。"</string>
-    <string name="audio_streams_dialog_cannot_listen" msgid="4432257183698209966">"无法收听音频流"</string>
+    <string name="audio_streams_dialog_cannot_listen" msgid="4432257183698209966">"无法收听音频串流"</string>
     <string name="audio_streams_dialog_default_device" msgid="6159800303379303266">"已连接的兼容耳机"</string>
     <string name="audio_streams_activity_title" msgid="6766869545769831935">"音频串流"</string>
     <string name="audio_streams_no_password_summary" msgid="8976357323034830144">"没有密码"</string>
@@ -5333,7 +5333,7 @@
     <string name="audio_streams_qr_code_page_title" msgid="9169570362469544641">"音频流二维码"</string>
     <string name="audio_streams_qr_code_page_password" msgid="7268475614131297060">"密码：<xliff:g id="PASSWORD">%1$s</xliff:g>"</string>
     <string name="audio_streams_qr_code_page_description" msgid="1317961663706630428">"若要收听“<xliff:g id="STREAM_NAME">%1$s</xliff:g>”，其他人可先为各自的 Android 设备连接兼容耳机，然后扫描此二维码。"</string>
-    <string name="audio_streams_main_page_title" msgid="1838380471076527639">"查找音频流"</string>
+    <string name="audio_streams_main_page_title" msgid="1838380471076527639">"查找音频串流"</string>
     <string name="audio_streams_main_page_subtitle" msgid="3251995732921981539">"收听其他设备分享的音频或附近的 Auracast 广播音频"</string>
     <string name="audio_streams_main_page_device_title" msgid="2635744035523908253">"您的音频设备"</string>
     <string name="audio_streams_main_page_no_device_summary" msgid="2936000845397406389">"连接兼容耳机"</string>
