--- a/res/values-zh-rHK/strings.xml
+++ b/res/values-zh-rHK/strings.xml
@@ -1455,7 +1455,7 @@
     <string name="apn_server" msgid="6997704279138388384">"伺服器"</string>
     <string name="apn_mmsc" msgid="4985570919581927224">"MMSC"</string>
     <string name="apn_mms_proxy" msgid="6592247653258283592">"MMS proxy"</string>
-    <string name="apn_mms_port" msgid="6500563737462966663">"MMS 通訊埠"</string>
+    <string name="apn_mms_port" msgid="6500563737462966663">"MMS 連接埠"</string>
     <string name="apn_mcc" msgid="4971414138516074809">"MCC"</string>
     <string name="apn_mnc" msgid="1926382406843447854">"MNC"</string>
     <string name="apn_auth_type" msgid="4234397513494356932">"驗證類型"</string>
@@ -3356,7 +3356,7 @@
     <string name="mode_grayscale_summary" msgid="6682099523626777038">"轉用黑白畫面"</string>
     <string name="mode_aod_title" msgid="5903435070341237325">"不要喚醒螢幕"</string>
     <string name="mode_aod_title_secondary_list" msgid="8268180392811027557">"不要喚醒螢幕"</string>
-    <string name="mode_aod_summary" msgid="7516159044827627065">"停用「持續顯示畫面」"</string>
+    <string name="mode_aod_summary" msgid="7516159044827627065">"停用螢幕長亮模式"</string>
     <string name="mode_wallpaper_title" msgid="5549693923133928374">"調暗桌布"</string>
     <string name="mode_wallpaper_title_secondary_list" msgid="5034602021811580157">"調暗桌布"</string>
     <string name="mode_wallpaper_summary" msgid="665480011615603784">"加上濾鏡調整桌布亮度"</string>
@@ -5325,7 +5325,7 @@
     <string name="audio_streams_no_password_summary" msgid="8976357323034830144">"無需密碼"</string>
     <string name="audio_streams_dialog_learn_more" msgid="6711241053442211345">"瞭解詳情"</string>
     <string name="audio_streams_dialog_cannot_play" msgid="1358828316927479091">"無法在「<xliff:g id="DEVICE_NAME">%1$s</xliff:g>」上播放此音訊串流。"</string>
-    <string name="audio_streams_listening_now" msgid="4205614429222949176">"立即收聽"</string>
+    <string name="audio_streams_listening_now" msgid="4205614429222949176">"正在收聽"</string>
     <string name="audio_streams_media_service_notification_leave_broadcast_text" msgid="4938656134300913647">"停止收聽"</string>
     <string name="audio_streams_dialog_no_le_device_title" msgid="3931163990976742282">"連接兼容耳機"</string>
     <string name="audio_streams_dialog_no_le_device_button" msgid="4484355549428642588">"連接裝置"</string>
