--- a/res/values-bn/strings.xml
+++ b/res/values-bn/strings.xml
@@ -128,7 +128,7 @@
     <string name="connected_device_fast_pair_device_title" msgid="543124539265592392">"অ্যাকাউন্টের সাথে যুক্ত করা হয়েছে"</string>
     <string name="connected_device_previously_associated_fast_pair_device_title" msgid="8353405823992023457">"অ্যাকাউন্টের সাথে আগে ব্যবহার করা হয়েছে"</string>
     <string name="connected_device_add_device_summary" msgid="8671009879957120802">"পেয়ার করার জন্য ব্লুটুথ চালু হবে"</string>
-    <string name="connected_device_connections_title" msgid="4164120115341579170">"কানেকশন অভিরুচি"</string>
+    <string name="connected_device_connections_title" msgid="4164120115341579170">"কানেকশন সংক্রান্ত পছন্দ"</string>
     <string name="connected_device_previously_connected_screen_title" msgid="8823331744788100605">"আগে কানেক্ট করা"</string>
     <string name="connected_device_bluetooth_turned_on_toast" msgid="144664089794199928">"ব্লুটুথ চালু হয়েছে"</string>
     <string name="previous_connected_see_all" msgid="7759413145713251328">"সবগুলি দেখুন"</string>
@@ -3134,7 +3134,7 @@
     <string name="sim_signal_strength" msgid="6351052821700294501">"<xliff:g id="DBM">%1$d</xliff:g> dBm <xliff:g id="ASU">%2$d</xliff:g> asu"</string>
     <string name="sim_notification_title" msgid="6839556577405929262">"আপনার সিম কার্ড পরিবর্তন করা হয়েছে"</string>
     <string name="sim_notification_summary" msgid="5593339846307029991">"সেট-আপ করার জন্য আলতো চাপুন"</string>
-    <string name="sim_calls_ask_first_prefs_title" msgid="3077694594349657933">"প্রতিবার জিজ্ঞাসা করুন"</string>
+    <string name="sim_calls_ask_first_prefs_title" msgid="3077694594349657933">"প্রতিবার জিজ্ঞাসা করা হবে"</string>
     <string name="sim_selection_required_pref" msgid="231437651041498359">"নির্বাচন করার প্রয়োজন"</string>
     <string name="sim_selection_channel_title" msgid="3193666315607572484">"সিম বেছে নেওয়া"</string>
     <string name="dashboard_title" msgid="5660733037244683387">"সেটিংস"</string>
@@ -3902,7 +3902,7 @@
     <string name="domain_urls_summary_one" msgid="3312008753802762892">"<xliff:g id="DOMAIN">%s</xliff:g> খোলে"</string>
     <string name="domain_urls_summary_some" msgid="1197692164421314523">"<xliff:g id="DOMAIN">%s</xliff:g> এবং অন্য URLগুলি খোলে"</string>
     <string name="app_link_open_always" msgid="9167065494930657503">"সমর্থিত লিঙ্ক খোলার জন্য অ্যাপকে অনুমতি দিন"</string>
-    <string name="app_link_open_ask" msgid="2422450109908936371">"প্রতিবার জিজ্ঞাসা করুন"</string>
+    <string name="app_link_open_ask" msgid="2422450109908936371">"প্রতিবার জিজ্ঞাসা করা হবে"</string>
     <string name="app_link_open_never" msgid="5299808605386052350">"লিঙ্ক খোলার জন্য অ্যাপকে অনুমতি দেবেন না"</string>
     <string name="app_link_open_always_summary" msgid="4524005594295855117">"{count,plural, =1{অ্যাপ #টি লিঙ্ক ম্যানেজ করার দাবি করে}one{অ্যাপ #টি লিঙ্ক ম্যানেজ করার দাবি করে}other{অ্যাপ #টি লিঙ্ক ম্যানেজ করার দাবি করে}}"</string>
     <string name="open_supported_links_footer" msgid="3188808142432787933">"অ্যাপ নিম্নলিখিত লিঙ্ক খুলতে চায়:"</string>
@@ -5031,7 +5031,7 @@
     <string name="show_clip_access_notification_summary" msgid="474090757777203207">"আপনি কপি করেছেন এমন টেক্সট, ছবি বা অন্যান্য কন্টেন্ট, অ্যাপ অ্যাক্সেস করলে মেসেজ দেখুন"</string>
     <string name="all_apps" msgid="3054120149509114789">"সব অ্যাপ"</string>
     <string name="request_manage_bluetooth_permission_dont_allow" msgid="8798061333407581300">"অনুমতি দেবেন না"</string>
-    <string name="uwb_settings_title" msgid="8578498712312002231">"আলট্রা-ওয়াইডব্য়ান্ড (ইউডব্লুউবি)"</string>
+    <string name="uwb_settings_title" msgid="8578498712312002231">"আলট্রা-ওয়াইডব্যান্ড (UWB)"</string>
     <string name="uwb_settings_summary" msgid="3074271396764672268">"কাছাকাছি UWB ডিভাইসের আপেক্ষিক অবস্থান শনাক্ত করতে সহায়তা করে"</string>
     <string name="uwb_settings_summary_airplane_mode" msgid="1328864888135086484">"ইউডব্লুউবি ব্যবহার করতে \'বিমান মোড\' বন্ধ করুন"</string>
     <string name="uwb_settings_summary_no_uwb_regulatory" msgid="3465456428217979428">"বর্তমান লোকেশনে UWB উপলভ্য নেই"</string>
@@ -5333,7 +5333,7 @@
     <string name="audio_streams_qr_code_page_title" msgid="9169570362469544641">"অডিও স্ট্রিম QR কোড"</string>
     <string name="audio_streams_qr_code_page_password" msgid="7268475614131297060">"পাসওয়ার্ড: <xliff:g id="PASSWORD">%1$s</xliff:g>"</string>
     <string name="audio_streams_qr_code_page_description" msgid="1317961663706630428">"<xliff:g id="STREAM_NAME">%1$s</xliff:g> শুনতে, অন্য লোকজন তাদের Android ডিভাইসে মানানসই হেডফোন কানেক্ট করতে পারবেন। তারপরে তারা এই QR কোড স্ক্যান করতে পারবে।"</string>
-    <string name="audio_streams_main_page_title" msgid="1838380471076527639">"অডিও স্ট্রিম দেখুন"</string>
+    <string name="audio_streams_main_page_title" msgid="1838380471076527639">"অডিও স্ট্রিম খুঁজুন"</string>
     <string name="audio_streams_main_page_subtitle" msgid="3251995732921981539">"অডিও শেয়ার করছে এমন ডিভাইস অথবা আশেপাশের Auracast ব্রডকাস্ট শুনুন"</string>
     <string name="audio_streams_main_page_device_title" msgid="2635744035523908253">"আপনার অডিও ডিভাইস"</string>
     <string name="audio_streams_main_page_no_device_summary" msgid="2936000845397406389">"মানানসই হেডফোনে কানেক্ট করুন"</string>
