--- a/res/values-eu/strings.xml
+++ b/res/values-eu/strings.xml
@@ -38,7 +38,7 @@
     <string name="radioInfo_data_disconnected" msgid="362604130117666924">"Deskonektatuta"</string>
     <string name="radioInfo_data_connecting" msgid="7280819598028917888">"Konektatzen"</string>
     <string name="radioInfo_data_connected" msgid="8816467971633020141">"Konektatuta"</string>
-    <string name="radioInfo_data_suspended" msgid="2001254415431299603">"Etenda"</string>
+    <string name="radioInfo_data_suspended" msgid="2001254415431299603">"Aldi baterako etenda"</string>
     <string name="radioInfo_unknown" msgid="2892562356748600367">"Ezezaguna"</string>
     <string name="preview_pager_content_description" msgid="3762247188224576303">"Aurrebista"</string>
     <string name="font_size_make_smaller_desc" msgid="4978038055549590140">"Txikitu"</string>
@@ -178,7 +178,7 @@
     <string name="desc_no_available_supported_locale" msgid="7883271726226947273">"Aplikazioaren hizkuntza hautatzeko aukera ez dago erabilgarri ezarpenetan."</string>
     <string name="desc_app_locale_disclaimer" msgid="5295933110644789052">"Baliteke hizkuntza ez egotea aplikazioan erabilgarri, eta aplikazio batzuk ezarpenarekin bateragarriak ez izatea."</string>
     <string name="desc_app_locale_selection_supported" msgid="6744909281573556379">"Ezarri aplikazio bakoitzaren hizkuntza."</string>
-    <string name="desc_introduction_of_language_picker" msgid="1038423471887102449">"Sistemak, aplikazioek eta webguneek hizkuntza hobetsien zerrendako lehen hizkuntza bateragarria erabiltzen dute."</string>
+    <string name="desc_introduction_of_language_picker" msgid="1038423471887102449">"Sistemak, aplikazioek eta webguneek hizkuntza hobetsien zerrendako onartutako lehen hizkuntza erabiltzen dute."</string>
     <string name="desc_notice_of_language_picker" msgid="3449290526457925447">"Aplikazio bakoitzerako hizkuntza bat hautatzeko, joan aplikazioen hizkuntzen ezarpenetara."</string>
     <string name="desc_locale_helper_footer_general" msgid="6112153921151780303">"Lortu aplikazioen hizkuntzei buruzko informazio gehiago"</string>
     <string name="title_change_system_locale" msgid="8589844586256566951">"Sistemaren hizkuntza aldatu nahi duzu, eta %s ezarri?"</string>
@@ -1668,7 +1668,7 @@
     <string name="lockpassword_remote_validation_pin_details" msgid="2373654227583206297">"Google-ko kontuak, ezarpenak eta abar transferitzeko, idatzi beste gailuaren PINa. Enkriptatuta dago PINa."</string>
     <string name="lockpassword_remote_validation_password_details" msgid="3482328925925888340">"Google-ko kontuak, ezarpenak eta abar transferitzeko, idatzi beste gailuko pasahitza. Enkriptatuta dago pasahitza."</string>
     <string name="lockpassword_remote_validation_set_pattern_as_screenlock" msgid="7595104317648465901">"Erabili eredua ere gailua desblokeatzeko"</string>
-    <string name="lockpassword_remote_validation_set_pin_as_screenlock" msgid="509672303005547218">"Erabili PINa ere gailua desblokeatzeko"</string>
+    <string name="lockpassword_remote_validation_set_pin_as_screenlock" msgid="509672303005547218">"Erabili PINa gailua desblokeatzeko ere"</string>
     <string name="lockpassword_remote_validation_set_password_as_screenlock" msgid="2066701840753591922">"Erabili pasahitza ere gailua desblokeatzeko"</string>
     <string name="lockpassword_confirm_repair_mode_pattern_header" msgid="6669435143987988314">"Egiaztatu eredua"</string>
     <string name="lockpassword_confirm_repair_mode_pin_header" msgid="2585263648322879131">"Egiaztatu PINa"</string>
@@ -2468,7 +2468,7 @@
     <string name="background_activity_summary" msgid="3817376868497046016">"Eman atzeko planoan exekutatzeko baimena aplikazioari"</string>
     <string name="background_activity_warning_dialog_title" msgid="3449566823290744823">"Atzeko planoko jarduerak mugatu nahi dituzu?"</string>
     <string name="background_activity_warning_dialog_text" msgid="8202776985767701095">"Aplikazio baten atzeko planoko jarduerak mugatzen badituzu, baliteke aplikazioak behar bezala ez funtzionatzea"</string>
-    <string name="background_activity_disabled_dialog_text" msgid="4053170297325882494">"Aplikazio hau bateria optimizatzeko konfiguratuta ez dagoenez, ezin duzu mugatu.\n\nMugatzeko, aktibatu bateriaren optimizazioa."</string>
+    <string name="background_activity_disabled_dialog_text" msgid="4053170297325882494">"Aplikazio hau bateria optimizatzeko konfiguratuta ez dagoenez, ezin duzu mugatu.\n\nMugatzeko, aktibatu bateria-optimizazioa."</string>
     <string name="manager_battery_usage_category_title" msgid="1493303237531629961">"Kudeatu bateria-erabilera"</string>
     <string name="manager_battery_usage_allow_background_usage_settings_title" msgid="8150026934645052635">"Eman atzeko planoan erabiltzeko baimena"</string>
     <string name="manager_battery_usage_allow_background_usage_title" msgid="6294649996820358852">"Eman atzeko planoan erabiltzeko baimena"</string>
@@ -3468,13 +3468,13 @@
     <string name="asst_importance_reset_summary" msgid="684794589254282667">"Berrezarri erabiltzaileak aldatutako garrantzi-ezarpenak eta eman lehentasunak ezartzeko baimena jakinarazpenen laguntzaileari"</string>
     <string name="asst_capabilities_actions_replies_title" msgid="4392470465646394289">"Ekintza eta erantzun iradokiak"</string>
     <string name="asst_capabilities_actions_replies_summary" msgid="416234323365645871">"Erakutsi automatikoki ekintza eta erantzun iradokiak"</string>
-    <string name="notification_history_summary" msgid="5434741516307706892">"Erakutsi azken jakinarazpenak eta atzeratutakoak"</string>
+    <string name="notification_history_summary" msgid="5434741516307706892">"Erakutsi azkenaldiko jakinarazpenak eta atzeratutakoak"</string>
     <string name="notification_history" msgid="8663811361243456201">"Jakinarazpenen historia"</string>
     <string name="notification_history_toggle" msgid="9093762294928569030">"Erabili jakinarazpenen historia"</string>
     <string name="notification_history_off_title_extended" msgid="853807652537281601">"Desaktibatuta dago jakinarazpenen historia"</string>
-    <string name="notification_history_off_summary" msgid="671359587084797617">"Aktibatu jakinarazpenen historia azken jakinarazpenak eta atzeratutakoak ikusteko"</string>
+    <string name="notification_history_off_summary" msgid="671359587084797617">"Aktibatu jakinarazpenen historia azkenaldiko jakinarazpenak eta atzeratutakoak ikusteko"</string>
     <string name="history_toggled_on_title" msgid="4518001110492652830">"Ez dago azkenaldiko jakinarazpenik"</string>
-    <string name="history_toggled_on_summary" msgid="9034278971358282728">"Hemen agertuko dira azken jakinarazpenak eta atzeratutakoak"</string>
+    <string name="history_toggled_on_summary" msgid="9034278971358282728">"Hemen agertuko dira azkenaldiko jakinarazpenak eta atzeratutakoak"</string>
     <string name="notification_history_view_settings" msgid="5269317798670449002">"ikusi jakinarazpen-ezarpenak"</string>
     <string name="notification_history_open_notification" msgid="2655071846911258371">"jakinarazpena ireki"</string>
     <string name="snooze_options_title" msgid="2109795569568344617">"Eman jakinarazpenak atzeratzeko baimena"</string>
@@ -3544,9 +3544,9 @@
     <string name="important_conversations_summary" msgid="3184022761562676418">"Erakutsi elkarrizketen atalaren goialdean"</string>
     <string name="other_conversations" msgid="551178916855139870">"Lehentasunezkoak ez diren elkarrizketak"</string>
     <string name="other_conversations_summary" msgid="3487426787901236273">"Aldatu dituzun elkarrizketak"</string>
-    <string name="recent_conversations" msgid="471678228756995274">"Azken elkarrizketak"</string>
-    <string name="conversation_settings_clear_recents" msgid="8940398397663307054">"Garbitu azken elkarrizketak"</string>
-    <string name="recent_convos_removed" msgid="2122932798895714203">"Kendu dira azken elkarrizketak"</string>
+    <string name="recent_conversations" msgid="471678228756995274">"Azkenaldiko elkarrizketak"</string>
+    <string name="conversation_settings_clear_recents" msgid="8940398397663307054">"Garbitu azkenaldiko elkarrizketak"</string>
+    <string name="recent_convos_removed" msgid="2122932798895714203">"Kendu dira azkenaldiko elkarrizketak"</string>
     <string name="recent_convo_removed" msgid="8686414146325958281">"Kendu da elkarrizketa"</string>
     <string name="clear" msgid="5092178335409471100">"Garbitu"</string>
     <string name="clear_conversation" msgid="5564321180363279096">"Garbitu <xliff:g id="CONVERSATION_NAME">%1$s</xliff:g>"</string>
@@ -5286,7 +5286,7 @@
     <string name="audio_sharing_pair_button_label" msgid="7987236990273083588">"Parekatu beste gailu bat"</string>
     <string name="audio_sharing_qrcode_button_label" msgid="3207039106555097659">"Erakutsi QR kodea"</string>
     <string name="audio_sharing_notification_title" msgid="1204798942946033005">"Audioa partekatzen ari zara"</string>
-    <string name="audio_sharing_notification_content" msgid="1577180829878785642">"Entzuten ari diren pertsonek zure multimedia-edukia entzun dezakete. Ez dituzte deiak entzungo."</string>
+    <string name="audio_sharing_notification_content" msgid="1577180829878785642">"Entzuten ari diren pertsonek zure multimedia-edukia entzun dezakete. Ez dituzte entzungo deiak."</string>
     <string name="audio_sharing_stop_button_label" msgid="8770519671470608849">"Utzi partekatzeari"</string>
     <string name="audio_sharing_settings_button_label" msgid="8574808650318270491">"Ezarpenak"</string>
     <string name="audio_sharing_disconnect_dialog_title" msgid="2192751727237748602">"Aukeratu deskonektatu nahi duzun gailua"</string>
