--- a/res/values-fi/strings.xml
+++ b/res/values-fi/strings.xml
@@ -300,7 +300,7 @@
     <string name="security_settings_face_preference_summary_none" msgid="523320857738436024">"Edellyttää käyttöönottoa"</string>
     <string name="security_settings_face_preference_title" msgid="2126625155005348417">"Kasvojentunnistusavaus"</string>
     <string name="security_settings_face_profile_preference_title" msgid="7519527436266375005">"Kasvojentunnistusavaus työkäyttöön"</string>
-    <string name="security_settings_face_enroll_education_title" msgid="6448806884597691208">"Kasvojen&amp;shy;tunnistus&amp;shy;avauksen käyttöönotto"</string>
+    <string name="security_settings_face_enroll_education_title" msgid="6448806884597691208">"Kasvojentunnistusavauksen käyttöönotto"</string>
     <string name="security_settings_face_enroll_education_title_accessibility" msgid="3701874093226957891">"Ota kasvojentunnistusavaus käyttöön"</string>
     <string name="security_settings_face_enroll_education_title_unlock_disabled" msgid="8810954233979716906">"Todennus kasvojen avulla"</string>
     <string name="security_settings_face_enroll_education_message" msgid="4308030157487176799"></string>
@@ -659,7 +659,7 @@
     <string name="lock_settings_picker_update_lock_title" msgid="536853138943415927">"Valitse uusi näytön lukitus"</string>
     <string name="lock_settings_picker_new_profile_lock_title" msgid="2270462215256413800">"Valitse työsovellusten lukitus"</string>
     <string name="lock_settings_picker_update_profile_lock_title" msgid="5929068163516308927">"Valitse uusi työlukitus"</string>
-    <string name="lock_settings_picker_biometrics_added_security_message" msgid="1105247657304421299">"Paranna suojausta määrittämällä näytön varalukitustapa"</string>
+    <string name="lock_settings_picker_biometrics_added_security_message" msgid="1105247657304421299">"Paranna suojausta valitsemalla näytön varalukitustapa"</string>
     <string name="lock_settings_picker_biometric_message" msgid="2609666443527262781">"Valitse toissijainen näytönlukitustapa"</string>
     <string name="lock_settings_picker_admin_restricted_personal_message" msgid="3532653662159888328">"IT-järjestelmänvalvoja ei voi nollata näytön lukituksen avaustapaa, jos unohdat sen."</string>
     <string name="lock_settings_picker_admin_restricted_personal_message_action" msgid="5956615234246626264">"Valitse erillinen työlukitus"</string>
@@ -4014,7 +4014,7 @@
     <string name="work_profile_usage_access_warning" msgid="3477719910927319122">"Sovelluksen käyttötietojen poistaminen käytöstä ei estä järjestelmänvalvojaa seuraamasta työprofiilisi sovellusten datankäyttöä."</string>
     <string name="draw_overlay" msgid="7902083260500573027">"Näkyminen muiden päällä"</string>
     <string name="system_alert_window_settings" msgid="6458633954424862521">"Näkyminen muiden päällä"</string>
-    <string name="permit_draw_overlay" msgid="4468994037192804075">"Salli näyttäminen muiden sovellusten päällä"</string>
+    <string name="permit_draw_overlay" msgid="4468994037192804075">"Salli näkyminen muiden sovellusten päällä"</string>
     <string name="allow_overlay_description" msgid="1607235723669496298">"Anna sovelluksen näkyä muiden avoimien sovellusten päällä. Tämä sovellus voi nähdä, mitä kohtaa napautat, ja muuttaa, mitä näytöllä näytetään."</string>
     <string name="media_routing_control_title" msgid="6402800638960066807">"Median ulostulon muuttaminen"</string>
     <string name="allow_media_routing_control" msgid="4907036637509360616">"Salli sovelluksen muuttaa median ulostuloa"</string>
@@ -5250,7 +5250,7 @@
     <string name="sim_category_converted_sim" msgid="8575548015816988908">"Muunnettu eSIM-muotoon. Poista ja hävitä kortti."</string>
     <string name="sync_across_devices_title" msgid="3447757705383089345">"Synkronoi laitteiden välillä"</string>
     <string name="device_diagnostics_title" msgid="2914523189695727897">"Laitediagnostiikka"</string>
-    <string name="audio_sharing_title" msgid="4144157137502923821">"Jaa audio"</string>
+    <string name="audio_sharing_title" msgid="4144157137502923821">"Audion jakaminen"</string>
     <string name="audio_sharing_switch_title" msgid="7052827328670825701">"Jaa audio"</string>
     <string name="calls_and_alarms_device_title" msgid="6993559028175454198">"Puhelut ja hälytykset"</string>
     <string name="audio_sharing_description" msgid="1660255584523640628">"Anna muiden kuunnella mediaa kanssasi. Kuuntelijat tarvitsevat omat LE Audio ‑kuulokkeet."</string>
@@ -5318,7 +5318,7 @@
     <string name="audio_streams_dialog_listen" msgid="7290340191504987685">"Kuuntele"</string>
     <string name="audio_streams_dialog_retry" msgid="4456843891970998556">"Yritä uudelleen"</string>
     <string name="audio_streams_dialog_listen_to_audio_stream" msgid="8585253007762261528">"Kuuntele audiostriimiä"</string>
-    <string name="audio_streams_dialog_control_volume" msgid="7615062686016713544">"<xliff:g id="DEVICE_NAME">%1$s</xliff:g> toistaa tämän audiostriimin. Säädä sillä äänenvoimakkuutta."</string>
+    <string name="audio_streams_dialog_control_volume" msgid="7615062686016713544">"<xliff:g id="DEVICE_NAME">%1$s</xliff:g> toistaa tämän audiostriimin. Säädä äänenvoimakkuutta tällä laitteella."</string>
     <string name="audio_streams_dialog_cannot_listen" msgid="4432257183698209966">"Audiostriimin kuuntelu ei onnistu"</string>
     <string name="audio_streams_dialog_default_device" msgid="6159800303379303266">"yhdistetyt yhteensopivat kuulokkeet"</string>
     <string name="audio_streams_activity_title" msgid="6766869545769831935">"Audiostriimit"</string>
@@ -5334,7 +5334,7 @@
     <string name="audio_streams_qr_code_page_password" msgid="7268475614131297060">"Salasana: <xliff:g id="PASSWORD">%1$s</xliff:g>"</string>
     <string name="audio_streams_qr_code_page_description" msgid="1317961663706630428">"Jos muut haluavat kuunnella audiota, jota <xliff:g id="STREAM_NAME">%1$s</xliff:g> toistaa, he voivat yhdistää yhteensopivat kuulokkeet Android-laitteeseen. Sen jälkeen he voivat skannata QR-koodin."</string>
     <string name="audio_streams_main_page_title" msgid="1838380471076527639">"Etsi audiostriimi"</string>
-    <string name="audio_streams_main_page_subtitle" msgid="3251995732921981539">"Kuuntele audiota jakavaa laitetta tai lähellä olevaa Auracast-toistoa"</string>
+    <string name="audio_streams_main_page_subtitle" msgid="3251995732921981539">"Kuuntele audiota jakavaa laitetta tai lähellä olevaa Auracast-lähetystä"</string>
     <string name="audio_streams_main_page_device_title" msgid="2635744035523908253">"Audiolaitteesi"</string>
     <string name="audio_streams_main_page_no_device_summary" msgid="2936000845397406389">"Yhdistä yhteensopivat kuulokkeet"</string>
     <string name="audio_streams_main_page_scan_section_title" msgid="2778235929304061163">"Audiostriimit lähistöllä"</string>
