--- a/res/values-hi/strings.xml
+++ b/res/values-hi/strings.xml
@@ -77,7 +77,7 @@
     <string name="bluetooth_hearing_device_settings_summary" msgid="3822646075744075158">"शॉर्टकट, कान की मशीन के साथ काम करने की सुविधा"</string>
     <string name="bluetooth_hearing_aids_presets" msgid="4615094985857156388">"प्रीसेट"</string>
     <string name="bluetooth_hearing_aids_presets_error" msgid="2095249829735188484">"प्रीसेट अपडेट नहीं किया जा सका"</string>
-    <string name="bluetooth_audio_routing_title" msgid="5541729245424856226">"ऑडियो आउटपुट"</string>
+    <string name="bluetooth_audio_routing_title" msgid="5541729245424856226">"ऑडियो डिवाइस"</string>
     <string name="bluetooth_audio_routing_about_title" msgid="5773336779246891954">"ऑडियो आउटपुट की जानकारी"</string>
     <string name="bluetooth_audio_routing_summary" msgid="7180947533985969066">"साउंड को कान की मशीन या फ़ोन स्पीकर पर रूट करें"</string>
     <string name="bluetooth_screen_related" msgid="7976543255501825536">"मिलते-जुलते टूल"</string>
@@ -474,7 +474,7 @@
     <string name="security_settings_fingerprint_enroll_dialog_delete" msgid="6027141901007342389">"मिटाएं"</string>
     <string name="security_settings_fingerprint_enroll_start_title" msgid="7391368057800077604">"सेंसर को छुएं"</string>
     <string name="security_settings_fingerprint_enroll_start_message" msgid="5010227772754175346">"अपनी उंगली सेंसर पर रखें और वाइब्रेशन महसूस होने पर हटा लें"</string>
-    <string name="security_settings_udfps_enroll_start_message" msgid="5032954588171487566">"अपनी उंगली को सेंसर पर तब तक दबाकर रखें, जब तक आपको वाइब्रेशन महसूस न हो"</string>
+    <string name="security_settings_udfps_enroll_start_message" msgid="5032954588171487566">"अपनी उंगली को सेंसर पर तब तक रखें, जब तक आपको वाइब्रेशन महसूस न हो"</string>
     <string name="security_settings_sfps_enroll_start_message" msgid="9054672627477685212">"बटन को दबाए बिना, अपनी उंगली को सेंसर पर तब तक रखें, जब तक आपको वाइब्रेशन महसूस न हो.\n\nहर बार अपनी उंगली को थोड़ा सा हिलाएं. ऐसा करके, आपके फ़िंगरप्रिंट को बेहतर तरीके से कैप्चर किया जा सकता है."</string>
     <string name="security_settings_fingerprint_enroll_udfps_title" msgid="6665610134560896895">"फ़िंगरप्रिंट सेंसर को दबाकर रखें"</string>
     <string name="security_settings_fingerprint_enroll_repeat_title" msgid="9172202128243545021">"सेंसर से उंगली हटाकर, उसे दोबारा छुएं"</string>
@@ -4233,7 +4233,7 @@
     <string name="long_background_tasks_title" msgid="3272230637974707490">"लंबे बैकग्राउंड टास्क"</string>
     <string name="long_background_tasks_footer_title" msgid="9117342254914743097">"इस ऐप्लिकेशन को, लंबे समय तक चलने वाले बैकग्राउंड टास्क करने की अनुमति दें. यह अनुमति, ऐप्लिकेशन को ऐसे टास्क करने देती है जिन्हें पूरा करने में कुछ मिनटों से ज़्यादा का समय लग सकता है. जैसे, डाउनलोड और अपलोड करना. \n\nअगर यह अनुमति नहीं दी जाती है, तो सिस्टम यह तय करेगा कि कोई ऐप्लिकेशन कितने समय तक बैकग्राउंड में ऐसे टास्क कर सकता है."</string>
     <string name="keywords_long_background_tasks" msgid="5788956269136054574">"लंबे समय तक चलने वाले टास्क, डेटा ट्रांसफ़र, बैकग्राउंड टास्क"</string>
-    <string name="reset_shortcut_manager_throttling" msgid="2183940254903144298">"ShortcutManager में दर सीमित करने का टाइमर रीसेट करें"</string>
+    <string name="reset_shortcut_manager_throttling" msgid="2183940254903144298">"ShortcutManager एपीआई का दर सीमित करने का टाइमर रीसेट करें"</string>
     <string name="reset_shortcut_manager_throttling_complete" msgid="8949943009096885470">"ShortcutManager दर सीमित करना रीसेट कर दिया गया है"</string>
     <string name="notification_suggestion_title" msgid="6309263655965785411">"कंट्रोल करें कि लॉक स्क्रीन पर आपको कौनसी सूचनाएं दिखें"</string>
     <string name="notification_suggestion_summary" msgid="7615611244249276113">"सूचना की सामग्री दिखाएं या छिपाएं"</string>
@@ -4793,7 +4793,7 @@
     <string name="settings_panel_title" msgid="346363079938069215">"सेटिंग पैनल"</string>
     <string name="force_desktop_mode" msgid="1336913605091334238">"डेस्कटॉप मोड चालू करें"</string>
     <string name="force_desktop_mode_summary" msgid="4587416867846930479">"दूसरी स्क्रीन पर डेस्कटॉप मोड आज़माने की सुविधा चालू करें"</string>
-    <string name="enable_non_resizable_multi_window" msgid="6832903754625404477">"मल्टी-विंडो में विंडो का साइज़ न बदलने का विकल्प चालू करें"</string>
+    <string name="enable_non_resizable_multi_window" msgid="6832903754625404477">"मल्टी-विंडो में, साइज़ न बदलने वाले ऐप्लिकेशन दिखाने दें"</string>
     <string name="enable_non_resizable_multi_window_summary" msgid="3275763753261901999">"साइज़ न बदलने वाले ऐप्लिकेशन को मल्टी-विंडो (एक से ज़्यादा ऐप्लिकेशन, एक साथ) में दिखाने की अनुमति दें"</string>
     <string name="hwui_force_dark_title" msgid="4256904905631994219">"गहरे रंग वाली थीम को तुरंत लागू करने की सुविधा ओवरराइड करें"</string>
     <string name="hwui_force_dark_summary" msgid="6515748781487952769">"गहरे रंग वाली थीम को तुरंत लागू करने की सुविधा हमेशा चालू रहने के लिए ओवरराइड करती है"</string>
@@ -5136,8 +5136,8 @@
     <string name="ingress_rate_limit_no_limit_entry" msgid="8741098826008012163">"कोई सीमा नहीं"</string>
     <string name="disable_phantom_process_monitor_title" msgid="8348108346706188771">"चाइल्ड प्रोसेस पर लगी पाबंदियां बंद करें"</string>
     <string name="disable_phantom_process_monitor_summary" msgid="3044464635550256985">"ऐप्लिकेशन में किसी प्रोसेस की वजह से चालू हुई दूसरी प्रोसेस के लिए, सिस्टम के संसाधन के इस्तेमाल पर लगी पाबंदियां बंद करें"</string>
-    <string name="enable_notes_role_title" msgid="7662702013496114763">"नोट्स रोल की सुविधा हर हाल में चालू करें"</string>
-    <string name="enable_notes_role_summary" msgid="5495721409392395089">"Notes रोल (सुविधाओं का संग्रह) का इस्तेमाल करके, नोट बनाने के सिस्टम इंटिग्रेशन को चालू करें. अगर Notes रोल की सुविधा पहले से ही चालू है, तो कुछ और करने की ज़रूरत नहीं है. हालांकि, डिवाइस को फिर से चालू करना होगा."</string>
+    <string name="enable_notes_role_title" msgid="7662702013496114763">"नोट लेने की सुविधा हमेशा चालू रखें"</string>
+    <string name="enable_notes_role_summary" msgid="5495721409392395089">"नोट लेने की सुविधा के ज़रिए, नोट लेने के लिए तय किए ऐप्लिकेशन को सिस्टम के साथ इंटिग्रेट होने की अनुमति दें. अगर यह सुविधा पहले से ही चालू है, तो कुछ और करने की ज़रूरत नहीं है. हालांकि, डिवाइस को फिर से चालू करना होगा."</string>
     <string name="bluetooth_broadcast_dialog_title" msgid="9172775308463135884">"ब्रॉडकास्ट"</string>
     <string name="bluetooth_broadcast_dialog_broadcast_app" msgid="1016617579194329005">"<xliff:g id="CURRENTAPP">%1$s</xliff:g> पर ब्रॉडकास्ट करें"</string>
     <string name="bluetooth_broadcast_dialog_find_message" msgid="6621660851669953883">"अपने आस-पास चल रहे ब्रॉडकास्ट को सुनें"</string>
@@ -5256,10 +5256,10 @@
     <string name="audio_sharing_description" msgid="1660255584523640628">"दूसरे लोगों को भी अपना मीडिया कॉन्टेंट सुनने का मौका दें. इसके लिए, ज़रूरी है कि उनके पास भी LE Audio हेडफ़ोन हो."</string>
     <string name="audio_sharing_device_group_title" msgid="3019780581643956943">"चालू मीडिया डिवाइस"</string>
     <string name="audio_sharing_call_audio_title" msgid="7978867452289583929">"कॉल ऑडियो"</string>
-    <string name="audio_sharing_call_audio_description" msgid="6573621048260616924">"<xliff:g id="DEVICE_NAME">%1$s</xliff:g> पर चलाएं"</string>
+    <string name="audio_sharing_call_audio_description" msgid="6573621048260616924">"सिर्फ़ <xliff:g id="DEVICE_NAME">%1$s</xliff:g> पर चलाएं"</string>
     <string name="audio_sharing_test_sound_title" msgid="6438868185641027763">"कोई टेस्ट साउंड चलाएं"</string>
-    <string name="audio_sharing_test_sound_description" msgid="4072462502371937399">"उन सभी को यह सुनाई देना चाहिए जिन्हें ऑडियो शेयर किया गया है"</string>
-    <string name="audio_sharing_stream_settings_title" msgid="1374391898689242036">"ऑडियो स्ट्रीम की सेटिंग"</string>
+    <string name="audio_sharing_test_sound_description" msgid="4072462502371937399">"उन सभी को यह सुनाई देना चाहिए जिनके साथ ऑडियो शेयर किया गया है"</string>
+    <string name="audio_sharing_stream_settings_title" msgid="1374391898689242036">"ऑडियो स्ट्रीम करने की सेटिंग"</string>
     <string name="audio_sharing_stream_name_title" msgid="8156859441897180940">"नाम"</string>
     <string name="audio_sharing_stream_password_title" msgid="7026649168165764602">"पासवर्ड"</string>
     <string name="audio_sharing_stream_compatibility_title" msgid="5690947186724469918">"अन्य डिवाइसों के साथ काम करने की क्षमता बढ़ाएं"</string>
@@ -5289,7 +5289,7 @@
     <string name="audio_sharing_notification_content" msgid="1577180829878785642">"जिन लोगों को ऑडियो शेयर किया गया है वे आपका मीडिया सुन सकते हैं. वे कॉल नहीं सुन सकेंगे."</string>
     <string name="audio_sharing_stop_button_label" msgid="8770519671470608849">"शेयर करना बंद करें"</string>
     <string name="audio_sharing_settings_button_label" msgid="8574808650318270491">"सेटिंग"</string>
-    <string name="audio_sharing_disconnect_dialog_title" msgid="2192751727237748602">"डिसकनेक्ट करने के लिए डिवाइस चुनें"</string>
+    <string name="audio_sharing_disconnect_dialog_title" msgid="2192751727237748602">"वह डिवाइस चुनें जिसे डिसकनेक्ट करना है"</string>
     <string name="audio_sharing_dialog_disconnect_content" msgid="3840488888970653308">"एक बार में सिर्फ़ दो डिवाइस ही ऑडियो शेयर कर सकते हैं"</string>
     <string name="audio_sharing_disconnect_device_button_label" msgid="4272897217708930576">"<xliff:g id="DEVICE_NAME">%1$s</xliff:g> डिसकनेक्ट करें"</string>
     <string name="audio_sharing_stop_dialog_title" msgid="4872853738164232075">"क्या <xliff:g id="DEVICE_NAME">%1$s</xliff:g> को कनेक्ट करना है?"</string>
@@ -5313,19 +5313,19 @@
     <string name="audio_streams_add_source_failed_state_summary" msgid="3937546443978562322">"कनेक्ट नहीं हो सका. फिर से कोशिश करें."</string>
     <string name="audio_streams_connecting_summary" msgid="7237827765572331702">"कनेक्ट किया जा रहा है…"</string>
     <string name="audio_streams_dialog_stream_is_not_available" msgid="4032878851270690546">"ऑडियो स्ट्रीम उपलब्ध नहीं है"</string>
-    <string name="audio_streams_is_not_playing" msgid="8480293894696007941">"यह ऑडियो स्ट्रीम अभी कुछ नहीं चला रहा है"</string>
+    <string name="audio_streams_is_not_playing" msgid="8480293894696007941">"इस ऑडियो स्ट्रीम पर अभी कुछ नहीं चल रहा है"</string>
     <string name="audio_streams_dialog_close" msgid="8177201719298408431">"बंद करें"</string>
     <string name="audio_streams_dialog_listen" msgid="7290340191504987685">"सुनें"</string>
-    <string name="audio_streams_dialog_retry" msgid="4456843891970998556">"फिर कोशिश करें"</string>
+    <string name="audio_streams_dialog_retry" msgid="4456843891970998556">"फिर से कोशिश करें"</string>
     <string name="audio_streams_dialog_listen_to_audio_stream" msgid="8585253007762261528">"ऑडियो स्ट्रीम सुनें"</string>
-    <string name="audio_streams_dialog_control_volume" msgid="7615062686016713544">"<xliff:g id="DEVICE_NAME">%1$s</xliff:g> पर ऑडियो स्ट्रीम चलेगा. आवाज़ कंट्रोल करने के लिए इस डिवाइस का इस्तेमाल करें."</string>
+    <string name="audio_streams_dialog_control_volume" msgid="7615062686016713544">"ऑडियो स्ट्रीम, <xliff:g id="DEVICE_NAME">%1$s</xliff:g> पर चलेगी. आवाज़ कंट्रोल करने के लिए इस डिवाइस का इस्तेमाल करें."</string>
     <string name="audio_streams_dialog_cannot_listen" msgid="4432257183698209966">"ऑडियो स्ट्रीम नहीं सुना जा सका"</string>
     <string name="audio_streams_dialog_default_device" msgid="6159800303379303266">"डिवाइस के साथ काम करने वाले हेडफ़ोन कनेक्ट किए गए"</string>
     <string name="audio_streams_activity_title" msgid="6766869545769831935">"ऑडियो स्ट्रीम"</string>
     <string name="audio_streams_no_password_summary" msgid="8976357323034830144">"कोई पासवर्ड नहीं है"</string>
     <string name="audio_streams_dialog_learn_more" msgid="6711241053442211345">"ज़्यादा जानें"</string>
     <string name="audio_streams_dialog_cannot_play" msgid="1358828316927479091">"<xliff:g id="DEVICE_NAME">%1$s</xliff:g> पर यह ऑडियो स्ट्रीम नहीं चलाया जा सकता."</string>
-    <string name="audio_streams_listening_now" msgid="4205614429222949176">"अभी सुना जा रहा है"</string>
+    <string name="audio_streams_listening_now" msgid="4205614429222949176">"अभी सुनी जा रही है"</string>
     <string name="audio_streams_media_service_notification_leave_broadcast_text" msgid="4938656134300913647">"सुनना बंद करें"</string>
     <string name="audio_streams_dialog_no_le_device_title" msgid="3931163990976742282">"डिवाइस के साथ काम करने वाले हेडफ़ोन कनेक्ट करें"</string>
     <string name="audio_streams_dialog_no_le_device_button" msgid="4484355549428642588">"कोई डिवाइस कनेक्ट करें"</string>
@@ -5334,10 +5334,10 @@
     <string name="audio_streams_qr_code_page_password" msgid="7268475614131297060">"पासवर्ड: <xliff:g id="PASSWORD">%1$s</xliff:g>"</string>
     <string name="audio_streams_qr_code_page_description" msgid="1317961663706630428">"<xliff:g id="STREAM_NAME">%1$s</xliff:g> सुनने के लिए, अन्य लोग अपने Android डिवाइस के साथ काम करने वाले हेडफ़ोन कनेक्ट कर सकते हैं इसके बाद, वे इस क्यूआर कोड को स्कैन कर सकते हैं."</string>
     <string name="audio_streams_main_page_title" msgid="1838380471076527639">"कोई ऑडियो स्ट्रीम खोजें"</string>
-    <string name="audio_streams_main_page_subtitle" msgid="3251995732921981539">"ऑडियो शेयर करने वाले किसी डिवाइस या आस-पास हो रहे Auracast ब्रॉडकास्ट सुनें"</string>
+    <string name="audio_streams_main_page_subtitle" msgid="3251995732921981539">"उस डिवाइस पर सुनें जिससे ऑडियो शेयर किया जा रहा है या आस-पास हो रहा Auracast ब्रॉडकास्ट सुनें"</string>
     <string name="audio_streams_main_page_device_title" msgid="2635744035523908253">"आपका ऑडियो डिवाइस"</string>
     <string name="audio_streams_main_page_no_device_summary" msgid="2936000845397406389">"डिवाइस के साथ काम करने वाले हेडफ़ोन कनेक्ट करें"</string>
-    <string name="audio_streams_main_page_scan_section_title" msgid="2778235929304061163">"आस-पास हो रहे ऑडियो स्ट्रीम"</string>
+    <string name="audio_streams_main_page_scan_section_title" msgid="2778235929304061163">"आस-पास हो रही ऑडियो स्ट्रीम"</string>
     <string name="audio_streams_main_page_scan_qr_code_title" msgid="8337270277392468895">"क्यूआर कोड स्कैन करें"</string>
     <string name="audio_streams_main_page_scan_qr_code_summary" msgid="1991792283368249499">"स्ट्रीम का क्यूआर कोड स्कैन करके, सुनना शुरू करें"</string>
     <string name="audio_streams_main_page_password_dialog_join_button" msgid="2967747276379153408">"स्ट्रीम सुनें"</string>
