--- a/res/values-pt/strings.xml
+++ b/res/values-pt/strings.xml
@@ -558,7 +558,7 @@
     <string name="private_space_face_unlock_title" msgid="462248384776453613">"Desbloqueio facial para o espaço privado"</string>
     <string name="private_space_biometric_unlock_title" msgid="1978145237698659673">"Desbloqueio facial e por digital para espaço privado"</string>
     <string name="private_space_fingerprint_enroll_introduction_title" msgid="5187730641333680942">"Configurar Desbloqueio por digital para o espaço privado"</string>
-    <string name="private_space_fingerprint_enroll_introduction_message" msgid="9092068873421435300">"Use sua impressão digital para desbloquear seu espaço privado ou confirmar sua identidade e acessar apps ou aprovar uma compra"</string>
+    <string name="private_space_fingerprint_enroll_introduction_message" msgid="9092068873421435300">"Use sua impressão digital para desbloquear o espaço privado, confirmar sua identidade, acessar apps ou aprovar uma compra"</string>
     <string name="private_space_fingerprint_enroll_introduction_footer_message" msgid="7125255484447984854">"O espaço privado poderá ser desbloqueado mesmo se essa não for sua intenção. Por exemplo, se alguém colocar seu dedo no sensor."</string>
     <string name="private_space_fingerprint_enroll_finish_message" msgid="4754797926493316965">"Use sua impressão digital para desbloquear o espaço privado ou aprovar compras"</string>
     <string name="private_space_face_enroll_introduction_title" msgid="3717541082520006032">"Configurar o Desbloqueio facial para o espaço privado"</string>
@@ -969,9 +969,9 @@
     <string name="wifi_privacy_settings_ephemeral_summary" msgid="8502084692297249372">"MAC aleatório"</string>
     <string name="wifi_dpp_add_device_to_network" msgid="6141246783457722976">"Adicionar um dispositivo"</string>
     <string name="wifi_dpp_center_qr_code" msgid="5270782275746178104">"Centralize o QR code abaixo para adicionar o dispositivo a “<xliff:g id="SSID">%1$s</xliff:g>”"</string>
-    <string name="wifi_dpp_scan_qr_code" msgid="3543923817779444434">"Ler QR code"</string>
+    <string name="wifi_dpp_scan_qr_code" msgid="3543923817779444434">"Fazer a leitura do QR code"</string>
     <string name="wifi_dpp_scan_qr_code_join_network" msgid="969985020363459133">"Centralize o QR code abaixo para conectar a “<xliff:g id="SSID">%1$s</xliff:g>”"</string>
-    <string name="wifi_dpp_scan_qr_code_join_unknown_network" msgid="3180020429793614145">"Para acessar a rede Wi-Fi, leia o QR code"</string>
+    <string name="wifi_dpp_scan_qr_code_join_unknown_network" msgid="3180020429793614145">"Para acessar a rede Wi-Fi, aponte a câmera para o QR code"</string>
     <string name="wifi_dpp_share_wifi" msgid="2431744447544057866">"Compartilhar Wi‑Fi"</string>
     <string name="wifi_dpp_scan_qr_code_with_another_device" msgid="6967364080214325016">"Faça a leitura deste QR code com outro dispositivo para entrar na rede “<xliff:g id="SSID">%1$s</xliff:g>”"</string>
     <string name="wifi_dpp_scan_open_network_qr_code_with_another_device" msgid="5398619697898444311">"Faça a leitura deste QR code para conectar-se a “<xliff:g id="SSID">%1$s</xliff:g>”"</string>
@@ -5258,7 +5258,7 @@
     <string name="audio_sharing_call_audio_title" msgid="7978867452289583929">"Áudio de chamadas"</string>
     <string name="audio_sharing_call_audio_description" msgid="6573621048260616924">"Reproduzir apenas no <xliff:g id="DEVICE_NAME">%1$s</xliff:g>"</string>
     <string name="audio_sharing_test_sound_title" msgid="6438868185641027763">"Reproduzir um teste de som"</string>
-    <string name="audio_sharing_test_sound_description" msgid="4072462502371937399">"Todas as pessoas próximas podem ouvir"</string>
+    <string name="audio_sharing_test_sound_description" msgid="4072462502371937399">"Todas as pessoas conectadas devem ouvir"</string>
     <string name="audio_sharing_stream_settings_title" msgid="1374391898689242036">"Configurações do stream de áudio"</string>
     <string name="audio_sharing_stream_name_title" msgid="8156859441897180940">"Nome"</string>
     <string name="audio_sharing_stream_password_title" msgid="7026649168165764602">"Senha"</string>
@@ -5334,13 +5334,13 @@
     <string name="audio_streams_qr_code_page_password" msgid="7268475614131297060">"Senha: <xliff:g id="PASSWORD">%1$s</xliff:g>"</string>
     <string name="audio_streams_qr_code_page_description" msgid="1317961663706630428">"Para ouvir o <xliff:g id="STREAM_NAME">%1$s</xliff:g>, outras pessoas podem conectar fones de ouvido compatíveis ao dispositivo Android delas. Elas podem ler este QR code."</string>
     <string name="audio_streams_main_page_title" msgid="1838380471076527639">"Encontrar um stream de áudio"</string>
-    <string name="audio_streams_main_page_subtitle" msgid="3251995732921981539">"Ouvir um dispositivo que esteja compartilhando áudio ou uma transmissão Auracast próxima"</string>
+    <string name="audio_streams_main_page_subtitle" msgid="3251995732921981539">"Ouça um dispositivo que esteja compartilhando áudio ou uma transmissão Auracast próxima"</string>
     <string name="audio_streams_main_page_device_title" msgid="2635744035523908253">"Seu dispositivo de áudio"</string>
     <string name="audio_streams_main_page_no_device_summary" msgid="2936000845397406389">"Conectar fones de ouvido compatíveis"</string>
     <string name="audio_streams_main_page_scan_section_title" msgid="2778235929304061163">"Streams de áudio próximos"</string>
     <string name="audio_streams_main_page_scan_qr_code_title" msgid="8337270277392468895">"Fazer a leitura do QR code"</string>
     <string name="audio_streams_main_page_scan_qr_code_summary" msgid="1991792283368249499">"Comece a ouvir lendo o QR code de um stream"</string>
     <string name="audio_streams_main_page_password_dialog_join_button" msgid="2967747276379153408">"Ouvir o stream"</string>
-    <string name="audio_streams_main_page_qr_code_scanner_summary" msgid="5312980105735143360">"Ler o QR code de um stream de áudio para ouvir com <xliff:g id="DEVICE_NAME">%1$s</xliff:g>"</string>
+    <string name="audio_streams_main_page_qr_code_scanner_summary" msgid="5312980105735143360">"Use o QR code de um stream de áudio para ouvir com <xliff:g id="DEVICE_NAME">%1$s</xliff:g>"</string>
     <string name="audio_streams_main_page_password_dialog_cannot_edit" msgid="9020898619297520153">"Não é possível editar a senha enquanto compartilha. Para mudar a senha, primeiro desligue o compartilhamento de áudio."</string>
 </resources>
