--- a/res/values-sv/strings.xml
+++ b/res/values-sv/strings.xml
@@ -3785,12 +3785,12 @@
     <string name="zen_mode_people_none" msgid="4613147461974255046">"Ingen får avbryta"</string>
     <string name="zen_mode_people_some" msgid="9101872681298810281">"Vissa får avbryta"</string>
     <string name="zen_mode_people_all" msgid="311036110283015205">"Alla får avbryta"</string>
-    <string name="zen_mode_repeat_callers" msgid="2270356100287792138">"Återuppringning"</string>
+    <string name="zen_mode_repeat_callers" msgid="2270356100287792138">"Personer som ringer upprepat"</string>
     <string name="zen_mode_repeat_callers_title" msgid="8016699240338264781">"Tillåt upprepade samtal"</string>
     <string name="zen_mode_all_callers" msgid="8104755389401941875">"vem som helst"</string>
     <string name="zen_mode_contacts_callers" msgid="5429267704011896833">"kontakter"</string>
     <string name="zen_mode_starred_callers" msgid="1002370699564211178">"stjärnmärkta kontakter"</string>
-    <string name="zen_mode_repeat_callers_list" msgid="181819778783743847">"när någon ringer flera gånger"</string>
+    <string name="zen_mode_repeat_callers_list" msgid="181819778783743847">"personer som ringer upprepat"</string>
     <!-- no translation found for zen_mode_calls_summary_one (1928015516061784276) -->
     <skip />
     <string name="zen_mode_calls_summary_two" msgid="6351563496898410742">"<xliff:g id="CALLER_TYPE_0">%1$s</xliff:g> och <xliff:g id="CALLER_TYPE_1">%2$s</xliff:g>"</string>
@@ -5280,7 +5280,7 @@
     <string name="audio_sharing_share_with_more_dialog_title" msgid="2840069088858232267">"Dela ljud med en annan enhet"</string>
     <string name="audio_sharing_share_with_button_label" msgid="4146194430380237357">"Dela med <xliff:g id="DEVICE_NAME">%1$s</xliff:g>"</string>
     <string name="audio_sharing_close_button_label" msgid="2666534149100498574">"Stäng"</string>
-    <string name="audio_sharing_dialog_connect_device_content" msgid="2873230647152283734">"Anslut ännu ett par kompatibla hörlurar, eller dela streamens namn och lösenord med den andra personen"</string>
+    <string name="audio_sharing_dialog_connect_device_content" msgid="2873230647152283734">"Anslut ett till par kompatibla hörlurar, eller dela streamens namn och lösenord med den andra personen"</string>
     <string name="audio_sharing_dialog_pair_device_content" msgid="3136997898244863470">"Parkoppla ännu ett par kompatibla hörlurar, eller dela ljudstreamens QR-kod med den andra personen"</string>
     <string name="audio_sharing_sharing_label" msgid="1038021053061111508">"Delar ljud"</string>
     <string name="audio_sharing_pair_button_label" msgid="7987236990273083588">"Parkoppla en ny enhet"</string>
@@ -5291,7 +5291,7 @@
     <string name="audio_sharing_settings_button_label" msgid="8574808650318270491">"Inställningar"</string>
     <string name="audio_sharing_disconnect_dialog_title" msgid="2192751727237748602">"Välj en enhet att koppla ifrån"</string>
     <string name="audio_sharing_dialog_disconnect_content" msgid="3840488888970653308">"Endast två enheter kan dela ljud samtidigt"</string>
-    <string name="audio_sharing_disconnect_device_button_label" msgid="4272897217708930576">"Koppla från <xliff:g id="DEVICE_NAME">%1$s</xliff:g>"</string>
+    <string name="audio_sharing_disconnect_device_button_label" msgid="4272897217708930576">"Koppla ifrån <xliff:g id="DEVICE_NAME">%1$s</xliff:g>"</string>
     <string name="audio_sharing_stop_dialog_title" msgid="4872853738164232075">"Vill du ansluta <xliff:g id="DEVICE_NAME">%1$s</xliff:g>?"</string>
     <string name="audio_sharing_stop_dialog_content" msgid="6371546856710692910">"Du slutar dela ljud med <xliff:g id="DEVICE_NAME">%1$s</xliff:g>"</string>
     <string name="audio_sharing_stop_dialog_with_two_content" msgid="2119020725467967219">"Du slutar dela ljud med <xliff:g id="DEVICE_NAME1">%1$s</xliff:g> och <xliff:g id="DEVICE_NAME2">%2$s</xliff:g>"</string>
