--- a/res/values-sw/strings.xml
+++ b/res/values-sw/strings.xml
@@ -474,9 +474,9 @@
     <string name="security_settings_fingerprint_enroll_dialog_delete" msgid="6027141901007342389">"Futa"</string>
     <string name="security_settings_fingerprint_enroll_start_title" msgid="7391368057800077604">"Gusa kitambua alama ya kidole"</string>
     <string name="security_settings_fingerprint_enroll_start_message" msgid="5010227772754175346">"Weka kidole chako juu ya kitambua alama kisha ukiinue baada ya kuhisi mtetemo"</string>
-    <string name="security_settings_udfps_enroll_start_message" msgid="5032954588171487566">"Usiinue kidole chako kwenye kitambuzi hadi utakapohisi mtetemo"</string>
+    <string name="security_settings_udfps_enroll_start_message" msgid="5032954588171487566">"Usiondoe kidole chako kwenye kitambuzi hadi utakapohisi mtetemo"</string>
     <string name="security_settings_sfps_enroll_start_message" msgid="9054672627477685212">"Bila kubonyeza kitufe, endelea kuweka alama ya kidole chako kwenye kitambuzi hadi utakapohisi mtetemo.\n\nSogeza kidole chako kiasi kila wakati. Hatua hii inasaidia kunasa asilimia kubwa ya alama ya kidole chako."</string>
-    <string name="security_settings_fingerprint_enroll_udfps_title" msgid="6665610134560896895">"Gusa na ushikilie kitambua alama ya kidole"</string>
+    <string name="security_settings_fingerprint_enroll_udfps_title" msgid="6665610134560896895">"Gusa na ushikilie kitambuzi cha alama ya kidole"</string>
     <string name="security_settings_fingerprint_enroll_repeat_title" msgid="9172202128243545021">"Inua, kisha uguse tena"</string>
     <string name="security_settings_udfps_enroll_title_one_more_time" msgid="424937043843482410">"Gusa mara nyingine"</string>
     <string name="security_settings_udfps_enroll_repeat_title_touch_icon" msgid="4096344864386190335">"Fuata aikoni ya alama ya kidole"</string>
@@ -494,7 +494,7 @@
     <string name="security_settings_sfps_enroll_progress_a11y_message" msgid="6450772721691523736">"Inaandikisha asilimia <xliff:g id="PERCENTAGE">%d</xliff:g> ya alama ya kidole"</string>
     <string name="security_settings_sfps_animation_a11y_label" msgid="8808819903730940446">"Imeandikishwa kwa asilimia <xliff:g id="PERCENTAGE">%d</xliff:g>"</string>
     <string name="security_settings_udfps_enroll_progress_a11y_message" msgid="6183535114682369699">"Imeandikisha asilimia <xliff:g id="PERCENTAGE">%d</xliff:g> ya alama ya kidole"</string>
-    <string name="security_settings_fingerprint_enroll_finish_title" msgid="3606325177406951457">"Alama ya kidole imeongezwa"</string>
+    <string name="security_settings_fingerprint_enroll_finish_title" msgid="3606325177406951457">"Alama ya kidole imewekwa"</string>
     <string name="security_settings_require_screen_on_to_auth_title" msgid="1641621458536715518">"Gusa ili ufungue wakati wowote"</string>
     <string name="security_settings_require_screen_on_to_auth_description" msgid="4158414711168345398">"Gusa kitambuzi ili ufungue, hata wakati skrini imezimwa. Hatua hii inaongeza uwezekano wa kufungua bila kukusudia."</string>
     <string name="security_settings_require_screen_on_to_auth_keywords" msgid="5557869560397089603">"Skrini, Fungua"</string>
@@ -3142,7 +3142,7 @@
     <string name="network_dashboard_summary_mobile" msgid="7750924671970583670">"Data ya simu, Wi‑Fi, mtandaopepe"</string>
     <string name="network_dashboard_summary_no_mobile" msgid="4022575916334910790">"Wi-Fi, mtandao pepe"</string>
     <string name="connected_devices_dashboard_title" msgid="19868275519754895">"Vifaa vilivyounganishwa"</string>
-    <string name="connected_devices_dashboard_default_summary" msgid="7211769956193710397">"Bluetooth, kuoanisha"</string>
+    <string name="connected_devices_dashboard_default_summary" msgid="7211769956193710397">"Bluetooth, kuunganisha"</string>
     <string name="connected_devices_dashboard_summary" msgid="6927727617078296491">"Bluetooth, hali ya kuendesha gari, NFC"</string>
     <string name="connected_devices_dashboard_no_nfc_summary" msgid="8424794257586524040">"Bluetooth, hali ya kuendesha gari"</string>
     <string name="connected_devices_dashboard_no_driving_mode_summary" msgid="7155882619333726331">"Bluetooth, NFC"</string>
@@ -5250,8 +5250,8 @@
     <string name="sim_category_converted_sim" msgid="8575548015816988908">"Imegeuzwa kuwa eSIM. Ondoa na utupe."</string>
     <string name="sync_across_devices_title" msgid="3447757705383089345">"Sawazisha kwenye vifaa vyote"</string>
     <string name="device_diagnostics_title" msgid="2914523189695727897">"Uchunguzi wa kifaa"</string>
-    <string name="audio_sharing_title" msgid="4144157137502923821">"Kushiriki faili ya sauti"</string>
-    <string name="audio_sharing_switch_title" msgid="7052827328670825701">"Shiriki faili ya sauti"</string>
+    <string name="audio_sharing_title" msgid="4144157137502923821">"Kusikiliza sauti pamoja na wengine"</string>
+    <string name="audio_sharing_switch_title" msgid="7052827328670825701">"Sikiliza sauti pamoja na wengine"</string>
     <string name="calls_and_alarms_device_title" msgid="6993559028175454198">"Simu na kengele"</string>
     <string name="audio_sharing_description" msgid="1660255584523640628">"Waruhusu watu wasikilize maudhui yako pamoja nawe. Wasikilizaji wanahitaji vipokea sauti vyao binafsi vya kichwani vinavyotumia LE Audio."</string>
     <string name="audio_sharing_device_group_title" msgid="3019780581643956943">"Vifaa vya kuhifadhia data vinavyotumika"</string>
@@ -5333,12 +5333,12 @@
     <string name="audio_streams_qr_code_page_title" msgid="9169570362469544641">"Msimbo wa QR wa mtiririko wa maudhui ya sauti"</string>
     <string name="audio_streams_qr_code_page_password" msgid="7268475614131297060">"Nenosiri: <xliff:g id="PASSWORD">%1$s</xliff:g>"</string>
     <string name="audio_streams_qr_code_page_description" msgid="1317961663706630428">"Ili kusikiliza <xliff:g id="STREAM_NAME">%1$s</xliff:g>, watu wengine wanaweza kuunganisha vipokea sauti vya kichwani vinavyoona, kwenye vifaa vyao vya Android. Wanaweza kuchanganua msimbo huu wa QR."</string>
-    <string name="audio_streams_main_page_title" msgid="1838380471076527639">"Kupata mtiririko wa maudhui ya sauti"</string>
+    <string name="audio_streams_main_page_title" msgid="1838380471076527639">"Tafuta mtiririko wa sauti"</string>
     <string name="audio_streams_main_page_subtitle" msgid="3251995732921981539">"Sikiliza kifaa kinachotoa sauti ya kusikilizwa pamoja au arifa ya Auracast iliyo karibu nawe"</string>
     <string name="audio_streams_main_page_device_title" msgid="2635744035523908253">"Kifaa chako cha sauti"</string>
     <string name="audio_streams_main_page_no_device_summary" msgid="2936000845397406389">"Unganisha vipokea sauti vya kichwani vinavyooana"</string>
     <string name="audio_streams_main_page_scan_section_title" msgid="2778235929304061163">"Mitiririko ya maudhui ya sauti iliyo karibu nawe"</string>
-    <string name="audio_streams_main_page_scan_qr_code_title" msgid="8337270277392468895">"Changanua msimbo wa QR"</string>
+    <string name="audio_streams_main_page_scan_qr_code_title" msgid="8337270277392468895">"Changanua QR"</string>
     <string name="audio_streams_main_page_scan_qr_code_summary" msgid="1991792283368249499">"Anza kusikiliza kwa kuchanganua msimbo wa QR wa mtiririko"</string>
     <string name="audio_streams_main_page_password_dialog_join_button" msgid="2967747276379153408">"Sikiliza mtiririko"</string>
     <string name="audio_streams_main_page_qr_code_scanner_summary" msgid="5312980105735143360">"Changanua msimbo wa QR wa mtiririko wa maudhui ya sauti ili usikilize kupitia <xliff:g id="DEVICE_NAME">%1$s</xliff:g>"</string>
