--- a/res/values-tl/strings.xml
+++ b/res/values-tl/strings.xml
@@ -5278,7 +5278,7 @@
     <string name="audio_sharing_no_thanks_button_label" msgid="5822491984114744357">"Huwag na lang"</string>
     <string name="audio_sharing_share_with_dialog_title" msgid="3934377530640830364">"Ibahagi ang audio sa <xliff:g id="DEVICE_NAME">%1$s</xliff:g>?"</string>
     <string name="audio_sharing_share_with_more_dialog_title" msgid="2840069088858232267">"Ibahagi ang audio sa isa pang device"</string>
-    <string name="audio_sharing_share_with_button_label" msgid="4146194430380237357">"Ibahagi gamit ang <xliff:g id="DEVICE_NAME">%1$s</xliff:g>"</string>
+    <string name="audio_sharing_share_with_button_label" msgid="4146194430380237357">"Ibahagi sa <xliff:g id="DEVICE_NAME">%1$s</xliff:g>"</string>
     <string name="audio_sharing_close_button_label" msgid="2666534149100498574">"Isara"</string>
     <string name="audio_sharing_dialog_connect_device_content" msgid="2873230647152283734">"Magkonekta ng isa pang pares ng compatible na headphones, o ibahagi ang pangalan at password ng iyong stream sa ibang tao"</string>
     <string name="audio_sharing_dialog_pair_device_content" msgid="3136997898244863470">"Magpares ng isa pang hanay ng compatible na headphones, o ibahagi ang QR code ng iyong audio stream sa ibang tao"</string>
@@ -5313,7 +5313,7 @@
     <string name="audio_streams_add_source_failed_state_summary" msgid="3937546443978562322">"Hindi makakonekta. Subukan ulit."</string>
     <string name="audio_streams_connecting_summary" msgid="7237827765572331702">"Kumokonekta…"</string>
     <string name="audio_streams_dialog_stream_is_not_available" msgid="4032878851270690546">"Hindi available ang audio stream"</string>
-    <string name="audio_streams_is_not_playing" msgid="8480293894696007941">"Hindi nagpe-play ang audio stream na ito sa ngayon"</string>
+    <string name="audio_streams_is_not_playing" msgid="8480293894696007941">"Walang pine-play ang audio stream na ito sa ngayon"</string>
     <string name="audio_streams_dialog_close" msgid="8177201719298408431">"Isara"</string>
     <string name="audio_streams_dialog_listen" msgid="7290340191504987685">"Makinig"</string>
     <string name="audio_streams_dialog_retry" msgid="4456843891970998556">"Subukan ulit"</string>
