--- a/res/values-uk/strings.xml
+++ b/res/values-uk/strings.xml
@@ -244,7 +244,7 @@
     <string name="roaming_enable" msgid="7845716016861535340">"Підключатися до служб передавання даних у роумінгу"</string>
     <string name="roaming_disable" msgid="729512894708689604">"Підключатися до служб передавання даних у роумінгу"</string>
     <string name="roaming_warning" msgid="7703647889040229013">"Може стягуватися плата за роумінг."</string>
-    <string name="date_time_auto" msgid="4239202185055225869">"Установити час автоматично"</string>
+    <string name="date_time_auto" msgid="4239202185055225869">"Налаштовувати час автоматично"</string>
     <string name="zone_auto_title" msgid="5141692422373097957">"Налаштовувати автоматично"</string>
     <string name="auto_zone_requires_location_summary" msgid="4831038184260596735">"Коли цей перемикач увімкнено, для встановлення часового поясу використовуватимуться геодані"</string>
     <string name="date_time_24hour_auto" msgid="6583078135067804252">"Використовувати місцеві налаштування за умовчанням"</string>
@@ -1334,7 +1334,7 @@
     <string name="module_version" msgid="1787518340082046658">"Оновлення системи Google Play"</string>
     <string name="battery_info" msgid="7873528123969546728">"Інформація про акумулятор"</string>
     <string name="device_info_not_available" msgid="4804474466616712326">"Невідомо"</string>
-    <string name="storage_settings" msgid="7472188817781592677">"Пам\'ять"</string>
+    <string name="storage_settings" msgid="7472188817781592677">"Сховище"</string>
     <string name="storage_settings_for_app" msgid="229425418984637483">"Пам’ять і кеш"</string>
     <string name="storage_settings_title" msgid="486118156723194815">"Налаштування пам’яті"</string>
     <string name="status_eid" msgid="3588471107671992684">"E​ID"</string>
@@ -1731,7 +1731,7 @@
     <string name="advanced_settings" msgid="2368905204839169094">"Розширені налаштування"</string>
     <string name="advanced_settings_summary" msgid="1823765348195530035">"Увімкнути додаткові варіанти налаштувань"</string>
     <string name="application_info_label" msgid="1015706497694165866">"Про додаток"</string>
-    <string name="storage_label" msgid="2522307545547515733">"Пам\'ять"</string>
+    <string name="storage_label" msgid="2522307545547515733">"Сховище"</string>
     <string name="auto_launch_label" msgid="4069860409309364872">"Відкривати за умовчанням"</string>
     <string name="auto_launch_label_generic" msgid="5033137408273064599">"За умовчанням"</string>
     <string name="screen_compatibility_label" msgid="7549658546078613431">"Сумісність екрана"</string>
@@ -5139,7 +5139,7 @@
     <string name="disable_phantom_process_monitor_title" msgid="8348108346706188771">"Вимкнути обмеження для дочірніх процесів"</string>
     <string name="disable_phantom_process_monitor_summary" msgid="3044464635550256985">"Вимкнути обмеження на використання системних ресурсів дочірніми процесами додатка"</string>
     <string name="enable_notes_role_title" msgid="7662702013496114763">"Примусово ввімкнути набір функцій \"Нотатки\""</string>
-    <string name="enable_notes_role_summary" msgid="5495721409392395089">"Увімкніть системні інтеграції для створення нотаток за допомогою набору функцій \"Нотатки\". Якщо набір функцій \"Нотатки\" вже ввімкнено, нічого не відбудеться. Потрібен перезапуск."</string>
+    <string name="enable_notes_role_summary" msgid="5495721409392395089">"Увімкнути системні інтеграції для створення нотаток за допомогою набору функцій \"Нотатки\". Якщо набір функцій \"Нотатки\" вже ввімкнено, нічого не відбудеться. Потрібен перезапуск."</string>
     <string name="bluetooth_broadcast_dialog_title" msgid="9172775308463135884">"Трансляція"</string>
     <string name="bluetooth_broadcast_dialog_broadcast_app" msgid="1016617579194329005">"Змінити додаток для трансляції на <xliff:g id="CURRENTAPP">%1$s</xliff:g>"</string>
     <string name="bluetooth_broadcast_dialog_find_message" msgid="6621660851669953883">"Слухайте трансляції з пристроїв поблизу"</string>
@@ -5252,14 +5252,14 @@
     <string name="sim_category_converted_sim" msgid="8575548015816988908">"Конвертовано в eSIM-карту. Вийміть і утилізуйте."</string>
     <string name="sync_across_devices_title" msgid="3447757705383089345">"Синхронізація між пристроями"</string>
     <string name="device_diagnostics_title" msgid="2914523189695727897">"Діагностика пристрою"</string>
-    <string name="audio_sharing_title" msgid="4144157137502923821">"Надання доступу до аудіо"</string>
-    <string name="audio_sharing_switch_title" msgid="7052827328670825701">"Поділитись аудіо"</string>
+    <string name="audio_sharing_title" msgid="4144157137502923821">"Надсилання аудіо"</string>
+    <string name="audio_sharing_switch_title" msgid="7052827328670825701">"Дозволити надсилання аудіо"</string>
     <string name="calls_and_alarms_device_title" msgid="6993559028175454198">"Дзвінки й будильники"</string>
     <string name="audio_sharing_description" msgid="1660255584523640628">"Слухайте медіафайли разом з іншими людьми. Для цього їм потрібно мати власні навушники LE Audio."</string>
     <string name="audio_sharing_device_group_title" msgid="3019780581643956943">"Активні носії"</string>
     <string name="audio_sharing_call_audio_title" msgid="7978867452289583929">"Аудіопристрої для дзвінків"</string>
     <string name="audio_sharing_call_audio_description" msgid="6573621048260616924">"Відтворювати лише на пристрої \"<xliff:g id="DEVICE_NAME">%1$s</xliff:g>\""</string>
-    <string name="audio_sharing_test_sound_title" msgid="6438868185641027763">"Перевірте звук"</string>
+    <string name="audio_sharing_test_sound_title" msgid="6438868185641027763">"Перевірити звук"</string>
     <string name="audio_sharing_test_sound_description" msgid="4072462502371937399">"Усі, хто слухає, зможуть чути його"</string>
     <string name="audio_sharing_stream_settings_title" msgid="1374391898689242036">"Налаштування потокового аудіо"</string>
     <string name="audio_sharing_stream_name_title" msgid="8156859441897180940">"Назва"</string>
@@ -5288,7 +5288,7 @@
     <string name="audio_sharing_pair_button_label" msgid="7987236990273083588">"Підключити новий пристрій"</string>
     <string name="audio_sharing_qrcode_button_label" msgid="3207039106555097659">"Показати QR-код"</string>
     <string name="audio_sharing_notification_title" msgid="1204798942946033005">"Ви надсилаєте аудіо"</string>
-    <string name="audio_sharing_notification_content" msgid="1577180829878785642">"Люди, які слухають, чутимуть ваш медіаконтент. Але не чутимуть виклики."</string>
+    <string name="audio_sharing_notification_content" msgid="1577180829878785642">"Інші користувачі зможуть чути ваші медіафайли, але не дзвінки."</string>
     <string name="audio_sharing_stop_button_label" msgid="8770519671470608849">"Припинити надсилання"</string>
     <string name="audio_sharing_settings_button_label" msgid="8574808650318270491">"Налаштування"</string>
     <string name="audio_sharing_disconnect_dialog_title" msgid="2192751727237748602">"Виберіть пристрій, який потрібно від’єднати"</string>
@@ -5320,14 +5320,14 @@
     <string name="audio_streams_dialog_listen" msgid="7290340191504987685">"Прослухати"</string>
     <string name="audio_streams_dialog_retry" msgid="4456843891970998556">"Повторити спробу"</string>
     <string name="audio_streams_dialog_listen_to_audio_stream" msgid="8585253007762261528">"Слухайте потокове аудіо"</string>
-    <string name="audio_streams_dialog_control_volume" msgid="7615062686016713544">"Потокове аудіо відтворюватиметься на пристрої \"<xliff:g id="DEVICE_NAME">%1$s</xliff:g>\". Керуйте гучністю за допомогою цього пристрою."</string>
+    <string name="audio_streams_dialog_control_volume" msgid="7615062686016713544">"Потокове аудіо відтворюватиметься на пристрої <xliff:g id="DEVICE_NAME">%1$s</xliff:g>. Керуйте гучністю за допомогою цього пристрою."</string>
     <string name="audio_streams_dialog_cannot_listen" msgid="4432257183698209966">"Не чути потокове аудіо"</string>
     <string name="audio_streams_dialog_default_device" msgid="6159800303379303266">"підключені сумісні навушники"</string>
     <string name="audio_streams_activity_title" msgid="6766869545769831935">"Аудіопотоки"</string>
     <string name="audio_streams_no_password_summary" msgid="8976357323034830144">"Без пароля"</string>
     <string name="audio_streams_dialog_learn_more" msgid="6711241053442211345">"Докладніше"</string>
     <string name="audio_streams_dialog_cannot_play" msgid="1358828316927479091">"Не вдається відтворити це потокове аудіо на пристрої \"<xliff:g id="DEVICE_NAME">%1$s</xliff:g>\"."</string>
-    <string name="audio_streams_listening_now" msgid="4205614429222949176">"Триває прослуховування"</string>
+    <string name="audio_streams_listening_now" msgid="4205614429222949176">"Відтворюється"</string>
     <string name="audio_streams_media_service_notification_leave_broadcast_text" msgid="4938656134300913647">"Припинити прослуховування"</string>
     <string name="audio_streams_dialog_no_le_device_title" msgid="3931163990976742282">"Під’єднайте сумісні навушники"</string>
     <string name="audio_streams_dialog_no_le_device_button" msgid="4484355549428642588">"Під’єднати пристрій"</string>
@@ -5343,6 +5343,6 @@
     <string name="audio_streams_main_page_scan_qr_code_title" msgid="8337270277392468895">"Відскануйте QR-код"</string>
     <string name="audio_streams_main_page_scan_qr_code_summary" msgid="1991792283368249499">"Почніть слухати, відсканувавши QR-код потокового аудіо"</string>
     <string name="audio_streams_main_page_password_dialog_join_button" msgid="2967747276379153408">"Слухати потокове аудіо"</string>
-    <string name="audio_streams_main_page_qr_code_scanner_summary" msgid="5312980105735143360">"Відскануйте QR-код потокового аудіо, щоб слухати на пристрої \"<xliff:g id="DEVICE_NAME">%1$s</xliff:g>\""</string>
+    <string name="audio_streams_main_page_qr_code_scanner_summary" msgid="5312980105735143360">"Відскануйте QR-код потокового аудіо, щоб слухати на пристрої <xliff:g id="DEVICE_NAME">%1$s</xliff:g>"</string>
     <string name="audio_streams_main_page_password_dialog_cannot_edit" msgid="9020898619297520153">"Неможливо змінити пароль під час надсилання. Щоб змінити пароль, спершу вимкніть надсилання аудіо."</string>
 </resources>
